@@ -22,10 +22,16 @@
  */
 package com.oracle.truffle.espresso.launcher;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.PrintStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -40,6 +46,12 @@ import org.graalvm.polyglot.Context.Builder;
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.Value;
 
+/**
+ * A simple emulation of the {@code java} launcher that parses the command line flags and builds and
+ * Espresso context based on them. This code isn't used by anyone except Espresso developers,
+ * because in a shipped Espresso the VM is started via {@code mokapot} instead (see
+ * {@code hacking.md} for details).
+ */
 public final class EspressoLauncher extends AbstractLanguageLauncher {
     private static final String AGENT_LIB = "java.AgentLib.";
     private static final String AGENT_PATH = "java.AgentPath.";
@@ -49,11 +61,13 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         new EspressoLauncher().launch(args);
     }
 
+    private final boolean launcherDebug = System.getenv("_JAVA_LAUNCHER_DEBUG") != null;
     private final ArrayList<String> mainClassArgs = new ArrayList<>();
     private String mainClassName = null;
     private LaunchMode launchMode = LaunchMode.LM_CLASS;
     private boolean pauseOnExit = false;
     private VersionAction versionAction = VersionAction.None;
+    private boolean versionToErr = true;
     private final Map<String, String> espressoOptions = new HashMap<>();
 
     private final class Arguments {
@@ -132,7 +146,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
 
         /**
          * Advances the position, skipping over the value associated with an option if needed.
-         * 
+         *
          * @return true if there are still arguments to process, false otherwise.
          */
         boolean next() {
@@ -169,8 +183,22 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         String jarFileName = null;
         ArrayList<String> unrecognized = new ArrayList<>();
         boolean isRelaxStaticObjectSafetyChecksSet = false;
+        int javaAgentIndex = 0;
+        boolean heapDumpOnOutOfMemoryError = false;
+        String heapDumpPath = null;
+        boolean ignoreUnrecognized = false;
 
-        Arguments args = new Arguments(arguments);
+        List<String> expandedArguments = expandAtFiles(arguments);
+
+        if (launcherDebug) {
+            println("Command line args:");
+            println("argv[0] = " + getProgramName());
+            for (int i = 0; i < expandedArguments.size(); i++) {
+                println(String.format("argv[%d] = %s", i + 1, expandedArguments.get(i)));
+            }
+        }
+
+        Arguments args = new Arguments(expandedArguments);
         while (args.next()) {
             String arg = args.getKey();
             switch (arg) {
@@ -194,6 +222,12 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "--add-reads":
                     parseNumberedOption(args, "java.AddReads", "module");
                     break;
+                case "--enable-native-access":
+                    parseNumberedOption(args, "java.EnableNativeAccess", "module");
+                    break;
+                case "--illegal-native-access":
+                    espressoOptions.put("java.IllegalNativeAccess", args.getValue(arg, "illegal native access"));
+                    break;
                 case "-m":
                 case "--module":
                     /* This arguments specifies in which module we find the main class. */
@@ -201,14 +235,24 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                     espressoOptions.put("java.Module", mainClassName);
                     launchMode = LaunchMode.LM_MODULE;
                     break;
+                case "--limit-modules":
+                    espressoOptions.put("java.Properties.jdk.module.limitmods", args.getValue(arg, "limit-modules"));
+                    break;
                 case "-jar":
                     jarFileName = args.getValue(arg, "jar file");
+                    break;
+                case "--version":
+                    versionToErr = false;
+                    versionAction = VersionAction.PrintAndExit;
                     break;
                 case "-version":
                     versionAction = VersionAction.PrintAndExit;
                     break;
-                case "-showversion":
                 case "--show-version":
+                    versionToErr = false;
+                    versionAction = VersionAction.PrintAndContinue;
+                    break;
+                case "-showversion":
                     versionAction = VersionAction.PrintAndContinue;
                     break;
 
@@ -234,14 +278,40 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "-Xdebug": // only for backward compatibility
                     // ignore
                     break;
+                case "-Xcomp":
+                    espressoOptions.put("engine.CompileImmediately", "true");
+                    break;
+                case "-Xbatch":
+                    espressoOptions.put("engine.BackgroundCompilation", "false");
+                    espressoOptions.put("engine.CompileImmediately", "true");
+                    break;
+                case "-Xint":
+                    espressoOptions.put("engine.Compilation", "false");
+                    break;
 
                 case "-XX:+PauseOnExit":
                     pauseOnExit = true;
+                    break;
+                case "-XX:+HeapDumpOnOutOfMemoryError":
+                    heapDumpOnOutOfMemoryError = true;
+                    break;
+                case "-XX:-HeapDumpOnOutOfMemoryError":
+                    heapDumpOnOutOfMemoryError = false;
+                    break;
+                case "-XX:+IgnoreUnrecognizedVMOptions":
+                    ignoreUnrecognized = true;
+                    break;
+                case "-XX:-IgnoreUnrecognizedVMOptions":
+                    ignoreUnrecognized = false;
                     break;
 
                 case "--engine.RelaxStaticObjectSafetyChecks":
                     isRelaxStaticObjectSafetyChecksSet = true;
                     unrecognized.add(args.getArg());
+                    break;
+
+                case "--enable-preview":
+                    espressoOptions.put("java.EnablePreview", "true");
                     break;
 
                 default:
@@ -264,7 +334,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                         espressoOptions.put("java.JDWPOptions", value);
                     } else if (arg.startsWith("-javaagent:")) {
                         String value = arg.substring("-javaagent:".length());
-                        espressoOptions.put(JAVA_AGENT, value);
+                        espressoOptions.put(JAVA_AGENT + "." + javaAgentIndex++, value);
                         mergeOption("java.AddModules", "java.instrument");
                     } else if (arg.startsWith("-agentlib:")) {
                         String[] split = splitEquals(arg.substring("-agentlib:".length()));
@@ -272,11 +342,20 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                     } else if (arg.startsWith("-agentpath:")) {
                         String[] split = splitEquals(arg.substring("-agentpath:".length()));
                         espressoOptions.put(AGENT_PATH + split[0], split[1]);
-                    } else if (arg.startsWith("-Xmn") || arg.startsWith("-Xms") || arg.startsWith("-Xmx") || arg.startsWith("-Xss")) {
+                    } else if (arg.startsWith("-Xmn") || arg.startsWith("-Xms") || arg.startsWith("-Xmx") || arg.startsWith("-Xss") || arg.startsWith("-XX:MaxHeapSize=")) {
                         unrecognized.add("--vm." + arg.substring(1));
-                    } else
-                    // -Dsystem.property=value
-                    if (arg.startsWith("-D")) {
+                    } else if (arg.startsWith("-Xshare:")) {
+                        String value = arg.substring("-Xshare:".length());
+                        espressoOptions.put("java.CDS", value);
+                    } else if (arg.startsWith("--sun-misc-unsafe-memory-access")) {
+                        String value = args.getValue(arg, "sun.misc.Unsafe memory access");
+                        espressoOptions.put("java.SunMiscUnsafeMemoryAccess", value);
+                    } else if (arg.startsWith("-XX:HeapDumpPath=")) {
+                        heapDumpPath = arg.substring("-XX:HeapDumpPath=".length());
+                    } else if (arg.startsWith("-XX:")) {
+                        handleXXArg(arg, unrecognized);
+                    } else if (arg.startsWith("-D")) {
+                        // -Dsystem.property=value
                         String key = arg.substring("-D".length());
                         int splitAt = key.indexOf("=");
                         String value = "";
@@ -322,7 +401,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
 
                     mainClassName = getMainClassName(jarFileName);
                 }
-                buildJvmArgs(arguments, args.getNumberOfProcessedArgs());
+                buildJvmArgs(expandedArguments, args.getNumberOfProcessedArgs());
                 args.pushLeftoversArgs();
                 break;
             }
@@ -336,14 +415,12 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
             if (classpath == null) {
                 // (3) the environment variable CLASSPATH
                 classpath = System.getenv("CLASSPATH");
-                if (classpath == null) {
-                    // (4) the current working directory only
-                    classpath = ".";
-                }
             }
         }
 
-        espressoOptions.put("java.Classpath", classpath);
+        if (classpath != null) {
+            espressoOptions.put("java.Classpath", classpath);
+        }
 
         if (!isRelaxStaticObjectSafetyChecksSet) {
             // Since Espresso has a verifier, the Static Object Model does not need to perform shape
@@ -352,7 +429,161 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
             espressoOptions.put("engine.RelaxStaticObjectSafetyChecks", "true");
         }
 
+        if (heapDumpOnOutOfMemoryError) {
+            unrecognized.add("--vm.XX:+HeapDumpOnOutOfMemoryError");
+        }
+        if (heapDumpPath != null) {
+            unrecognized.add("--vm.XX:HeapDumpPath=" + heapDumpPath);
+        }
+
+        if (ignoreUnrecognized) {
+            // We remove the unrecognized -XX options from the list to ignore them:
+            Iterator<String> unrecognizedIt = unrecognized.iterator();
+            while (unrecognizedIt.hasNext()) {
+                String option = unrecognizedIt.next();
+                if (option.startsWith("-XX")) {
+                    unrecognizedIt.remove();
+                }
+            }
+        }
         return unrecognized;
+    }
+
+    private List<String> expandAtFiles(List<String> arguments) {
+        // Expand @arg-file arguments until we reach application arguments
+        List<String> expanded = null;
+        int i = 0;
+        for (; i < arguments.size(); i++) {
+            String arg = arguments.get(i);
+            if (arg.startsWith("@") && arg.length() > 1) {
+                if (expanded == null) {
+                    expanded = new ArrayList<>(arguments.subList(0, i));
+                }
+                String argArg = arg.substring(1);
+                if (arg.charAt(1) == '@') {
+                    // escaped argument
+                    expanded.add(argArg);
+                } else {
+                    // Note, at the moment we don't detect the end of VM arguments
+                    // inside the arg file itself
+                    parseArgFile(argArg, expanded);
+                }
+            } else {
+                if (arg.startsWith("-")) {
+                    if (isWhiteSpaceOption(arg)) {
+                        // Skip the argument that follows this option
+                        if (expanded != null) {
+                            expanded.add(arg);
+                        }
+                        i++;
+                        arg = arguments.get(i);
+                    } else if ("--disable-@files".equals(arg) || arg.startsWith("--module=")) {
+                        break;
+                    }
+                } else {
+                    // We have reached the main class or the jar
+                    break;
+                }
+                if (expanded != null) {
+                    expanded.add(arg);
+                }
+            }
+        }
+        if (expanded != null && i < arguments.size()) {
+            expanded.addAll(arguments.subList(i, arguments.size()));
+        }
+        return expanded == null ? arguments : expanded;
+    }
+
+    private static boolean isWhiteSpaceOption(String arg) {
+        return switch (arg) {
+            case "--module-path",
+                            "-p",
+                            "--upgrade-module-path",
+                            "--add-modules",
+                            "--enable-native-access",
+                            "--limit-modules",
+                            "--add-exports",
+                            "--add-opens",
+                            "--add-reads",
+                            "--patch-module",
+                            "--describe-module",
+                            "-d",
+                            "--source",
+                            "--module",
+                            "-m",
+                            "-classpath",
+                            "-cp",
+                            "--class-path" ->
+                true;
+            default -> false;
+        };
+    }
+
+    private void parseArgFile(String pathArg, List<String> expanded) {
+        Path argFilePath = Paths.get(pathArg);
+        try {
+            BufferedReader reader = Files.newBufferedReader(argFilePath);
+            new ArgFileParser(reader).parse(expanded::add);
+        } catch (IOException e) {
+            throw abort(new RuntimeException("Cannot open @argfile", e), 1);
+        }
+    }
+
+    private static final Set<String> jvmPassThroughVMOptions = Set.of(
+                    "PrintFlagsFinal",
+                    "MaxRAMPercentage",
+                    "UseParallelGC",
+                    "GCTimeRatio",
+                    "ExitOnOutOfMemoryError");
+
+    private static final Set<String> ignoredXXOptions = Set.of(
+                    "UseJVMCICompiler",
+                    "UseJVMCINativeLibrary",
+                    "EnableDynamicAgentLoading");
+
+    private void handleXXArg(String fullArg, ArrayList<String> unrecognized) {
+        String arg = fullArg.substring("-XX:".length());
+        String name;
+        String value;
+        if (arg.length() >= 1 && (arg.charAt(0) == '+' || arg.charAt(0) == '-')) {
+            value = Boolean.toString(arg.charAt(0) == '+');
+            name = arg.substring(1);
+        } else {
+            int idx = arg.indexOf('=');
+            if (idx < 0) {
+                unrecognized.add(fullArg);
+                return;
+            }
+            name = arg.substring(0, idx);
+            value = arg.substring(idx + 1);
+        }
+        if (ignoredXXOptions.contains(name)) {
+            getError().println("Ignoring " + arg);
+            return;
+        }
+        String polyglotOption = "java." + name;
+        if (findOptionDescriptor("java", polyglotOption) != null) {
+            espressoOptions.put(polyglotOption, value);
+            return;
+        }
+        if (!isAOT() && jvmPassThroughVMOptions.contains(name)) {
+            unrecognized.add("--vm." + fullArg.substring(1));
+            return;
+        }
+        switch (name) {
+            case "UnlockDiagnosticVMOptions", "UnlockExperimentalVMOptions" -> unrecognized.add("--experimental-options=" + value);
+            case "TieredStopAtLevel" -> {
+                if ("0".equals(value)) {
+                    espressoOptions.put("engine.Compilation", "false");
+                } else if ("1".equals(value)) {
+                    espressoOptions.put("engine.Mode", "latency");
+                } else {
+                    unrecognized.add(fullArg);
+                }
+            }
+            default -> unrecognized.add(fullArg);
+        }
     }
 
     private void buildJvmArgs(List<String> arguments, int toBuild) {
@@ -363,7 +594,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
          * world. It is actually expected that the vm arguments list is populated with arguments
          * which have been pre-formatted by the regular Java launcher when passed to the VM, ie: the
          * arguments if the VM was created through a call to JNI_CreateJavaVM.
-         * 
+         *
          * In particular, it expects all kay-value pairs to be equals-separated and not
          * space-separated. Furthermore, it does not expect syntactic-sugared some arguments such as
          * '-m' or '--modules', that would have been replaced by the regular java launcher as
@@ -515,7 +746,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                     version = context.getBindings("java").getMember("java.lang.VersionProps");
                     if (version.hasMember("print/(Z)V")) {
                         Value printMethod = version.getMember("print/(Z)V");
-                        printMethod.execute(/* print to stderr = */false);
+                        printMethod.execute(versionToErr);
                     } else {
                         // print is probably private
                         // fallback until we have an embedded API to call private members
@@ -525,6 +756,12 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 if (versionAction == VersionAction.PrintAndExit) {
                     throw exit(0);
                 }
+            }
+
+            boolean dumpSharedSpaces = "dump".equals(espressoOptions.get("java.CDS")); // -Xshare:dump
+            if (dumpSharedSpaces) {
+                context.initialize("java");
+                exit();
             }
 
             if (mainClassName == null) {
@@ -573,7 +810,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         String javaVersion = system.invokeMember("getProperty", "java.version").asString();
         String javaVersionDate = system.invokeMember("getProperty", "java.version.date").asString();
         String debugLevel = system.invokeMember("getProperty", "jdk.debug", "release").asString();
-        String vendorVersion = system.invokeMember("getProperty", "java.vendor.version").asString();
+        String vendorVersion = system.invokeMember("getProperty", "java.vendor.version", "").asString();
         String javaRuntimeName = system.invokeMember("getProperty", "java.runtime.name").asString();
         String javaRuntimeVersion = system.invokeMember("getProperty", "java.runtime.version").asString();
         boolean isLTS = javaRuntimeVersion.contains("LTS");
@@ -582,9 +819,15 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         String javVMInfo = system.invokeMember("getProperty", "java.vm.info").asString();
         String launcherName = "espresso";
 
+        PrintStream output = versionToErr ? getError() : getOutput();
+
         /* First line: platform version. */
-        /* Use a format more in line with GNU conventions */
-        getOutput().println(launcherName + " " + javaVersion + " " + javaVersionDate + (isLTS ? " LTS" : ""));
+        if (versionToErr) {
+            output.println(launcherName + " version \"" + javaVersion + "\" " + javaVersionDate + (isLTS ? " LTS" : ""));
+        } else {
+            /* Use a format more in line with GNU conventions */
+            output.println(launcherName + " " + javaVersion + " " + javaVersionDate + (isLTS ? " LTS" : ""));
+        }
 
         /* Second line: runtime version (ie, libraries). */
         if ("release".equals(debugLevel)) {
@@ -596,10 +839,10 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
 
         vendorVersion = vendorVersion.isEmpty() ? "" : " " + vendorVersion;
 
-        getOutput().println(javaRuntimeName + vendorVersion + " (" + debugLevel + "build " + javaRuntimeVersion + ")");
+        output.println(javaRuntimeName + vendorVersion + " (" + debugLevel + "build " + javaRuntimeVersion + ")");
 
         /* Third line: JVM information. */
-        getOutput().println(javaVMName + vendorVersion + " (" + debugLevel + "build " + javaVMVersion + ", " + javVMInfo + ")");
+        output.println(javaVMName + vendorVersion + " (" + debugLevel + "build " + javaVMVersion + ", " + javVMInfo + ")");
     }
 
     private static void handleMainUncaught(Context context, PolyglotException e) {
