@@ -26,9 +26,14 @@ import static com.oracle.truffle.espresso.libjavavm.jniapi.JNIErrors.JNI_ERR;
 
 import java.io.File;
 import java.io.PrintStream;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.BitSet;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import org.graalvm.nativeimage.RuntimeOptions;
 import org.graalvm.nativeimage.c.struct.SizeOf;
@@ -44,12 +49,13 @@ import com.oracle.truffle.espresso.libjavavm.jniapi.JNIJavaVMOption;
 
 public final class Arguments {
     private static final PrintStream STDERR = System.err;
+    private static final PrintStream STDOUT = System.out;
 
     public static final String JAVA_PROPS = "java.Properties.";
 
     private static final String AGENT_LIB = "java.AgentLib.";
     private static final String AGENT_PATH = "java.AgentPath.";
-    private static final String JAVA_AGENT = "java.JavaAgent";
+    public static final String JAVA_AGENT = "java.JavaAgent";
 
     /*
      * HotSpot comment:
@@ -65,17 +71,32 @@ public final class Arguments {
     private Arguments() {
     }
 
-    public static int setupContext(Context.Builder builder, JNIJavaVMInitArgs args) {
+    private static final Set<String> IGNORED_XX_OPTIONS = Set.of(
+                    "ReservedCodeCacheSize",
+                    // `TieredStopAtLevel=0|1` is handled separately, other values are ignored
+                    "TieredStopAtLevel",
+                    "MaxMetaspaceSize",
+                    "HeapDumpOnOutOfMemoryError",
+                    "UseJVMCICompiler",
+                    "EnableDynamicAgentLoading");
+
+    private static final Map<String, String> MAPPED_XX_OPTIONS = Map.of(
+                    "TieredCompilation", "engine.MultiTier");
+
+    public static int setupContext(Context.Builder builder, JNIJavaVMInitArgs args, BitSet ignoredArgs) {
         Pointer p = (Pointer) args.getOptions();
         int count = args.getNOptions();
         String classpath = null;
         String bootClasspathPrepend = null;
         String bootClasspathAppend = null;
 
-        ArgumentsHandler handler = new ArgumentsHandler(builder, args);
+        ArgumentsHandler handler = new ArgumentsHandler(builder, IGNORED_XX_OPTIONS, MAPPED_XX_OPTIONS, args);
         List<String> jvmArgs = new ArrayList<>();
 
-        boolean ignoreUnrecognized = false;
+        boolean ignoreUnrecognized = args.getIgnoreUnrecognized();
+        boolean printFlagsFinal = false;
+        String argumentError = null;
+        List<String> xOptions = new ArrayList<>();
 
         for (int i = 0; i < count; i++) {
             JNIJavaVMOption option = (JNIJavaVMOption) p.add(i * SizeOf.get(JNIJavaVMOption.class));
@@ -84,6 +105,10 @@ public final class Arguments {
                 if (str.isNonNull()) {
                     String optionString = CTypeConversion.toJavaString(option.getOptionString());
                     buildJvmArg(jvmArgs, optionString);
+                    if (ignoredArgs.get(i)) {
+                        // this argument participates in jvmArgs but should otherwise be ignored
+                        continue;
+                    }
                     if (optionString.startsWith("-Xbootclasspath:")) {
                         bootClasspathPrepend = null;
                         bootClasspathAppend = null;
@@ -103,7 +128,7 @@ public final class Arguments {
                         builder.option("java.JDWPOptions", value);
                     } else if (optionString.startsWith("-javaagent:")) {
                         String value = optionString.substring("-javaagent:".length());
-                        builder.option(JAVA_AGENT, value);
+                        handler.addJavaAgent(value);
                         handler.addModules("java.instrument");
                     } else if (optionString.startsWith("-agentlib:")) {
                         String[] split = splitEquals(optionString.substring("-agentlib:".length()));
@@ -113,7 +138,7 @@ public final class Arguments {
                         builder.option(AGENT_PATH + split[0], split[1]);
                     } else if (optionString.startsWith("-D")) {
                         String key = optionString.substring("-D".length());
-                        int splitAt = key.indexOf("=");
+                        int splitAt = key.indexOf('=');
                         String value = "";
                         if (splitAt >= 0) {
                             value = key.substring(splitAt + 1);
@@ -144,9 +169,9 @@ public final class Arguments {
                                 break;
                         }
                         builder.option(JAVA_PROPS + key, value);
-                    } else if (optionString.equals("-ea") || optionString.equals("-enableassertions")) {
+                    } else if ("-ea".equals(optionString) || "-enableassertions".equals(optionString)) {
                         builder.option("java.EnableAssertions", "true");
-                    } else if (optionString.equals("-esa") || optionString.equals("-enablesystemassertions")) {
+                    } else if ("-esa".equals(optionString) || "-enablesystemassertions".equals(optionString)) {
                         builder.option("java.EnableSystemAssertions", "true");
                     } else if (optionString.startsWith("--add-reads=")) {
                         handler.addReads(optionString.substring("--add-reads=".length()));
@@ -156,42 +181,91 @@ public final class Arguments {
                         handler.addOpens(optionString.substring("--add-opens=".length()));
                     } else if (optionString.startsWith("--add-modules=")) {
                         handler.addModules(optionString.substring("--add-modules=".length()));
+                    } else if (optionString.startsWith("--enable-native-access=")) {
+                        handler.enableNativeAccess(optionString.substring("--enable-native-access=".length()));
+                    } else if (optionString.startsWith("--illegal-native-access=")) {
+                        builder.option("java.IllegalNativeAccess", optionString.substring("--illegal-native-access=".length()));
                     } else if (optionString.startsWith("--module-path=")) {
-                        builder.option(JAVA_PROPS + "jdk.module.path", optionString.substring("--module-path=".length()));
+                        builder.option("java.ModulePath", optionString.substring("--module-path=".length()));
                     } else if (optionString.startsWith("--upgrade-module-path=")) {
                         builder.option(JAVA_PROPS + "jdk.module.upgrade.path", optionString.substring("--upgrade-module-path=".length()));
                     } else if (optionString.startsWith("--limit-modules=")) {
                         builder.option(JAVA_PROPS + "jdk.module.limitmods", optionString.substring("--limit-modules=".length()));
+                    } else if ("--enable-preview".equals(optionString)) {
+                        builder.option("java.EnablePreview", "true");
                     } else if (isXOption(optionString)) {
-                        RuntimeOptions.set(optionString.substring("-X".length()), null);
-                    } else if (optionString.equals("-XX:+IgnoreUnrecognizedVMOptions")) {
+                        xOptions.add(optionString);
+                    } else if ("-XX:+IgnoreUnrecognizedVMOptions".equals(optionString)) {
                         ignoreUnrecognized = true;
-                    } else if (optionString.equals("-XX:-IgnoreUnrecognizedVMOptions")) {
+                    } else if ("-XX:-IgnoreUnrecognizedVMOptions".equals(optionString)) {
                         ignoreUnrecognized = false;
+                    } else if ("-XX:+UnlockExperimentalVMOptions".equals(optionString) ||
+                                    "-XX:+UnlockDiagnosticVMOptions".equals(optionString)) {
+                        // approximate UnlockDiagnosticVMOptions as UnlockExperimentalVMOptions
+                        handler.setExperimental(true);
+                    } else if ("-XX:-UnlockExperimentalVMOptions".equals(optionString) ||
+                                    "-XX:-UnlockDiagnosticVMOptions".equals(optionString)) {
+                        handler.setExperimental(false);
+                    } else if ("-XX:+PrintFlagsFinal".equals(optionString)) {
+                        printFlagsFinal = true;
+                    } else if ("-XX:-PrintFlagsFinal".equals(optionString)) {
+                        printFlagsFinal = false;
                     } else if (optionString.startsWith("--vm.")) {
                         handler.handleVMOption(optionString);
+                    } else if (optionString.startsWith("-Xcomp")) {
+                        builder.option("engine.CompileImmediately", "true");
+                    } else if (optionString.startsWith("-Xbatch")) {
+                        builder.option("engine.BackgroundCompilation", "false");
+                        builder.option("engine.CompileImmediately", "true");
+                    } else if (optionString.startsWith("-Xint") || "-XX:TieredStopAtLevel=0".equals(optionString)) {
+                        builder.option("engine.Compilation", "false");
+                    } else if ("-XX:TieredStopAtLevel=1".equals(optionString)) {
+                        builder.option("engine.Mode", "latency");
+                    } else if (optionString.startsWith("-Xshare:")) {
+                        String value = optionString.substring("-Xshare:".length());
+                        builder.option("java.CDS", value);
+                    } else if (optionString.startsWith("--sun-misc-unsafe-memory-access=")) {
+                        String value = optionString.substring("--sun-misc-unsafe-memory-access=".length());
+                        builder.option("java.SunMiscUnsafeMemoryAccess", value);
                     } else if (optionString.startsWith("-XX:")) {
                         handler.handleXXArg(optionString);
                     } else if (optionString.startsWith("--help:")) {
                         handler.help(optionString);
                     } else if (isExperimentalFlag(optionString)) {
                         // skip: previously handled
-                    } else if (optionString.equals("--polyglot")) {
+                    } else if ("--polyglot".equals(optionString)) {
                         // skip: handled by mokapot
-                    } else if (optionString.equals("--native")) {
+                    } else if ("--native".equals(optionString)) {
                         // skip: silently succeed.
-                    } else if (optionString.equals("--jvm")) {
+                    } else if ("--jvm".equals(optionString)) {
                         throw abort("Unsupported flag: '--jvm' mode is not supported with this launcher.");
                     } else {
                         handler.parsePolyglotOption(optionString);
                     }
                 }
             } catch (ArgumentException e) {
-                if (!ignoreUnrecognized) {
-                    // Failed to parse
-                    warn(e.getMessage());
-                    return JNI_ERR();
+                // Failed to parse
+                if (argumentError == null) {
+                    argumentError = e.getMessage();
                 }
+            }
+        }
+
+        if (argumentError != null && !ignoreUnrecognized) {
+            warn(argumentError);
+            return JNI_ERR();
+        }
+
+        for (String xOption : xOptions) {
+            RuntimeOptions.set(xOption.substring(2 /* drop the -X */), null);
+        }
+
+        if (printFlagsFinal) {
+            STDOUT.println("[Global flags]");
+            List<RuntimeOptions.Descriptor> descriptors = RuntimeOptions.listDescriptors();
+            descriptors.sort(Comparator.comparing((RuntimeOptions.Descriptor d) -> d.name()));
+            for (RuntimeOptions.Descriptor descriptor : descriptors) {
+                printOption(descriptor);
             }
         }
 
@@ -202,18 +276,9 @@ public final class Arguments {
             builder.option("java.BootClasspathAppend", bootClasspathAppend);
         }
 
-        // classpath provenance order:
-        // (1) the java.class.path property
-        if (classpath == null) {
-            // (2) the environment variable CLASSPATH
-            classpath = System.getenv("CLASSPATH");
-            if (classpath == null) {
-                // (3) the current working directory only
-                classpath = ".";
-            }
+        if (classpath != null) {
+            builder.option("java.Classpath", classpath);
         }
-
-        builder.option("java.Classpath", classpath);
 
         for (int i = 0; i < jvmArgs.size(); i++) {
             builder.option("java.VMArguments." + i, jvmArgs.get(i));
@@ -221,6 +286,26 @@ public final class Arguments {
 
         handler.argumentProcessingDone();
         return JNIErrors.JNI_OK();
+    }
+
+    private static void printOption(RuntimeOptions.Descriptor descriptor) {
+        // see JVMFlag::print_on
+        Class<?> valueType = descriptor.valueType();
+        String typeName;
+        if (valueType == Boolean.class) {
+            typeName = "bool";
+        } else if (valueType == Integer.class) {
+            typeName = "int";
+        } else if (valueType == Long.class) {
+            typeName = "intx";
+        } else if (valueType == Double.class) {
+            typeName = "double";
+        } else if (valueType == String.class) {
+            typeName = "ccstr";
+        } else {
+            typeName = valueType.getSimpleName();
+        }
+        STDOUT.printf("%21s %-39s = %s%n", typeName, descriptor.name(), RuntimeOptions.get(descriptor.name()));
     }
 
     private static void buildJvmArg(List<String> jvmArgs, String optionString) {
@@ -234,7 +319,11 @@ public final class Arguments {
 
     private static boolean isExperimentalFlag(String optionString) {
         // return false for "--experimental-options=[garbage]
-        return optionString.equals("--experimental-options") || optionString.equals("--experimental-options=true") || optionString.equals("--experimental-options=false");
+        return "--experimental-options".equals(optionString) ||
+                        "--experimental-options=true".equals(optionString) ||
+                        "--experimental-options=false".equals(optionString) ||
+                        "-XX:+UnlockDiagnosticVMOptions".equals(optionString) ||
+                        "-XX:-UnlockDiagnosticVMOptions".equals(optionString);
     }
 
     private static boolean isXOption(String optionString) {
@@ -242,16 +331,16 @@ public final class Arguments {
     }
 
     private static String appendPath(String paths, String toAppend) {
-        if (paths != null && paths.length() != 0) {
-            return toAppend != null && toAppend.length() != 0 ? paths + File.pathSeparator + toAppend : paths;
+        if (paths != null && !paths.isEmpty()) {
+            return toAppend != null && !toAppend.isEmpty() ? paths + File.pathSeparator + toAppend : paths;
         } else {
             return toAppend;
         }
     }
 
     private static String prependPath(String toPrepend, String paths) {
-        if (paths != null && paths.length() != 0) {
-            return toPrepend != null && toPrepend.length() != 0 ? toPrepend + File.pathSeparator + paths : paths;
+        if (paths != null && !paths.isEmpty()) {
+            return toPrepend != null && !toPrepend.isEmpty() ? toPrepend + File.pathSeparator + paths : paths;
         } else {
             return toPrepend;
         }
@@ -272,7 +361,7 @@ public final class Arguments {
     }
 
     public static class ArgumentException extends RuntimeException {
-        private static final long serialVersionUID = 5430103471994299046L;
+        @Serial private static final long serialVersionUID = 5430103471994299046L;
 
         private final boolean isExperimental;
 
