@@ -25,26 +25,44 @@
 
 package com.oracle.svm.core.option;
 
+import java.io.BufferedReader;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.FileSystem;
+import java.nio.file.FileSystemNotFoundException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 
-import org.graalvm.compiler.core.common.SuppressFBWarnings;
-
+import com.oracle.svm.core.option.OptionUtils.MacroOptionKind;
 import com.oracle.svm.core.util.VMError;
+
+import jdk.graal.compiler.core.common.SuppressFBWarnings;
 
 public abstract class OptionOrigin {
 
-    public static final OptionOrigin commandLineOptionOriginSingleton = new CommandLineOptionOrigin();
+    public static final OptionOrigin commandLineAPIOptionOriginSingleton = new CommandLineOptionOrigin(true);
+    public static final OptionOrigin commandLineNonAPIOptionOriginSingleton = new CommandLineOptionOrigin(false);
+    public static final OptionOrigin driverStableOriginSingleton = new DriverOptionOrigin();
     public static final String argFilePrefix = "argfile:";
+
+    public static final String originUser = "user";
+
+    public static final String originDriver = "driver";
+
+    public static final String isAPISuffix = "+api";
+
+    protected final boolean isStable;
+
+    public OptionOrigin(boolean isStable) {
+        this.isStable = isStable;
+    }
 
     public URI container() {
         return null;
@@ -55,6 +73,14 @@ public abstract class OptionOrigin {
     }
 
     public boolean commandLineLike() {
+        return false;
+    }
+
+    public boolean isStable() {
+        return isStable;
+    }
+
+    public boolean isInternal() {
         return false;
     }
 
@@ -71,15 +97,26 @@ public abstract class OptionOrigin {
         return from(origin, true);
     }
 
-    public static OptionOrigin from(String origin, boolean strict) {
+    public static OptionOrigin from(String originArg, boolean strict) {
+        String origin = originArg;
 
-        if (origin == null || origin.startsWith(argFilePrefix)) {
-            return commandLineOptionOriginSingleton;
+        boolean isStable = false;
+        if (origin != null && isAPI(origin)) {
+            isStable = true;
+            origin = origin.substring(0, origin.length() - isAPISuffix.length());
+        }
+
+        if (origin == null || originUser.equals(origin) || origin.startsWith(argFilePrefix)) {
+            return isStable ? commandLineAPIOptionOriginSingleton : commandLineNonAPIOptionOriginSingleton;
+        }
+
+        if (originDriver.equals(origin)) {
+            return driverStableOriginSingleton;
         }
 
         URI originURI = originURI(origin);
         if (originURI == null) {
-            var macroOption = MacroOptionOrigin.from(origin);
+            var macroOption = MacroOptionOrigin.from(isStable, origin);
             if (macroOption != null) {
                 return macroOption;
             }
@@ -90,19 +127,23 @@ public abstract class OptionOrigin {
         }
         switch (originURI.getScheme()) {
             case "jar":
-                return new JarOptionOrigin(originURI);
+                return new JarOptionOrigin(isStable, originURI);
             case "file":
                 Path originPath = Path.of(originURI);
                 if (!Files.isReadable(originPath) && strict) {
                     VMError.shouldNotReachHere("Directory origin with path that cannot be read: " + originPath);
                 }
-                return new DirectoryOptionOrigin(originPath);
+                return new DirectoryOptionOrigin(isStable, originPath);
             default:
                 if (strict) {
                     throw VMError.shouldNotReachHere("OptionOrigin of unsupported scheme: " + originURI);
                 }
                 return null;
         }
+    }
+
+    public static boolean isAPI(String originArg) {
+        return originArg.endsWith(isAPISuffix);
     }
 
     protected static URI originURI(String origin) {
@@ -115,25 +156,38 @@ public abstract class OptionOrigin {
 
     static List<String> getRedirectionValuesFromPath(Path normalizedRedirPath) throws IOException {
         if (Files.isReadable(normalizedRedirPath)) {
-            return Files.readAllLines(normalizedRedirPath);
+            try (BufferedReader reader = Files.newBufferedReader(normalizedRedirPath)) {
+                List<String> values = new ArrayList<>();
+                while (true) {
+                    String line = reader.readLine();
+                    if (line == null) {
+                        break;
+                    }
+                    if (line.isEmpty() || line.startsWith("#")) {
+                        continue;
+                    }
+                    values.add(line);
+                }
+                return values;
+            }
         }
         throw new FileNotFoundException("Unable to read file from " + normalizedRedirPath.toUri());
     }
 }
 
 final class CommandLineOptionOrigin extends OptionOrigin {
-
-    CommandLineOptionOrigin() {
+    CommandLineOptionOrigin(boolean isStable) {
+        super(isStable);
     }
 
     @Override
     public int hashCode() {
-        return 0;
+        return Objects.hash(System.identityHashCode(this), isStable);
     }
 
     @Override
     public boolean equals(Object obj) {
-        return obj instanceof CommandLineOptionOrigin;
+        return obj instanceof CommandLineOptionOrigin cloo && this.isStable == cloo.isStable;
     }
 
     @Override
@@ -147,13 +201,45 @@ final class CommandLineOptionOrigin extends OptionOrigin {
     }
 }
 
+final class DriverOptionOrigin extends OptionOrigin {
+    DriverOptionOrigin() {
+        super(false);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(System.identityHashCode(this), isStable);
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof DriverOptionOrigin doo && this.isStable == doo.isStable;
+    }
+
+    @Override
+    public boolean commandLineLike() {
+        return true;
+    }
+
+    @Override
+    public boolean isInternal() {
+        return true;
+    }
+
+    @Override
+    public String toString() {
+        return "internal";
+    }
+}
+
 final class MacroOptionOrigin extends OptionOrigin {
 
     public final OptionUtils.MacroOptionKind kind;
     public final String name;
     public final Path optionDirectory;
 
-    private MacroOptionOrigin(OptionUtils.MacroOptionKind kind, String name, URI optionDirectory) {
+    private MacroOptionOrigin(boolean isStable, OptionUtils.MacroOptionKind kind, String name, URI optionDirectory) {
+        super(isStable);
         this.kind = kind;
         this.name = name;
         VMError.guarantee(optionDirectory != null, "Invalid optionDirectory origin");
@@ -175,7 +261,7 @@ final class MacroOptionOrigin extends OptionOrigin {
         return false;
     }
 
-    public static MacroOptionOrigin from(String rawOrigin) {
+    public static MacroOptionOrigin from(boolean isStable, String rawOrigin) {
         for (OptionUtils.MacroOptionKind kind : OptionUtils.MacroOptionKind.values()) {
             String prefix = kind.getDescriptionPrefix(true);
             if (rawOrigin.startsWith(prefix)) {
@@ -187,7 +273,7 @@ final class MacroOptionOrigin extends OptionOrigin {
                     /* Strip optional trailing argumentOrigin */
                     optionDirectory = optionDirectory.substring(0, argumentOriginSep);
                 }
-                return new MacroOptionOrigin(kind, rawOrigin.substring(prefix.length()), originURI(optionDirectory));
+                return new MacroOptionOrigin(isStable, kind, rawOrigin.substring(prefix.length()), originURI(optionDirectory));
             }
         }
         return null;
@@ -195,7 +281,7 @@ final class MacroOptionOrigin extends OptionOrigin {
 
     @Override
     public boolean commandLineLike() {
-        return OptionUtils.MacroOptionKind.Macro.equals(kind);
+        return MacroOptionKind.Macro.equals(kind);
     }
 
     @Override
@@ -211,6 +297,10 @@ final class MacroOptionOrigin extends OptionOrigin {
 }
 
 abstract class URIOptionOrigin extends OptionOrigin {
+
+    URIOptionOrigin(boolean isStable) {
+        super(isStable);
+    }
 
     protected URI container;
 
@@ -248,7 +338,8 @@ abstract class URIOptionOrigin extends OptionOrigin {
 }
 
 final class JarOptionOrigin extends URIOptionOrigin {
-    protected JarOptionOrigin(URI rawOrigin) {
+    protected JarOptionOrigin(boolean isStable, URI rawOrigin) {
+        super(isStable);
         var specific = rawOrigin.getSchemeSpecificPart();
         int sep = specific.lastIndexOf('!');
         VMError.guarantee(sep > 0, "Invalid jar origin");
@@ -263,24 +354,32 @@ final class JarOptionOrigin extends URIOptionOrigin {
     public List<String> getRedirectionValues(Path valuesFile) throws IOException {
         URI jarFileURI = URI.create("jar:" + container());
         FileSystem probeJarFS;
+        boolean cleanup = false;
         try {
-            probeJarFS = FileSystems.newFileSystem(jarFileURI, Collections.emptyMap());
-        } catch (UnsupportedOperationException e) {
-            probeJarFS = null;
+            probeJarFS = FileSystems.getFileSystem(jarFileURI);
+        } catch (FileSystemNotFoundException e) {
+            probeJarFS = FileSystems.newFileSystem(jarFileURI, Map.of());
+            cleanup = true;
         }
         if (probeJarFS == null) {
             throw new IOException("Unable to create jar file system for " + jarFileURI);
         }
-        try (FileSystem fs = probeJarFS) {
+        try {
             var normalizedRedirPath = location().getParent().resolve(valuesFile).normalize();
-            return getRedirectionValuesFromPath(normalizedRedirPath);
+            List<String> values = getRedirectionValuesFromPath(probeJarFS.getPath("/", normalizedRedirPath.toString()));
+            return values;
+        } finally {
+            if (cleanup) {
+                probeJarFS.close();
+            }
         }
     }
 }
 
 final class DirectoryOptionOrigin extends URIOptionOrigin {
     @SuppressFBWarnings(value = "NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE", justification = "originPath.getRoot() is never null")
-    protected DirectoryOptionOrigin(Path originPath) {
+    protected DirectoryOptionOrigin(boolean isStable, Path originPath) {
+        super(isStable);
         int pathPos = 0;
         int metaInfPos = -1;
         for (Path entry : originPath) {
