@@ -24,6 +24,8 @@
  */
 package com.oracle.svm.hosted;
 
+import static com.oracle.svm.core.util.VMError.shouldNotReachHereAtRuntime;
+
 import java.lang.module.Configuration;
 import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
@@ -54,20 +56,45 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jdk.internal.module.DefaultRoots;
-import jdk.internal.module.ModuleBootstrap;
-import jdk.internal.module.SystemModuleFinders;
+import com.oracle.svm.core.encoder.SymbolEncoder;
 import org.graalvm.nativeimage.ImageSingletons;
+import org.graalvm.nativeimage.Platform;
+import org.graalvm.nativeimage.Platforms;
+import org.graalvm.nativeimage.hosted.FieldValueTransformer;
 
 import com.oracle.graal.pointsto.meta.AnalysisType;
+import com.oracle.svm.core.BuildPhaseProvider;
+import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.feature.InternalFeature;
-import com.oracle.svm.core.jdk.BootModuleLayerSupport;
 import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
+import com.oracle.svm.core.fieldvaluetransformer.ObjectToConstantFieldValueTransformer;
+import com.oracle.svm.core.heap.UnknownObjectField;
+import com.oracle.svm.core.hub.DynamicHub;
+import com.oracle.svm.core.imagelayer.ImageLayerBuildingSupport;
+import com.oracle.svm.core.jdk.LayeredModuleSingleton;
+import com.oracle.svm.core.jdk.Resources;
+import com.oracle.svm.core.jdk.RuntimeClassLoaderValueSupport;
+import com.oracle.svm.core.jdk.RuntimeModuleSupport;
+import com.oracle.svm.core.util.HostedSubstrateUtil;
 import com.oracle.svm.core.util.VMError;
+import com.oracle.svm.hosted.FeatureImpl.AfterAnalysisAccessImpl;
+import com.oracle.svm.hosted.FeatureImpl.AnalysisAccessBase;
+import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
+import com.oracle.svm.hosted.imagelayer.CrossLayerConstantRegistryFeature;
+import com.oracle.svm.hosted.reflect.proxy.ProxyRenamingSubstitutionProcessor;
+import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
 import com.oracle.svm.util.ReflectionUtil;
+
+import jdk.internal.module.DefaultRoots;
+import jdk.internal.module.ModuleBootstrap;
+import jdk.internal.module.ModuleReferenceImpl;
+import jdk.internal.module.ServicesCatalog;
+import jdk.internal.module.SystemModuleFinders;
+import jdk.vm.ci.meta.JavaConstant;
+import jdk.vm.ci.meta.ResolvedJavaField;
 
 /**
  * This feature:
@@ -108,80 +135,180 @@ import com.oracle.svm.util.ReflectionUtil;
  * </p>
  */
 @AutomaticallyRegisteredFeature
-public final class ModuleLayerFeature implements InternalFeature {
+@SuppressWarnings("unused")
+public class ModuleLayerFeature implements InternalFeature {
     private ModuleLayerFeatureUtils moduleLayerFeatureUtils;
+    private ModuleLayer bootLayer;
 
     @Override
     public void duringSetup(DuringSetupAccess access) {
         FeatureImpl.DuringSetupAccessImpl accessImpl = (FeatureImpl.DuringSetupAccessImpl) access;
         moduleLayerFeatureUtils = new ModuleLayerFeatureUtils(accessImpl.imageClassLoader);
-
-        /*
-         * Generate a temporary module layer to serve as a runtime boot module layer until the
-         * analysis is finished.
-         */
-        Set<String> baseModules = ModuleLayer.boot().modules()
-                        .stream()
-                        .map(Module::getName)
-                        .collect(Collectors.toSet());
-        Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
-        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
-        BootModuleLayerSupport.instance().setBootLayer(runtimeBootLayer);
+        Resources.currentLayer().setHostedToRuntimeModuleMapper(m -> moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(m, accessImpl));
 
         /*
          * Register an object replacer that will ensure all references to hosted module instances
          * are replaced with the appropriate runtime module instance.
          */
-        access.registerObjectReplacer(this::replaceHostedModules);
+        access.registerObjectReplacer(source -> replaceHostedModules(source, accessImpl));
     }
 
-    private Object replaceHostedModules(Object source) {
-        if (source instanceof Module) {
-            Module module = (Module) source;
-            return moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(module, module.getDescriptor());
+    private Object replaceHostedModules(Object source, AnalysisAccessBase access) {
+        if (source instanceof Module module) {
+            return moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(module, access);
+        } else if (source instanceof Class<?> clazz) {
+            /*
+             * If the field Class(=DynamicHub).module is not reachable, we do not see all Module
+             * instances directly. So we also need to scan the module in Class/DynamicHub objects.
+             */
+            moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(clazz.getModule(), access);
+        } else if (source instanceof DynamicHub hub) {
+            moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(hub.getModule(), access);
         }
         return source;
     }
 
     @Override
     public void afterRegistration(AfterRegistrationAccess access) {
-        ImageSingletons.add(BootModuleLayerSupport.class, new BootModuleLayerSupport());
-
         List<Module> bootLayerAutomaticModules = ModuleLayer.boot().modules()
                         .stream()
                         .filter(m -> m.isNamed() && m.getDescriptor().isAutomatic())
-                        .collect(Collectors.toList());
+                        .toList();
         if (!bootLayerAutomaticModules.isEmpty()) {
-            System.out.println("Warning: Detected automatic module(s) on the module-path of the image builder:" + System.lineSeparator() +
-                            bootLayerAutomaticModules.stream().map(ModuleLayerFeatureUtils::formatModule).collect(Collectors.joining(System.lineSeparator())) +
-                            System.lineSeparator() + "Extending the image builder with automatic modules is not supported and might result in failed build. " +
-                            "This is probably caused by specifying a jar-file that is not a proper module on the module-path. " +
-                            "Please ensure that only proper modules are found on the module-path");
+            LogUtils.warning(
+                            "Detected automatic module(s) on the module-path of the image builder:%n%s%nExtending the image builder with automatic modules is not supported and might result in failed build. " +
+                                            "This is probably caused by specifying a jar-file that is not a proper module on the module-path. " +
+                                            "Please ensure that only proper modules are found on the module-path.",
+                            bootLayerAutomaticModules.stream().map(ModuleLayerFeatureUtils::formatModule).collect(Collectors.joining(System.lineSeparator())));
         }
     }
 
     @Override
-    public void afterAnalysis(AfterAnalysisAccess access) {
-        FeatureImpl.AfterAnalysisAccessImpl accessImpl = (FeatureImpl.AfterAnalysisAccessImpl) access;
+    public void beforeAnalysis(BeforeAnalysisAccess a) {
+        BeforeAnalysisAccessImpl access = (BeforeAnalysisAccessImpl) a;
+        if (ImageLayerBuildingSupport.buildingImageLayer()) {
+            AnalysisType futureType = access.getMetaAccess().lookupJavaType(HashMap.class);
+            access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleOpenPackagesField, new LayerPackagesTransformer(PackageType.OPENED, futureType));
+            access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleExportedPackagesField, new LayerPackagesTransformer(PackageType.EXPORTED, futureType));
+        }
 
-        Set<Module> runtimeImageNamedModules = accessImpl.getUniverse().getTypes()
+        scanRuntimeBootLayerPrototype(access);
+
+        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
+        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceImplLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
+    }
+
+    /**
+     * This transformer delays the Module#open/exportedPackages fields computation until the
+     * application layer.
+     */
+    static class LayerPackagesTransformer implements ObjectToConstantFieldValueTransformer {
+        final CrossLayerConstantRegistryFeature registry = CrossLayerConstantRegistryFeature.singleton();
+        private final PackageType type;
+        private final AnalysisType futureType;
+
+        LayerPackagesTransformer(PackageType packageType, AnalysisType futureType) {
+            this.type = packageType;
+            this.futureType = futureType;
+        }
+
+        @Override
+        public JavaConstant transformToConstant(ResolvedJavaField field, Object receiver, Object originalValue, Function<Object, JavaConstant> toConstant) {
+            Module module = (Module) receiver;
+            if (!LayeredModuleSingleton.singleton().getModules().contains(module)) {
+                /*
+                 * Modules that are not processed by the LayeredModuleSingleton don't need to be
+                 * delayed until the application layer.
+                 */
+                return toConstant.apply(originalValue);
+            }
+            /*
+             * This key is unique because layered images require all modules to have a different
+             * name. This is ensured in LayeredModuleSingleton.setPackages.
+             */
+            String keyName = type.getModuleKeyName(module);
+            if (ImageLayerBuildingSupport.buildingApplicationLayer()) {
+                /*
+                 * Once the constant is finalized, or if the field was not reachable in any previous
+                 * layer, the final constant can be computed and returned.
+                 */
+                return toConstant.apply(originalValue);
+            } else {
+                if (registry.constantExists(keyName)) {
+                    return registry.getConstant(keyName);
+                } else {
+                    if (ProxyRenamingSubstitutionProcessor.isModuleDynamic(module)) {
+                        LogUtils.warning("Dynamic module %s was found in runtime module opens/exports, which might lead to missing relations from the shared layers at runtime", module);
+                    }
+                    return registry.registerFutureHeapConstant(keyName, futureType);
+                }
+            }
+        }
+
+        @Override
+        public boolean isAvailable() {
+            /*
+             * This transformer needs to be computed after all module relations are finalized in the
+             * application layer as transformer are computed only once and the value is then cached.
+             */
+            return ImageLayerBuildingSupport.buildingSharedLayer() || BuildPhaseProvider.isHostedUniverseBuilt();
+        }
+    }
+
+    private enum PackageType {
+
+        OPENED("opened"),
+        EXPORTED("exported");
+
+        private static final String PACKAGE_TYPE_SEPARATOR = ".";
+
+        private final String packageType;
+
+        PackageType(String packageType) {
+            this.packageType = packageType;
+        }
+
+        public String getModuleKeyName(Module module) {
+            return module.getName() + PACKAGE_TYPE_SEPARATOR + packageType;
+        }
+    }
+
+    /**
+     * Generate a temporary module layer to serve as a prototype object for
+     * {@link RuntimeModuleSupport}.bootLayer. The value doesn't need to actually be set in the
+     * field, just scanned such that the analysis sees the deep type hierarchy. The field value
+     * wouldn't be processed during analysis anyway since the field is annotated with
+     * {@link UnknownObjectField}, only the field declared type is injected in the type flow graphs.
+     * The concrete value is set in {@link ModuleLayerFeature#afterAnalysis}. Later when the field
+     * is read the lazy value supplier scans the concrete value and patches the shadow heap.
+     */
+    private void scanRuntimeBootLayerPrototype(BeforeAnalysisAccessImpl accessImpl) {
+        Set<String> baseModules = ModuleLayer.boot().modules().stream().map(Module::getName).collect(Collectors.toSet());
+        Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
+        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl, accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
+        /* Only scan the value if module support is enabled and bootLayer field is reachable. */
+        accessImpl.registerReachabilityHandler((a) -> accessImpl.rescanObject(runtimeBootLayer), ReflectionUtil.lookupField(RuntimeModuleSupport.class, "bootLayer"));
+    }
+
+    @Override
+    public void afterAnalysis(AfterAnalysisAccess access) {
+        AfterAnalysisAccessImpl accessImpl = (AfterAnalysisAccessImpl) access;
+
+        Set<Module> runtimeImageModules = accessImpl.getUniverse().getTypes()
                         .stream()
-                        .filter(ModuleLayerFeature::typeIsReachable)
+                        .filter(t1 -> !t1.isInBaseLayer() && typeIsReachable(t1))
                         .map(t -> t.getJavaClass().getModule())
-                        .filter(Module::isNamed)
                         .collect(Collectors.toSet());
+
+        Set<Module> runtimeImageNamedModules = runtimeImageModules.stream().filter(Module::isNamed).collect(Collectors.toSet());
+        Set<Module> runtimeImageUnnamedModules = runtimeImageModules.stream().filter(Predicate.not(Module::isNamed)).collect(Collectors.toSet());
 
         /*
          * Parse explicitly added modules via --add-modules. This is done early as this information
          * is required when filtering the analysis reachable module set.
          */
-        Set<String> extraModules = ModuleLayerFeatureUtils.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES);
-        Set<String> includedResourceModules = ImageSingletons.lookup(ResourcesFeature.class).includedResourcesModules
-                        .stream()
-                        .map(Module::getName)
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toSet());
-        extraModules.addAll(includedResourceModules);
+        Set<String> extraModules = ModuleSupport.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES);
+        extraModules.addAll(Resources.getIncludedResourcesModules());
         extraModules.stream().filter(Predicate.not(ModuleSupport.nonExplicitModules::contains)).forEach(moduleName -> {
             Optional<?> module = accessImpl.imageClassLoader.findModule(moduleName);
             if (module.isEmpty()) {
@@ -190,9 +317,15 @@ public final class ModuleLayerFeature implements InternalFeature {
             runtimeImageNamedModules.add((Module) module.get());
         });
 
+        /*
+         * We need to include synthetic modules in the runtime module system. Some modules, such as
+         * jdk.proxy, are created for all class loaders, so we need to make sure to not include
+         * those made for the builder class loader.
+         */
         Set<Module> analysisReachableSyntheticModules = runtimeImageNamedModules
                         .stream()
                         .filter(ModuleLayerFeatureUtils::isModuleSynthetic)
+                        .filter(m -> m.getClassLoader() != accessImpl.imageClassLoader.getClassLoader())
                         .collect(Collectors.toSet());
 
         /*
@@ -218,14 +351,45 @@ public final class ModuleLayerFeature implements InternalFeature {
 
         Set<String> rootModules = calculateRootModules(extraModules);
         List<ModuleLayer> runtimeModuleLayers = synthesizeRuntimeModuleLayers(accessImpl, reachableModuleLayers, runtimeImageNamedModules, analysisReachableSyntheticModules, rootModules);
-        ModuleLayer runtimeBootLayer = runtimeModuleLayers.get(0);
-        BootModuleLayerSupport.instance().setBootLayer(runtimeBootLayer);
+        ModuleLayer runtimeBootLayer = runtimeModuleLayers.getFirst();
+        if (ImageLayerBuildingSupport.buildingImageLayer()) {
+            SharedLayerBootLayerModulesSingleton.singleton().setBootLayer(runtimeBootLayer);
+        }
+        if (ImageLayerBuildingSupport.lastImageBuild()) {
+            RuntimeModuleSupport.singleton().setBootLayer(runtimeBootLayer);
+        }
+        bootLayer = runtimeBootLayer;
+        RuntimeClassLoaderValueSupport.instance().update(runtimeModuleLayers);
 
         /*
          * Ensure that runtime modules have the same relations (i.e., reads, opens and exports) as
          * the originals.
          */
-        replicateVisibilityModifications(runtimeBootLayer, accessImpl.imageClassLoader, runtimeImageNamedModules);
+        replicateVisibilityModifications(runtimeBootLayer, accessImpl, accessImpl.imageClassLoader, runtimeImageNamedModules, runtimeImageUnnamedModules);
+        replicateNativeAccess(accessImpl, runtimeImageNamedModules);
+    }
+
+    @Override
+    public void beforeCompilation(BeforeCompilationAccess a) {
+        if (ImageLayerBuildingSupport.buildingApplicationLayer()) {
+            /*
+             * The packages fields need to be rescanned to ensure that all the future constants are
+             * finalized, even if they were not modified in the application layer.
+             */
+            FeatureImpl.BeforeCompilationAccessImpl access = (FeatureImpl.BeforeCompilationAccessImpl) a;
+            CrossLayerConstantRegistryFeature singleton = CrossLayerConstantRegistryFeature.singleton();
+            for (var module : LayeredModuleSingleton.singleton().getModules()) {
+                finalizeFutureHeapConstant(singleton, module, PackageType.OPENED, moduleLayerFeatureUtils.moduleOpenPackagesField);
+                finalizeFutureHeapConstant(singleton, module, PackageType.EXPORTED, moduleLayerFeatureUtils.moduleExportedPackagesField);
+            }
+        }
+    }
+
+    private static void finalizeFutureHeapConstant(CrossLayerConstantRegistryFeature singleton, Module module, PackageType packageType, Field field) {
+        String moduleKeyName = packageType.getModuleKeyName(module);
+        if (singleton.constantExists(moduleKeyName)) {
+            singleton.finalizeFutureHeapConstant(moduleKeyName, ReflectionUtil.readField(Module.class, field.getName(), module));
+        }
     }
 
     /**
@@ -237,7 +401,7 @@ public final class ModuleLayerFeature implements InternalFeature {
         ModuleFinder upgradeModulePath = NativeImageClassLoaderSupport.finderFor("jdk.module.upgrade.path");
         ModuleFinder appModulePath = moduleLayerFeatureUtils.getAppModuleFinder();
         String mainModule = ModuleLayerFeatureUtils.getMainModuleName();
-        Set<String> limitModules = ModuleLayerFeatureUtils.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES);
+        Set<String> limitModules = ModuleSupport.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES);
 
         Object systemModules = null;
         ModuleFinder systemModuleFinder;
@@ -343,7 +507,7 @@ public final class ModuleLayerFeature implements InternalFeature {
         return Stream.concat(Stream.of(m.getName()), requiredModules);
     }
 
-    private List<ModuleLayer> synthesizeRuntimeModuleLayers(FeatureImpl.AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
+    private List<ModuleLayer> synthesizeRuntimeModuleLayers(AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
                     Collection<Module> reachableSyntheticModules, Collection<String> rootModuleNames) {
         /*
          * A mapping from hosted to runtime module layers. Used when looking up runtime module layer
@@ -375,6 +539,9 @@ public final class ModuleLayerFeature implements InternalFeature {
             moduleNames.retainAll(allReachableAndRequiredModuleNames);
             if (isBootModuleLayer) {
                 moduleNames.addAll(rootModuleNames);
+                if (ImageLayerBuildingSupport.buildingApplicationLayer()) {
+                    moduleNames.addAll(SharedLayerBootLayerModulesSingleton.singleton().getSharedBootLayerModules());
+                }
             }
 
             Set<Module> syntheticModules = new HashSet<>();
@@ -387,16 +554,16 @@ public final class ModuleLayerFeature implements InternalFeature {
             Configuration cf = isBootModuleLayer ? null : hostedModuleLayer.configuration();
             Function<String, ClassLoader> clf = name -> moduleLayerFeatureUtils.getClassLoaderForModuleInModuleLayer(hostedModuleLayer, name);
 
-            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl.imageClassLoader, moduleNames, syntheticModules, clf, cf);
+            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl, accessImpl.imageClassLoader, moduleNames, syntheticModules, clf, cf);
             moduleLayerPairs.put(hostedModuleLayer, runtimeModuleLayer);
         }
 
-        moduleLayerPairs.remove(ModuleLayer.empty());
-        return new ArrayList<>(moduleLayerPairs.values());
+        List<ModuleLayer> runtimeModuleLayers = hostedModuleLayers.stream().map(moduleLayerPairs::get).filter(Objects::nonNull).toList();
+        return runtimeModuleLayers;
     }
 
-    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, ImageClassLoader cl, Set<String> reachableModules, Set<Module> syntheticModules,
-                    Function<String, ClassLoader> clf, Configuration cfOverride) {
+    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, AnalysisAccessBase accessImpl, ImageClassLoader cl, Set<String> reachableModules,
+                    Set<Module> syntheticModules, Function<String, ClassLoader> clf, Configuration cfOverride) {
         /**
          * For consistent module lookup we reuse the {@link ModuleFinder}s defined and used in
          * {@link NativeImageClassLoaderSupport}.
@@ -414,75 +581,114 @@ public final class ModuleLayerFeature implements InternalFeature {
         ModuleLayer runtimeModuleLayer = null;
         try {
             runtimeModuleLayer = moduleLayerFeatureUtils.createNewModuleLayerInstance(runtimeModuleLayerConfiguration);
-            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(runtimeModuleLayer, clf);
+            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(accessImpl, runtimeModuleLayer, clf);
             for (Module syntheticModule : syntheticModules) {
-                Module runtimeSyntheticModule = moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(syntheticModule, syntheticModule.getDescriptor());
+                Module runtimeSyntheticModule = moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(syntheticModule, accessImpl);
                 nameToModule.putIfAbsent(runtimeSyntheticModule.getName(), runtimeSyntheticModule);
-                moduleLayerFeatureUtils.patchModuleLayerField(runtimeSyntheticModule, runtimeModuleLayer);
+                moduleLayerFeatureUtils.patchModuleLayerField(accessImpl, runtimeSyntheticModule, runtimeModuleLayer);
             }
-            patchRuntimeModuleLayer(runtimeModuleLayer, nameToModule, parentLayers);
+            ServicesCatalog servicesCatalog = synthesizeRuntimeModuleLayerServicesCatalog(nameToModule);
+            patchRuntimeModuleLayer(accessImpl, runtimeModuleLayer, nameToModule, parentLayers, servicesCatalog);
+            accessImpl.rescanField(runtimeModuleLayer, moduleLayerFeatureUtils.moduleLayerModulesField);
             return runtimeModuleLayer;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException ex) {
             throw VMError.shouldNotReachHere("Failed to synthesize the runtime module layer: " + runtimeModuleLayer, ex);
         }
     }
 
-    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, ImageClassLoader cl, Set<Module> analysisReachableNamedModules) {
+    private static ServicesCatalog synthesizeRuntimeModuleLayerServicesCatalog(Map<String, Module> nameToModule) {
+        ServicesCatalog servicesCatalog = ServicesCatalog.create();
+        for (Module m : nameToModule.values()) {
+            servicesCatalog.register(m);
+        }
+        return servicesCatalog;
+    }
+
+    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, AfterAnalysisAccessImpl accessImpl, ImageClassLoader cl, Set<Module> analysisReachableNamedModules,
+                    Set<Module> analysisReachableUnnamedModules) {
         List<Module> applicationModules = findApplicationModules(runtimeBootLayer, cl.applicationModulePath());
+        Set<String> applicationModuleNames = applicationModules.stream().map(Module::getName).collect(Collectors.toUnmodifiableSet());
+        ImageSingletons.add(ApplicationModules.class, () -> applicationModuleNames);
 
-        Map<Module, Module> modulePairs = analysisReachableNamedModules
+        Map<Module, Module> namedModulePairs = analysisReachableNamedModules
                         .stream()
-                        .collect(Collectors.toMap(m -> m, m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
-        modulePairs.put(moduleLayerFeatureUtils.allUnnamedModule, moduleLayerFeatureUtils.allUnnamedModule);
-        modulePairs.put(moduleLayerFeatureUtils.everyoneModule, moduleLayerFeatureUtils.everyoneModule);
-
-        Module builderModule = ModuleLayerFeatureUtils.getBuilderModule();
-        assert builderModule != null;
+                        .collect(Collectors.toMap(Function.identity(), m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+        Map<Module, Module> unnamedModulePairs = analysisReachableUnnamedModules
+                        .stream()
+                        .collect(Collectors.toMap(Function.identity(), m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+        unnamedModulePairs.put(moduleLayerFeatureUtils.allUnnamedModule, moduleLayerFeatureUtils.allUnnamedModule);
+        unnamedModulePairs.put(moduleLayerFeatureUtils.everyoneModule, moduleLayerFeatureUtils.everyoneModule);
 
         try {
-            for (Map.Entry<Module, Module> e1 : modulePairs.entrySet()) {
+            for (Map.Entry<Module, Module> e1 : namedModulePairs.entrySet()) {
                 Module hostedFrom = e1.getKey();
-                if (!hostedFrom.isNamed()) {
-                    continue;
-                }
                 Module runtimeFrom = e1.getValue();
-                for (Map.Entry<Module, Module> e2 : modulePairs.entrySet()) {
-                    Module hostedTo = e2.getKey();
-                    if (hostedTo == hostedFrom) {
-                        continue;
-                    }
-                    Module runtimeTo = e2.getValue();
-                    if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.canRead(hostedTo)) {
-                        moduleLayerFeatureUtils.addReads(runtimeFrom, runtimeTo);
-                        if (hostedFrom == builderModule) {
-                            for (Module appModule : applicationModules) {
-                                moduleLayerFeatureUtils.addReads(appModule, runtimeTo);
-                            }
-                        }
-                    }
-                    for (String pn : runtimeFrom.getPackages()) {
-                        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isOpen(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, runtimeTo);
-                            if (hostedTo == builderModule) {
-                                for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, appModule);
-                                }
-                            }
-                        }
-                        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isExported(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addExports(runtimeFrom, pn, runtimeTo);
-                            if (hostedTo == builderModule) {
-                                for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addExports(runtimeFrom, pn, appModule);
-                                }
-                            }
-                        }
-                    }
+                for (Map.Entry<Module, Module> e2 : namedModulePairs.entrySet()) {
+                    replicateVisibilityModification(accessImpl, applicationModules, hostedFrom, e2.getKey(), runtimeFrom, e2.getValue());
                 }
+                for (Map.Entry<Module, Module> e2 : unnamedModulePairs.entrySet()) {
+                    replicateVisibilityModification(accessImpl, applicationModules, hostedFrom, e2.getKey(), runtimeFrom, e2.getValue());
+                }
+                moduleLayerFeatureUtils.encodeFields(accessImpl, runtimeFrom);
             }
         } catch (IllegalAccessException ex) {
             throw VMError.shouldNotReachHere("Failed to transfer hosted module relations to the runtime boot module layer.", ex);
         }
+    }
+
+    private void replicateVisibilityModification(AfterAnalysisAccessImpl accessImpl, List<Module> applicationModules, Module hostedFrom, Module hostedTo, Module runtimeFrom, Module runtimeTo)
+                    throws IllegalAccessException {
+        if (hostedTo == hostedFrom) {
+            return;
+        }
+
+        Module builderModule = ModuleLayerFeatureUtils.getBuilderModule();
+        assert builderModule != null;
+
+        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.canRead(hostedTo)) {
+            moduleLayerFeatureUtils.addReads(accessImpl, runtimeFrom, runtimeTo);
+            if (hostedFrom == builderModule) {
+                for (Module appModule : applicationModules) {
+                    moduleLayerFeatureUtils.addReads(accessImpl, appModule, runtimeTo);
+                }
+            }
+        }
+
+        for (String pn : runtimeFrom.getPackages()) {
+            if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isOpen(pn, hostedTo)) {
+                moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, runtimeTo);
+                if (hostedTo == builderModule) {
+                    for (Module appModule : applicationModules) {
+                        moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, appModule);
+                    }
+                }
+            }
+            if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isExported(pn, hostedTo)) {
+                moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, runtimeTo);
+                if (hostedTo == builderModule) {
+                    for (Module appModule : applicationModules) {
+                        moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, appModule);
+                    }
+                }
+            }
+        }
+    }
+
+    private void replicateNativeAccess(AfterAnalysisAccessImpl accessImpl, Set<Module> analysisReachableNamedModules) {
+        Map<Module, Module> modulePairs = analysisReachableNamedModules
+                        .stream()
+                        .collect(Collectors.toMap(m -> m, m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+
+        for (Map.Entry<Module, Module> modulesPair : modulePairs.entrySet()) {
+            Module hosted = modulesPair.getKey();
+            Module runtime = modulesPair.getValue();
+            if (moduleLayerFeatureUtils.allowsNativeAccess(hosted) || moduleLayerFeatureUtils.isNativeAccessEnabledForRuntimeModule(runtime)) {
+                if (!moduleLayerFeatureUtils.allowsNativeAccess(runtime)) {
+                    moduleLayerFeatureUtils.enableNativeAccess(accessImpl, runtime);
+                }
+            }
+        }
+
     }
 
     private static List<Module> findApplicationModules(ModuleLayer runtimeBootLayer, List<Path> applicationModulePath) {
@@ -493,7 +699,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             applicationModuleNames = applicationModuleFinder.findAll()
                             .stream()
                             .map(m -> m.descriptor().name())
-                            .collect(Collectors.toList());
+                            .toList();
         } catch (FindException | ResolutionException | SecurityException ex) {
             throw VMError.shouldNotReachHere("Failed to locate application modules.", ex);
         }
@@ -528,10 +734,11 @@ public final class ModuleLayerFeature implements InternalFeature {
         }
     }
 
-    private void patchRuntimeModuleLayer(ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents) {
+    private void patchRuntimeModuleLayer(AnalysisAccessBase accessImpl, ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents, ServicesCatalog servicesCatalog) {
         try {
-            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(runtimeModuleLayer, nameToModule);
-            moduleLayerFeatureUtils.patchModuleLayerParentsField(runtimeModuleLayer, parents);
+            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(accessImpl, runtimeModuleLayer, nameToModule);
+            moduleLayerFeatureUtils.patchModuleLayerParentsField(accessImpl, runtimeModuleLayer, parents);
+            moduleLayerFeatureUtils.patchModuleLayerServicesCatalogField(accessImpl, runtimeModuleLayer, servicesCatalog);
         } catch (IllegalAccessException ex) {
             throw VMError.shouldNotReachHere("Failed to patch the runtime boot module layer.", ex);
         }
@@ -540,21 +747,25 @@ public final class ModuleLayerFeature implements InternalFeature {
         runtimeModuleLayer.modules();
     }
 
-    private static final class ModuleLayerFeatureUtils {
+    @Platforms(Platform.HOSTED_ONLY.class)
+    private final class ModuleLayerFeatureUtils {
         private final Map<ClassLoader, Map<String, Module>> runtimeModules;
         private final ImageClassLoader imageClassLoader;
+        private final SymbolEncoder encoder = SymbolEncoder.singleton();
 
         private final Module allUnnamedModule;
         private final Set<Module> allUnnamedModuleSet;
         private final Module everyoneModule;
         private final Set<Module> everyoneSet;
-        private final Constructor<Module> moduleConstructor;
+        private final Constructor<Module> namedModuleConstructor;
+        private final Constructor<Module> unnamedModuleConstructor;
         private final Field moduleDescriptorField;
         private final Field moduleLayerField;
         private final Field moduleLoaderField;
         private final Field moduleReadsField;
         private final Field moduleOpenPackagesField;
         private final Field moduleExportedPackagesField;
+        private final Field moduleEnableNativeAccessField;
         private final Method moduleFindModuleMethod;
         private final Method systemModuleFindersAllSystemModulesMethod;
         private final Method systemModuleFindersOfMethod;
@@ -564,10 +775,19 @@ public final class ModuleLayerFeature implements InternalFeature {
         private final Constructor<ModuleLayer> moduleLayerConstructor;
         private final Field moduleLayerNameToModuleField;
         private final Field moduleLayerParentsField;
+        private final Field moduleLayerServicesCatalogField;
+        private final Field moduleLayerModulesField;
+        private final Field moduleReferenceLocationField;
+        private final Field moduleReferenceImplLocationField;
+        private final Set<String> nativeAccessEnabled;
 
         ModuleLayerFeatureUtils(ImageClassLoader cl) {
             runtimeModules = new HashMap<>();
             imageClassLoader = cl;
+            nativeAccessEnabled = NativeImageClassLoaderOptions.EnableNativeAccess.getValue().values().stream()
+                            .flatMap(m -> Arrays.stream(SubstrateUtil.split(m, ",")))
+                            .collect(Collectors.toSet());
+
             Method classGetDeclaredMethods0Method = ReflectionUtil.lookupMethod(Class.class, "getDeclaredFields0", boolean.class);
             try {
                 ModuleSupport.accessModuleByClass(ModuleSupport.Access.OPEN, ModuleLayerFeature.class, Module.class);
@@ -581,18 +801,28 @@ public final class ModuleLayerFeature implements InternalFeature {
                 allUnnamedModuleField.setAccessible(true);
                 allUnnamedModule = (Module) allUnnamedModuleField.get(null);
 
+                if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                    LayeredModuleSingleton singleton = LayeredModuleSingleton.singleton();
+                    singleton.setUnnamedModules(everyoneModule, allUnnamedModule);
+                }
+
                 moduleDescriptorField = findFieldByName(moduleClassFields, "descriptor");
                 moduleLayerField = findFieldByName(moduleClassFields, "layer");
                 moduleLoaderField = findFieldByName(moduleClassFields, "loader");
                 moduleReadsField = findFieldByName(moduleClassFields, "reads");
                 moduleOpenPackagesField = findFieldByName(moduleClassFields, "openPackages");
                 moduleExportedPackagesField = findFieldByName(moduleClassFields, "exportedPackages");
+                // Only present on JDK 19+
+                moduleEnableNativeAccessField = findFieldByName(moduleClassFields, "enableNativeAccess", true);
                 moduleDescriptorField.setAccessible(true);
                 moduleLayerField.setAccessible(true);
                 moduleLoaderField.setAccessible(true);
                 moduleReadsField.setAccessible(true);
                 moduleOpenPackagesField.setAccessible(true);
                 moduleExportedPackagesField.setAccessible(true);
+                if (moduleEnableNativeAccessField != null) {
+                    moduleEnableNativeAccessField.setAccessible(true);
+                }
 
                 allUnnamedModuleSet = new HashSet<>(1);
                 allUnnamedModuleSet.add(allUnnamedModule);
@@ -600,7 +830,8 @@ public final class ModuleLayerFeature implements InternalFeature {
                 everyoneSet = new HashSet<>(1);
                 everyoneSet.add(everyoneModule);
 
-                moduleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class, ModuleDescriptor.class);
+                namedModuleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class, ModuleDescriptor.class);
+                unnamedModuleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class);
                 moduleFindModuleMethod = ReflectionUtil.lookupMethod(Module.class, "findModule", String.class, Map.class, Map.class, List.class);
 
                 systemModuleFindersAllSystemModulesMethod = ReflectionUtil.lookupMethod(SystemModuleFinders.class, "allSystemModules");
@@ -614,9 +845,22 @@ public final class ModuleLayerFeature implements InternalFeature {
                 moduleLayerConstructor = ReflectionUtil.lookupConstructor(ModuleLayer.class, Configuration.class, List.class, Function.class);
                 moduleLayerNameToModuleField = ReflectionUtil.lookupField(ModuleLayer.class, "nameToModule");
                 moduleLayerParentsField = ReflectionUtil.lookupField(ModuleLayer.class, "parents");
+                moduleLayerServicesCatalogField = ReflectionUtil.lookupField(ModuleLayer.class, "servicesCatalog");
+                moduleLayerModulesField = ReflectionUtil.lookupField(ModuleLayer.class, "modules");
+                moduleReferenceLocationField = ReflectionUtil.lookupField(ModuleReference.class, "location");
+                moduleReferenceImplLocationField = ReflectionUtil.lookupField(ModuleReferenceImpl.class, "location");
             } catch (ReflectiveOperationException | NoSuchElementException ex) {
                 throw VMError.shouldNotReachHere("Failed to retrieve fields of the Module/ModuleLayer class.", ex);
             }
+        }
+
+        private boolean isNativeAccessEnabledForRuntimeBootLayerModule(String runtimeModuleName) {
+            return nativeAccessEnabled.contains(runtimeModuleName);
+        }
+
+        private boolean isNativeAccessEnabledForRuntimeModule(Module runtimeModule) {
+            String runtimeModuleName = runtimeModule.getName();
+            return bootLayer == runtimeModule.getLayer() && isNativeAccessEnabledForRuntimeBootLayerModule(runtimeModuleName);
         }
 
         /**
@@ -624,8 +868,19 @@ public final class ModuleLayerFeature implements InternalFeature {
          * versions. This method should be removed once {@link ReflectionUtil} becomes immune to
          * reflection filters.
          */
+        private static Field findFieldByName(Field[] fields, String name, boolean optional) {
+            var res = Arrays.stream(fields).filter(f -> f.getName().equals(name)).findAny();
+            if (res.isPresent()) {
+                return res.get();
+            } else if (optional) {
+                return null;
+            } else {
+                throw shouldNotReachHereAtRuntime();
+            }
+        }
+
         private static Field findFieldByName(Field[] fields, String name) {
-            return Arrays.stream(fields).filter(f -> f.getName().equals(name)).findAny().orElseThrow(VMError::shouldNotReachHereAtRuntime);
+            return findFieldByName(fields, name, false);
         }
 
         private static boolean isModuleSynthetic(Module m) {
@@ -645,15 +900,6 @@ public final class ModuleLayerFeature implements InternalFeature {
             } else {
                 return module.toString();
             }
-        }
-
-        static Set<String> parseModuleSetModifierProperty(String prop) {
-            Set<String> specifiedModules = new HashSet<>();
-            String args = System.getProperty(prop, "");
-            if (!args.isEmpty()) {
-                specifiedModules.addAll(Arrays.asList(SubstrateUtil.split(args, ",")));
-            }
-            return specifiedModules;
         }
 
         static int distanceFromBootModuleLayer(ModuleLayer layer) {
@@ -686,30 +932,11 @@ public final class ModuleLayerFeature implements InternalFeature {
         }
 
         public Module getRuntimeModuleForHostedModule(Module hostedModule, boolean optional) {
-            if (hostedModule.isNamed()) {
-                return getRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), optional);
-            }
-
-            /*
-             * EVERYONE and ALL_UNNAMED modules are unnamed module instances that are used as
-             * markers throughout the JDK and therefore we need them in the image heap.
-             *
-             * We make an optimization that all hosted unnamed modules except EVERYONE module have
-             * the same runtime unnamed module. This does not break the module visibility semantics
-             * as unnamed modules can access all named modules, and visibility modifications that
-             * include unnamed modules do not depend on the actual instance, but only on the fact
-             * that the module is unnamed e.g., calling addExports from/to an unnamed module will do
-             * nothing.
-             */
-
-            if (hostedModule == everyoneModule) {
-                return everyoneModule;
-            } else {
-                return allUnnamedModule;
-            }
+            return getRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), optional);
         }
 
-        public Module getRuntimeModuleForHostedModule(ClassLoader loader, String hostedModuleName, boolean optional) {
+        public Module getRuntimeModuleForHostedModule(ClassLoader hostedLoader, String hostedModuleName, boolean optional) {
+            ClassLoader loader = HostedSubstrateUtil.getRuntimeClassLoader(hostedLoader);
             Map<String, Module> loaderRuntimeModules = runtimeModules.get(loader);
             if (loaderRuntimeModules == null) {
                 if (optional) {
@@ -731,15 +958,23 @@ public final class ModuleLayerFeature implements InternalFeature {
             }
         }
 
-        public Module getOrCreateRuntimeModuleForHostedModule(Module hostedModule, ModuleDescriptor runtimeModuleDescriptor) {
-            if (hostedModule.isNamed()) {
-                return getOrCreateRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), runtimeModuleDescriptor);
+        public Module getOrCreateRuntimeModuleForHostedModule(Module hostedModule, AnalysisAccessBase access) {
+            /*
+             * Special module instances such as ALL_UNNAMED and EVERYONE_MODULE are not replicated
+             * as they only serve as marker modules (all their fields are null, including the loader
+             * field).
+             */
+            if (hostedModule == allUnnamedModule || hostedModule == everyoneModule) {
+                return hostedModule;
             } else {
-                return hostedModule == everyoneModule ? everyoneModule : allUnnamedModule;
+                boolean enableNativeAccess = allowsNativeAccess(hostedModule) || isNativeAccessEnabledForRuntimeBootLayerModule(hostedModule.getName());
+                return getOrCreateRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), hostedModule.getDescriptor(), access, enableNativeAccess);
             }
         }
 
-        public Module getOrCreateRuntimeModuleForHostedModule(ClassLoader loader, String hostedModuleName, ModuleDescriptor runtimeModuleDescriptor) {
+        public Module getOrCreateRuntimeModuleForHostedModule(ClassLoader hostedLoader, String hostedModuleName, ModuleDescriptor runtimeModuleDescriptor, AnalysisAccessBase access,
+                        boolean enableNativeAccess) {
+            ClassLoader loader = HostedSubstrateUtil.getRuntimeClassLoader(hostedLoader);
             synchronized (runtimeModules) {
                 Module runtimeModule = getRuntimeModuleForHostedModule(loader, hostedModuleName, true);
                 if (runtimeModule != null) {
@@ -747,12 +982,19 @@ public final class ModuleLayerFeature implements InternalFeature {
                 }
 
                 try {
-                    runtimeModule = moduleConstructor.newInstance(loader, runtimeModuleDescriptor);
+                    if (hostedModuleName == null) {
+                        runtimeModule = unnamedModuleConstructor.newInstance(loader);
+                    } else {
+                        runtimeModule = namedModuleConstructor.newInstance(loader, runtimeModuleDescriptor);
+                    }
                 } catch (InstantiationException | IllegalAccessException | InvocationTargetException ex) {
                     throw VMError.shouldNotReachHere("Failed to reflectively construct a runtime Module object.", ex);
                 }
                 runtimeModules.putIfAbsent(loader, new HashMap<>());
                 runtimeModules.get(loader).put(hostedModuleName, runtimeModule);
+                if (enableNativeAccess) {
+                    enableNativeAccess(access, runtimeModule);
+                }
                 return runtimeModule;
             }
         }
@@ -764,7 +1006,7 @@ public final class ModuleLayerFeature implements InternalFeature {
          * and removal of VM state updates (otherwise we would be re-defining modules to the host
          * VM).
          */
-        Map<String, Module> synthesizeNameToModule(ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
+        Map<String, Module> synthesizeNameToModule(AnalysisAccessBase access, ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
                         throws IllegalAccessException, InvocationTargetException {
             Configuration cf = runtimeModuleLayer.configuration();
 
@@ -780,11 +1022,13 @@ public final class ModuleLayerFeature implements InternalFeature {
                 ModuleDescriptor descriptor = mref.descriptor();
                 String name = descriptor.name();
                 ClassLoader loader = clf.apply(name);
-                Module m = getOrCreateRuntimeModuleForHostedModule(loader, name, descriptor);
+                boolean nativeAccess = false;
+                Module m = getOrCreateRuntimeModuleForHostedModule(loader, name, descriptor, access, nativeAccess);
                 if (!descriptor.equals(m.getDescriptor())) {
                     moduleDescriptorField.set(m, descriptor);
+                    access.rescanField(m, moduleDescriptorField);
                 }
-                patchModuleLayerField(m, runtimeModuleLayer);
+                patchModuleLayerField(access, m, runtimeModuleLayer);
                 nameToModule.put(name, m);
             }
 
@@ -811,14 +1055,16 @@ public final class ModuleLayerFeature implements InternalFeature {
                     reads.add(allUnnamedModule);
                 }
                 moduleReadsField.set(m, reads);
+                access.rescanField(m, moduleReadsField);
 
                 if (!descriptor.isOpen() && !descriptor.isAutomatic()) {
                     if (descriptor.opens().isEmpty()) {
                         Map<String, Set<Module>> exportedPackages = new HashMap<>(m.getDescriptor().exports().size());
+                        addPreviousLayerExportedPackages(m, exportedPackages, moduleName -> getModule(moduleName, nameToModule));
                         for (ModuleDescriptor.Exports exports : m.getDescriptor().exports()) {
                             String source = exports.source();
                             if (exports.isQualified()) {
-                                Set<Module> targets = new HashSet<>(exports.targets().size());
+                                Set<Module> targets = exportedPackages.getOrDefault(source, new HashSet<>(exports.targets().size()));
                                 for (String target : exports.targets()) {
                                     Module m2 = nameToModule.get(target);
                                     if (m2 != null) {
@@ -833,12 +1079,17 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
                         }
                         moduleExportedPackagesField.set(m, exportedPackages);
+                        if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                            LayeredModuleSingleton.singleton().setExportedPackages(m, exportedPackages);
+                        }
+                        rescan(access, exportedPackages, m, moduleExportedPackagesField);
                     } else {
                         Map<String, Set<Module>> openPackages = new HashMap<>(descriptor.opens().size());
+                        addPreviousLayerOpenPackages(m, openPackages, moduleName -> getModule(moduleName, nameToModule));
                         for (ModuleDescriptor.Opens opens : descriptor.opens()) {
                             String source = opens.source();
                             if (opens.isQualified()) {
-                                Set<Module> targets = new HashSet<>(opens.targets().size());
+                                Set<Module> targets = openPackages.getOrDefault(source, new HashSet<>(opens.targets().size()));
                                 for (String target : opens.targets()) {
                                     Module m2 = (Module) moduleFindModuleMethod.invoke(null, target, Map.of(), nameToModule, runtimeModuleLayer.parents());
                                     if (m2 != null) {
@@ -854,6 +1105,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                         }
 
                         Map<String, Set<Module>> exportedPackages = new HashMap<>(descriptor.exports().size());
+                        addPreviousLayerExportedPackages(m, exportedPackages, moduleName -> getModule(moduleName, nameToModule));
                         for (ModuleDescriptor.Exports exports : descriptor.exports()) {
                             String source = exports.source();
                             Set<Module> openToTargets = openPackages.get(source);
@@ -862,7 +1114,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
 
                             if (exports.isQualified()) {
-                                Set<Module> targets = new HashSet<>(exports.targets().size());
+                                Set<Module> targets = exportedPackages.getOrDefault(source, new HashSet<>(exports.targets().size()));
                                 for (String target : exports.targets()) {
                                     Module m2 = (Module) moduleFindModuleMethod.invoke(null, target, Map.of(), nameToModule, runtimeModuleLayer.parents());
                                     if (m2 != null) {
@@ -881,25 +1133,62 @@ public final class ModuleLayerFeature implements InternalFeature {
 
                         moduleOpenPackagesField.set(m, openPackages);
                         moduleExportedPackagesField.set(m, exportedPackages);
+                        if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                            LayeredModuleSingleton singleton = LayeredModuleSingleton.singleton();
+                            singleton.setOpenPackages(m, openPackages);
+                            singleton.setExportedPackages(m, exportedPackages);
+                        }
+                        rescan(access, openPackages, m, moduleOpenPackagesField);
+                        rescan(access, exportedPackages, m, moduleExportedPackagesField);
                     }
                 }
+                access.rescanObject(m);
             }
 
             return nameToModule;
         }
 
+        private void rescan(AnalysisAccessBase access, Map<String, Set<Module>> packages, Module m, Field modulePackagesField) {
+            if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                access.rescanObject(packages);
+            } else {
+                access.rescanField(m, modulePackagesField);
+            }
+        }
+
+        private Module getModule(String moduleName, Map<String, Module> nameToModule) {
+            if (moduleName.equals(LayeredModuleSingleton.ALL_UNNAMED_MODULE_NAME)) {
+                return allUnnamedModule;
+            } else if (moduleName.equals(LayeredModuleSingleton.EVERYONE_MODULE_NAME)) {
+                return everyoneModule;
+            } else {
+                return nameToModule.get(moduleName);
+            }
+        }
+
+        private Module getModule(String moduleName, AnalysisAccessBase access) {
+            if (moduleName.equals(LayeredModuleSingleton.ALL_UNNAMED_MODULE_NAME)) {
+                return allUnnamedModule;
+            } else if (moduleName.equals(LayeredModuleSingleton.EVERYONE_MODULE_NAME)) {
+                return everyoneModule;
+            } else {
+                return imageClassLoader.findModule(moduleName).map(value -> getOrCreateRuntimeModuleForHostedModule(value, access)).orElse(null);
+            }
+        }
+
         @SuppressWarnings("unchecked")
-        void addReads(Module module, Module other) throws IllegalAccessException {
+        void addReads(AfterAnalysisAccessImpl accessImpl, Module module, Module other) throws IllegalAccessException {
             Set<Module> reads = (Set<Module>) moduleReadsField.get(module);
             if (reads == null) {
                 reads = new HashSet<>(1);
                 moduleReadsField.set(module, reads);
             }
             reads.add(other == null ? allUnnamedModule : other);
+            accessImpl.rescanField(module, moduleReadsField);
         }
 
         @SuppressWarnings("unchecked")
-        void addExports(Module module, String pn, Module other) throws IllegalAccessException {
+        void addExports(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isExported(pn, other)) {
                 return;
             }
@@ -907,6 +1196,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             Map<String, Set<Module>> exports = (Map<String, Set<Module>>) moduleExportedPackagesField.get(module);
             if (exports == null) {
                 exports = new HashMap<>(1);
+                addPreviousLayerExportedPackages(module, exports, moduleName -> getModule(moduleName, accessImpl));
                 moduleExportedPackagesField.set(module, exports);
             }
 
@@ -922,10 +1212,40 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
+            if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                LayeredModuleSingleton.singleton().setExportedPackages(module, exports);
+            }
+            rescan(accessImpl, exports, module, moduleExportedPackagesField);
+        }
+
+        /**
+         * Encodes the "opens" and "exports" package names.
+         */
+        void encodeFields(AfterAnalysisAccessImpl accessImpl, Module module) throws IllegalAccessException {
+            encodeField(moduleExportedPackagesField, accessImpl, module);
+            encodeField(moduleOpenPackagesField, accessImpl, module);
         }
 
         @SuppressWarnings("unchecked")
-        void addOpens(Module module, String pn, Module other) throws IllegalAccessException {
+        private void encodeField(Field field, AfterAnalysisAccessImpl accessImpl, Module module) throws IllegalAccessException {
+            Map<String, Set<Module>> fieldValue = (Map<String, Set<Module>>) field.get(module);
+            if (fieldValue == null) {
+                return;
+            }
+            Map<String, Set<Module>> encodedFieldValue = fieldValue.entrySet().stream()
+                            .collect(Collectors.toMap(
+                                            e -> encoder.encodePackage(e.getKey()),
+                                            Map.Entry::getValue));
+            field.set(module, encodedFieldValue);
+            if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                accessImpl.rescanObject(encodedFieldValue);
+            } else {
+                accessImpl.rescanField(module, field);
+            }
+        }
+
+        @SuppressWarnings("unchecked")
+        void addOpens(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isOpen(pn, other)) {
                 return;
             }
@@ -933,6 +1253,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             Map<String, Set<Module>> opens = (Map<String, Set<Module>>) moduleOpenPackagesField.get(module);
             if (opens == null) {
                 opens = new HashMap<>(1);
+                addPreviousLayerOpenPackages(module, opens, moduleName -> getModule(moduleName, accessImpl));
                 moduleOpenPackagesField.set(module, opens);
             }
 
@@ -948,10 +1269,35 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
+            if (ImageLayerBuildingSupport.buildingImageLayer()) {
+                LayeredModuleSingleton.singleton().setOpenPackages(module, opens);
+            }
+            rescan(accessImpl, opens, module, moduleOpenPackagesField);
         }
 
-        void patchModuleLayerField(Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
+        private void addPreviousLayerOpenPackages(Module module, Map<String, Set<Module>> packages, Function<String, Module> nameToModule) {
+            if (ImageLayerBuildingSupport.buildingApplicationLayer()) {
+                addPreviousLayerPackages(packages, nameToModule, LayeredModuleSingleton.singleton().getOpenPackages(module));
+            }
+        }
+
+        private void addPreviousLayerExportedPackages(Module module, Map<String, Set<Module>> packages, Function<String, Module> nameToModule) {
+            if (ImageLayerBuildingSupport.buildingApplicationLayer()) {
+                addPreviousLayerPackages(packages, nameToModule, LayeredModuleSingleton.singleton().getExportedPackages(module));
+            }
+        }
+
+        private static void addPreviousLayerPackages(Map<String, Set<Module>> packages, Function<String, Module> nameToModule, Map<String, Set<String>> previousOpens) {
+            if (previousOpens != null) {
+                for (var entry : previousOpens.entrySet()) {
+                    packages.put(entry.getKey(), entry.getValue().stream().map(nameToModule).filter(Objects::nonNull).collect(Collectors.toCollection(HashSet::new)));
+                }
+            }
+        }
+
+        void patchModuleLayerField(AnalysisAccessBase accessImpl, Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
             moduleLayerField.set(module, runtimeBootLayer);
+            accessImpl.rescanField(module, moduleLayerField);
         }
 
         void patchModuleLoaderField(Module module, ClassLoader loader) throws IllegalAccessException {
@@ -962,12 +1308,19 @@ public final class ModuleLayerFeature implements InternalFeature {
             return moduleLayerConstructor.newInstance(cf, List.of(), null);
         }
 
-        void patchModuleLayerNameToModuleField(ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
+        void patchModuleLayerNameToModuleField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
             moduleLayerNameToModuleField.set(moduleLayer, nameToModule);
+            accessImpl.rescanField(moduleLayer, moduleLayerNameToModuleField);
         }
 
-        void patchModuleLayerParentsField(ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
+        void patchModuleLayerParentsField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
             moduleLayerParentsField.set(moduleLayer, parents);
+            accessImpl.rescanField(moduleLayer, moduleLayerParentsField);
+        }
+
+        void patchModuleLayerServicesCatalogField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, ServicesCatalog servicesCatalog) throws IllegalAccessException {
+            moduleLayerServicesCatalogField.set(moduleLayer, servicesCatalog);
+            accessImpl.rescanField(moduleLayer, moduleLayerServicesCatalogField);
         }
 
         ClassLoader getClassLoaderForBootLayerModule(String name) {
@@ -1019,6 +1372,58 @@ public final class ModuleLayerFeature implements InternalFeature {
                 return (Set<String>) defaultRootsComputeMethod.invoke(null, finder1, finder2);
             } catch (ReflectiveOperationException e) {
                 throw VMError.shouldNotReachHere("Failed to reflectively invoke DefaultRoots.compute().", e);
+            }
+        }
+
+        /**
+         * In the future, this can be replaced by calling Module#isNativeAccessEnabled(). We
+         * currently do it this way to still be compatible with older JDKs.
+         */
+        boolean allowsNativeAccess(Module module) {
+            assert moduleEnableNativeAccessField != null : "Only available on JDK19+";
+            try {
+                return (boolean) moduleEnableNativeAccessField.get(module);
+            } catch (IllegalAccessException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively access Module.enableNativeAccess.", e);
+            }
+
+        }
+
+        /**
+         * Allows the given module to perform native access.
+         */
+        void enableNativeAccess(AnalysisAccessBase access, Module module) {
+            VMError.guarantee(!allowsNativeAccess(module), "Cannot reset native access");
+            assert moduleEnableNativeAccessField != null : "Only available on JDK19+";
+            try {
+                moduleEnableNativeAccessField.set(module, true);
+                access.rescanField(module, moduleEnableNativeAccessField);
+            } catch (IllegalAccessException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively set Module.enableNativeAccess.", e);
+            }
+        }
+
+        /**
+         * Patch module references that contain URLs with a non-JRT protocol. Module references can
+         * contain URLs that capture hosted directories, e.g.,
+         * {@linkplain "file:///home/user/dir/foo.jar"}. See
+         * {@link com.oracle.svm.hosted.image.DisallowedImageHeapObjectFeature} for more details on
+         * what substrings are detected during the image build.
+         */
+        static final class ResetModuleReferenceLocation implements FieldValueTransformer {
+
+            static final FieldValueTransformer INSTANCE = new ResetModuleReferenceLocation();
+
+            private ResetModuleReferenceLocation() {
+            }
+
+            @Override
+            public Object transform(Object receiver, Object originalValue) {
+                if (originalValue == null || originalValue.toString().startsWith("jrt://")) {
+                    return originalValue;
+                } else {
+                    return null;
+                }
             }
         }
     }
