@@ -32,30 +32,44 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.util.function.BiFunction;
 
-import org.graalvm.compiler.core.common.calc.UnsignedMath;
-import org.graalvm.nativeimage.ImageSingletons;
-
+import com.oracle.graal.pointsto.meta.BaseLayerType;
 import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.graal.snippets.OpenTypeWorldSnippets;
 import com.oracle.svm.core.hub.DynamicHubSupport;
+import com.oracle.svm.core.util.VMError;
+import com.oracle.svm.hosted.OpenTypeWorldFeature;
+
+import jdk.graal.compiler.core.common.calc.UnsignedMath;
+import jdk.graal.compiler.debug.Assertions;
 
 /**
  * This class assigns each type an id, determines stamp metadata, and generates the information
- * needed to perform type checks. Native image type checks are performed by a range check (see
- * {@link com.oracle.svm.core.graal.snippets.TypeSnippets} for specific implementation details).
+ * needed to perform type checks.
  *
  * <p>
- * For the class dependency hierarchy, assigning each type a unique id that can be used within a
- * range check can be accomplished by assigning ids via a preorder traversal of the hierarchy graph.
- * However, because classes/interfaces may implement multiple interfaces, there might not be a
- * single graph traversal which accurately encapsulates all needed range checks. Therefore, instead
- * of a type having a single id, each type has an array of ids, where each index represents the
- * type's id in the specific subset of range checks the index covers.
+ * Within this class are two version of metadata generated depending on whether we are operating on
+ * an open- or closed-type world assumption.
+ *
+ * <h3>Closed-World Type Information</h3>
+ * 
+ * With a closed-world type world assumption, Native image type checks are performed by a range
+ * check (see {@link com.oracle.svm.core.graal.snippets.TypeSnippets} for specific implementation
+ * details).
+ *
+ * <p>
+ * For the class hierarchy, assigning each type a unique id compatible with a range check can be
+ * accomplished by assigning ids via a preorder traversal of the hierarchy graph. However, because
+ * classes/interfaces may implement multiple interfaces, there might not be a single graph traversal
+ * which accurately encapsulates all needed range checks. Therefore, instead of a type having a
+ * single id, each type has an array of ids, where each index represents the type's id in the
+ * specific subset of range checks the index covers.
  *
  * <p>
  * In our implementation, we separately handle type checks for class and interface types: class
@@ -65,11 +79,11 @@ import com.oracle.svm.core.hub.DynamicHubSupport;
  *
  * <p>
  * Given a matrix of boolean values, the consecutive ones property holds if the columns of the
- * matrix can be reordered so that, within each row, all of the set columns are contiguous. When
- * mapping type checks to a boolean matrix, the columns/rows are the types against which the check
- * will be performed. An row-column entry is true if row.isAssignableFrom(column) should be true. If
- * an ordering can be found which ensures all set columns are contiguous, then it is possible to
- * assign ids in a order which satisfies all encapsulated range checks.
+ * matrix can be reordered so that, within each row, all set columns are contiguous. When mapping
+ * type checks to a boolean matrix, the columns/rows are the types against which the check will be
+ * performed. A row-column entry is true if row.isAssignableFrom(column) should be true. If an
+ * ordering can be found which ensures all set columns are contiguous, then it is possible to assign
+ * ids in a way which satisfies all encapsulated range checks.
  *
  * <p>
  * For determining whether a given subset of the range checks satisfies C1P, we use the algorithm
@@ -84,8 +98,21 @@ import com.oracle.svm.core.hub.DynamicHubSupport;
  * <p>
  * Identifying strictly overlapping relations allows the C1P problem to be decomposed and solved in
  * an incremental manner.
+ * 
+ * <h3>Open-World Type Information</h3>
+ * 
+ * Under the open-world type strategy, new (currently unknown) subtypes may be created at a later
+ * point; therefore, the range check implementation described above is not possible to use. Instead,
+ * when checking against an instance class we can use a
+ * <a href="https://dl.acm.org/doi/10.1145/115372.115297">Cohen display</a> to limit the
+ * computational overhead. For checks against interfaces, in the dynamic hub we include a list of
+ * all interface ids the type implements.
+ *
+ * The implementation of the open-world typecheck can be found in {@link OpenTypeWorldSnippets}.
  */
-public class TypeCheckBuilder {
+public final class TypeCheckBuilder {
+    public static final int UNINITIALIZED_TYPECHECK_SLOTS = -1;
+
     private static final int SLOT_CAPACITY = 1 << 16;
 
     private final HostedType objectType;
@@ -93,8 +120,11 @@ public class TypeCheckBuilder {
     private final HostedType serializableType;
     private final Collection<HostedType> allTypes;
 
-    /** We only generate information for Types which are needed {@link #shouldIncludeType}. */
-    private final Set<HostedType> allIncludedTypes;
+    /**
+     * We only generate information for Types which are needed according to
+     * {@link #shouldIncludeType}.
+     */
+    private final LinkedHashSet<HostedType> allIncludedTypes;
 
     /**
      * Within the type graph, roots are types without a super type (i.e. {@link Object} and
@@ -107,34 +137,71 @@ public class TypeCheckBuilder {
      */
     private final List<HostedType> heightOrderedTypes;
 
-    private int numTypeCheckSlots = -1;
+    private int numTypeCheckSlots = UNINITIALIZED_TYPECHECK_SLOTS;
 
     /**
      * Map created to describe the type hierarchy graph.
      */
     private final Map<HostedType, List<HostedType>> subtypeMap;
 
-    public TypeCheckBuilder(Collection<HostedType> types, HostedType objectType, HostedType cloneableType, HostedType serializableType) {
+    /**
+     * We use a custom comparator which checks that there is never a match.
+     */
+    public static final Comparator<HostedType> TYPECHECK_COMPARATOR = (o1, o2) -> {
+        int result = HostedUniverse.TYPE_COMPARATOR.compare(o1, o2);
+        /*
+         * We should be only using this to compare unequal types.
+         */
+        VMError.guarantee(result != 0, "Unexpected match of types %s %s", o1, o2);
+        return result;
+    };
+    private final boolean isClosedTypeWorld;
+
+    public static int buildTypeMetadata(HostedUniverse hUniverse, Collection<HostedType> types, HostedType objectType, HostedType cloneableType, HostedType serializableType) {
+        var builder = new TypeCheckBuilder(types, objectType, cloneableType, serializableType, hUniverse.hostVM().isClosedTypeWorld());
+        if (SubstrateOptions.useClosedTypeWorldHubLayout()) {
+            builder.buildTypeInformation(hUniverse, 0);
+            builder.calculateClosedTypeWorldTypeMetadata();
+            return builder.getNumTypeCheckSlots();
+        } else {
+            int startingTypeID = OpenTypeWorldFeature.loadTypeInfo(builder.heightOrderedTypes);
+            builder.buildTypeInformation(hUniverse, startingTypeID);
+            builder.calculateOpenTypeWorldTypeMetadata();
+            // GR-64324 re-enable once type duplicates get assigned the same typecheckID
+            // assert OpenTypeWorldFeature.validateTypeInfo(builder.heightOrderedTypes);
+            return UNINITIALIZED_TYPECHECK_SLOTS;
+        }
+    }
+
+    private TypeCheckBuilder(Collection<HostedType> types, HostedType objectType, HostedType cloneableType, HostedType serializableType, boolean isClosedTypeWorld) {
         this.allTypes = types;
         this.objectType = objectType;
         this.cloneableType = cloneableType;
         this.serializableType = serializableType;
 
-        allIncludedTypes = allTypes.stream().filter(TypeCheckBuilder::shouldIncludeType).collect(Collectors.toSet());
+        allIncludedTypes = new LinkedHashSet<>();
+
+        allTypes.stream().filter(TypeCheckBuilder::shouldIncludeType).sorted(TYPECHECK_COMPARATOR).forEachOrdered(allIncludedTypes::add);
 
         subtypeMap = computeSubtypeInformation();
 
         /* Finding subtype graph roots. */
         HashSet<HostedType> hasParent = new HashSet<>();
         subtypeMap.forEach((type, subtypes) -> hasParent.addAll(subtypes));
-        allIncludedRoots = allIncludedTypes.stream().filter(t -> !hasParent.contains(t)).collect(Collectors.toList());
+        allIncludedRoots = allIncludedTypes.stream().filter(t -> !hasParent.contains(t)).toList();
 
         heightOrderedTypes = generateHeightOrder(allIncludedRoots, subtypeMap);
+        this.isClosedTypeWorld = isClosedTypeWorld;
     }
 
-    public int getNumTypeCheckSlots() {
-        assert numTypeCheckSlots != -1;
+    private int getNumTypeCheckSlots() {
+        assert numTypeCheckSlots != UNINITIALIZED_TYPECHECK_SLOTS;
         return numTypeCheckSlots;
+    }
+
+    private void setNumTypeCheckSlots(int num) {
+        assert numTypeCheckSlots == UNINITIALIZED_TYPECHECK_SLOTS;
+        numTypeCheckSlots = num;
     }
 
     /**
@@ -190,8 +257,8 @@ public class TypeCheckBuilder {
         }
 
         /* Create a sorted array from this information. */
-        Comparator<HostedType> comparator = Comparator.<HostedType> comparingInt(heightMap::get).thenComparing(HostedUniverse.TYPE_COMPARATOR);
-        return allTypes.stream().sorted(comparator).collect(Collectors.toList());
+        Comparator<HostedType> comparator = Comparator.<HostedType> comparingInt(heightMap::get).thenComparing(TYPECHECK_COMPARATOR);
+        return allTypes.stream().sorted(comparator).toList();
     }
 
     /**
@@ -213,8 +280,8 @@ public class TypeCheckBuilder {
      * Generates a list of immediate subtypes for each included type.
      *
      * Because potentially not all parent array types are present, a type parent map is initially
-     * calculated for the element types. Then, for each dimension, the each present array type is
-     * linked to its nearest reachable parent.
+     * calculated for the element types. Then, for each dimension, each present array type is linked
+     * to its nearest reachable parent.
      *
      * This method assumes that the entire type hierarchy is included for element types, but not for
      * array types.
@@ -223,13 +290,13 @@ public class TypeCheckBuilder {
         Map<HostedType, Set<HostedType>> subtypes = new HashMap<>();
 
         /* Creating an element parent map, where each element type points to its parents. */
-        List<HostedType> allElementTypes = allTypes.stream().filter(t -> !t.isArray()).collect(Collectors.toList());
+        List<HostedType> allElementTypes = allTypes.stream().filter(t -> !t.isArray()).toList();
         Map<HostedType, List<HostedType>> elementParentMap = computeElementParentMap(allElementTypes);
 
         /* Finding the roots of the parent map. */
         Set<HostedType> hasSubtype = new HashSet<>();
         elementParentMap.forEach((child, parents) -> hasSubtype.addAll(parents));
-        List<HostedType> elementParentMapRoots = allElementTypes.stream().filter(t -> !hasSubtype.contains(t)).collect(Collectors.toList());
+        List<HostedType> elementParentMapRoots = allElementTypes.stream().filter(t -> !hasSubtype.contains(t)).toList();
 
         List<HostedType> heightOrderedElements = generateHeightOrder(elementParentMapRoots, elementParentMap);
 
@@ -244,7 +311,7 @@ public class TypeCheckBuilder {
 
         /* Convert values into a sorted list. */
         Map<HostedType, List<HostedType>> result = new HashMap<>();
-        subtypes.forEach((k, v) -> result.put(k, v.stream().sorted(HostedUniverse.TYPE_COMPARATOR).collect(Collectors.toList())));
+        subtypes.forEach((k, v) -> result.put(k, v.stream().sorted(TYPECHECK_COMPARATOR).toList()));
 
         return result;
     }
@@ -340,7 +407,7 @@ public class TypeCheckBuilder {
                 /* Getting filteredArraySubtypesMap roots. */
                 Set<HostedType> typesWithSubtypes = new HashSet<>();
                 filteredArraySubtypesMap.forEach((k, v) -> typesWithSubtypes.addAll(v));
-                List<HostedType> roots = filteredArraySubtypesMap.keySet().stream().filter(t -> !typesWithSubtypes.contains(t)).collect(Collectors.toList());
+                List<HostedType> roots = filteredArraySubtypesMap.keySet().stream().filter(t -> !typesWithSubtypes.contains(t)).toList();
 
                 HostedType parentObjectType = getHighestDimArrayType(objectType, dimension - 1);
                 HostedType parentCloneableType = getHighestDimArrayType(cloneableType, dimension - 1);
@@ -387,16 +454,21 @@ public class TypeCheckBuilder {
      *
      * The stamps are calculated by performing a dataflow analysis of the {@link #subtypeMap}.
      */
-    public void buildTypeInformation(HostedUniverse hUniverse) {
+    public void buildTypeInformation(HostedUniverse hUniverse, int startingTypeID) {
         hUniverse.orderedTypes = heightOrderedTypes;
-        ImageSingletons.lookup(DynamicHubSupport.class).setMaxTypeId(heightOrderedTypes.size());
 
-        for (int i = 0; i < heightOrderedTypes.size(); i++) {
-            HostedType type = heightOrderedTypes.get(i);
-            type.typeID = i;
-            assert subtypeMap.containsKey(type);
-            type.subTypes = subtypeMap.get(type).toArray(new HostedType[0]);
+        int nextTypeID = startingTypeID;
+        for (HostedType type : heightOrderedTypes) {
+            if (type.typeID != -1) {
+                assert type.loadedFromPriorLayer && type.typeID < startingTypeID : "Type initialized multiple times: " + type;
+            } else {
+                type.typeID = nextTypeID++;
+            }
+            VMError.guarantee(type.subTypes == null, "Type initialized multiple times: %s", type);
+            type.subTypes = subtypeMap.get(type).toArray(HostedType.EMPTY_ARRAY);
         }
+
+        DynamicHubSupport.currentLayer().setMaxTypeId(nextTypeID);
 
         /*
          * Search through list in reverse order so that all of a type's subtypes are traversed
@@ -404,6 +476,16 @@ public class TypeCheckBuilder {
          */
         for (int i = heightOrderedTypes.size() - 1; i >= 0; i--) {
             HostedType type = heightOrderedTypes.get(i);
+
+            if (!type.isLeaf() && !isClosedTypeWorld) {
+                /*
+                 * With an open type world analysis we have to assume that a non-final type can have
+                 * multiple instantiated subtypes.
+                 */
+                type.strengthenStampType = type;
+                type.uniqueConcreteImplementation = null;
+                continue;
+            }
 
             HostedType subtypeStampType = null;
             for (HostedType child : subtypeMap.get(type)) {
@@ -458,13 +540,13 @@ public class TypeCheckBuilder {
     /**
      * Calculates all of the needed type check id information and stores it in the HostedTypes.
      */
-    public boolean calculateIDs() {
+    public boolean calculateClosedTypeWorldTypeMetadata() {
         ClassIDBuilder classBuilder = new ClassIDBuilder(objectType, allIncludedRoots, heightOrderedTypes, subtypeMap);
         classBuilder.computeSlots();
         InterfaceIDBuilder interfaceBuilder = new InterfaceIDBuilder(classBuilder.numClassSlots, heightOrderedTypes, subtypeMap);
         interfaceBuilder.computeSlots();
-        generateTypeCheckSlots(classBuilder, interfaceBuilder);
-        assert TypeCheckValidator.compareTypeIDResults(heightOrderedTypes);
+        generateClosedTypeWorldTypeMetadata(classBuilder, interfaceBuilder);
+        assert ClosedTypeWorldTypeCheckValidator.compareTypeIDResults(heightOrderedTypes);
         return true;
     }
 
@@ -472,10 +554,10 @@ public class TypeCheckBuilder {
      * Combines the class and interface slots array into one array of shorts and sets this
      * information in the hosted type.
      */
-    private void generateTypeCheckSlots(ClassIDBuilder classBuilder, InterfaceIDBuilder interfaceBuilder) {
+    private void generateClosedTypeWorldTypeMetadata(ClassIDBuilder classBuilder, InterfaceIDBuilder interfaceBuilder) {
         int numClassSlots = classBuilder.numClassSlots;
-        numTypeCheckSlots = numClassSlots + interfaceBuilder.numInterfaceSlots;
-        int numSlots = getNumTypeCheckSlots();
+        int numSlots = numClassSlots + interfaceBuilder.numInterfaceSlots;
+        setNumTypeCheckSlots(numSlots);
         for (HostedType type : allIncludedTypes) {
             short[] typeCheckSlots = new short[numSlots];
 
@@ -493,7 +575,7 @@ public class TypeCheckBuilder {
                 }
             }
 
-            type.setTypeCheckSlots(typeCheckSlots);
+            type.setClosedTypeWorldTypeCheckSlots(typeCheckSlots);
         }
     }
 
@@ -721,6 +803,12 @@ public class TypeCheckBuilder {
          * ({@link Graph}).
          */
         private static final class Node {
+            static final Node[] EMPTY_ARRAY = new Node[0];
+
+            /**
+             * A link to all interfaces a node implements, including itself if {@link #isInterface}.
+             * This information is used for identifying nodes which can be merged.
+             */
             Node[] sortedAncestors;
             Node[] sortedDescendants;
 
@@ -813,7 +901,7 @@ public class TypeCheckBuilder {
                             Node classNode = classes.get(i);
                             if (classNode == null) {
                                 /*
-                                 * It is possible for this class to have already be merged into
+                                 * It is possible for this class to have already been merged into
                                  * another interface.
                                  */
                                 continue;
@@ -863,7 +951,7 @@ public class TypeCheckBuilder {
                     node.id = compactedNodeArray.size();
                     compactedNodeArray.add(node);
                 }
-                nodes = compactedNodeArray.toArray(new Node[0]);
+                nodes = compactedNodeArray.toArray(Node.EMPTY_ARRAY);
             }
 
             /**
@@ -919,7 +1007,7 @@ public class TypeCheckBuilder {
              */
             void generateDescendantIndex() {
                 Map<Node, Set<Node>> descendantMap = new HashMap<>();
-                Node[] emptyDescendant = new Node[0];
+                Node[] emptyDescendant = Node.EMPTY_ARRAY;
                 ArrayList<Node> interfaceList = new ArrayList<>();
 
                 // iterating through children before parents
@@ -929,7 +1017,7 @@ public class TypeCheckBuilder {
                         // recording descendant information
                         Set<Node> descendants = descendantMap.computeIfAbsent(node, k -> new HashSet<>());
                         descendants.add(node);
-                        Node[] descendantArray = descendants.toArray(new Node[0]);
+                        Node[] descendantArray = descendants.toArray(Node.EMPTY_ARRAY);
                         Arrays.sort(descendantArray, Comparator.comparingInt(n -> n.id));
                         node.sortedDescendants = descendantArray;
                         interfaceList.add(node);
@@ -946,7 +1034,7 @@ public class TypeCheckBuilder {
                         descendantMap.computeIfAbsent(ancestor, k -> new HashSet<>()).add(node);
                     }
                 }
-                this.interfaceNodes = interfaceList.toArray(new Node[0]);
+                this.interfaceNodes = interfaceList.toArray(Node.EMPTY_ARRAY);
             }
 
             /*
@@ -974,7 +1062,7 @@ public class TypeCheckBuilder {
                     if (isTypeInterface) {
                         ancestors.add(newNode);
                     }
-                    Node[] sortedAncestors = ancestors.toArray(new Node[0]);
+                    Node[] sortedAncestors = ancestors.toArray(Node.EMPTY_ARRAY);
                     Arrays.sort(sortedAncestors, Comparator.comparingInt(n -> n.id));
                     newNode.sortedAncestors = sortedAncestors;
 
@@ -984,13 +1072,7 @@ public class TypeCheckBuilder {
                     }
                 }
 
-                Node[] nodeArray = nodes.toArray(new Node[0]);
-                int maxAncestors = -1;
-                for (Node node : nodeArray) {
-                    maxAncestors = Math.max(maxAncestors, node.sortedAncestors.length);
-                }
-
-                return new Graph(nodeArray);
+                return new Graph(nodes.toArray(Node.EMPTY_ARRAY));
             }
 
         }
@@ -1013,7 +1095,7 @@ public class TypeCheckBuilder {
         }
 
         /**
-         * This class manages the a single slot and its constraints.
+         * This class manages a single slot and its constraints.
          */
         private static final class InterfaceSlot {
 
@@ -1192,11 +1274,30 @@ public class TypeCheckBuilder {
                  * 1. Non-intersecting with the previously added nodes. In this case the matrix's
                  * C1P ordering can be added to the end.
                  *
-                 * 2. A subset of one set previously added nodes contains the all of the matrix's
-                 * nodes. In this case, that set can be split and the new C1P ordering can be added
-                 * in this spot.
+                 * 2. A subset of one set previously added nodes contains all of the matrix's nodes.
+                 * In this case, that set can be split and the new C1P ordering can be added in this
+                 * spot.
+                 *
+                 * When there are an equal number of nodes then we order the matrices by the ids of
+                 * the contained nodes.
                  */
-                List<PrimeMatrix> sizeOrderedMatrices = matrices.stream().sorted(Comparator.comparingInt(n -> -(n.containedNodes.cardinality()))).collect(Collectors.toList());
+                Comparator<PrimeMatrix> comparator = Comparator.comparingInt((PrimeMatrix n) -> -1 * n.containedNodes.cardinality()).thenComparing((o1, o2) -> {
+                    BitSet bitSet1 = o1.containedNodes;
+                    BitSet bitSet2 = o2.containedNodes;
+                    assert bitSet1.cardinality() != 0 && bitSet1.cardinality() == bitSet2.cardinality();
+                    int idx1 = bitSet1.nextSetBit(0);
+                    int idx2 = bitSet2.nextSetBit(0);
+                    while (idx1 != -1 && idx2 != -1) {
+                        if (idx1 != idx2) {
+                            return Integer.compare(idx1, idx2);
+                        }
+                        idx1 = bitSet1.nextSetBit(idx1 + 1);
+                        idx2 = bitSet2.nextSetBit(idx2 + 1);
+                    }
+                    throw VMError.shouldNotReachHere("Unable to differentiate between two Prime Matrices.");
+                });
+
+                List<PrimeMatrix> sizeOrderedMatrices = matrices.stream().sorted(comparator).toList();
 
                 List<BitSet> c1POrdering = new ArrayList<>();
                 BitSet coveredNodes = new BitSet();
@@ -1269,8 +1370,8 @@ public class TypeCheckBuilder {
 
         /**
          * Within consecutive one property (C1P) testing literature, in a graph where each
-         * {@link ContiguousGroup} is a node and edges are between nodes that that "strictly
-         * overlap", the graph can be decomposed into connected subgraphs, known as prime matrices.
+         * {@link ContiguousGroup} is a node and edges are between nodes that "strictly overlap",
+         * the graph can be decomposed into connected subgraphs, known as prime matrices.
          * <p>
          * Once the graph's prime matrices have been identified, it is sufficient to test each prime
          * matrix individually for the C1P property.
@@ -1368,7 +1469,7 @@ public class TypeCheckBuilder {
                  * matrix.
                  */
 
-                /* Updating the contained groups and adding the connect prime matrix's edges. */
+                /* Updating the contained groups and adding the connected prime matrix's edges. */
                 for (PrimeMatrix matrix : matrices) {
                     List<ContiguousGroup> otherGroup = matrix.containedGroups;
                     assert otherGroup.stream().noneMatch(containedGroups::contains) : "the intersection between all prime matrices should be null";
@@ -1639,36 +1740,43 @@ public class TypeCheckBuilder {
             ArrayList<InterfaceSlot> slots = new ArrayList<>();
             slots.add(new InterfaceSlot(slots.size()));
 
-            // assigning interfaces to interface slots
-            for (Node node : graph.interfaceNodes) {
+            /*
+             * Assigning interfaces to interface slots.
+             *
+             * The assignment order is such that the interfaces with the most descendants will be
+             * assigned first. As they will have the most conflicts, it is better to assign them
+             * while the slots are more free.
+             */
+            Comparator<Node> comparator = Comparator.comparingInt((Node n) -> -1 * n.sortedDescendants.length).thenComparing((n) -> n.sortedAncestors.length).thenComparing((n1, n2) -> {
+                int result = Integer.compare(n1.id, n2.id);
+                VMError.guarantee(result != 0, "Cannot differentiate between two nodes: %s %s", n1, n2);
+                return result;
+            });
+            List<Node> iterationOrder = Arrays.stream(graph.interfaceNodes).sorted(comparator).toList();
+            for (Node node : iterationOrder) {
 
-                // first trying to adding grouping to existing slot
+                // first trying to add grouping to existing slot
                 boolean foundAssignment = false;
-                boolean redoSort = false;
                 for (InterfaceSlot slot : slots) {
                     InterfaceSlot.AddGroupingResult result = slot.tryAddGrouping(node);
                     if (result == InterfaceSlot.AddGroupingResult.SUCCESS) {
                         foundAssignment = true;
                         node.type.setTypeCheckSlot(getShortValue(slot.id + startingSlotNum));
                         break;
-                    } else if (result == InterfaceSlot.AddGroupingResult.CAPACITY_OVERFLOW) {
-                        /*
-                         * If running into capacity overflows, should try to sort slots so that
-                         * emptier slots are encountered first.
-                         */
-                        redoSort = true;
                     }
+                    /*
+                     * Note we can check for InterfaceSlot.AddGroupingResult.CAPACITY_OVERFLOW
+                     * events here and then move the full slots back to the end of the slot list.
+                     * However, this should be an extremely rare event.
+                     */
                 }
                 if (!foundAssignment) {
                     /* A new slot is needed to satisfy this grouping. */
                     InterfaceSlot newSlot = new InterfaceSlot(slots.size());
                     InterfaceSlot.AddGroupingResult result = newSlot.tryAddGrouping(node);
-                    assert result == InterfaceSlot.AddGroupingResult.SUCCESS : "must be able to add first node";
+                    VMError.guarantee(result == InterfaceSlot.AddGroupingResult.SUCCESS, "could not find a slot");
                     node.type.setTypeCheckSlot(getShortValue(newSlot.id + startingSlotNum));
                     slots.add(newSlot);
-                }
-                if (redoSort) {
-                    slots.sort(Comparator.comparingInt(slot -> slot.numReservedIDs));
                 }
             }
 
@@ -1726,7 +1834,7 @@ public class TypeCheckBuilder {
         }
     }
 
-    private static final class TypeCheckValidator {
+    private static final class ClosedTypeWorldTypeCheckValidator {
 
         static boolean compareTypeIDResults(List<HostedType> types) {
             if (!SubstrateOptions.DisableTypeIdResultVerification.getValue()) {
@@ -1759,8 +1867,188 @@ public class TypeCheckBuilder {
             int typeCheckStart = Short.toUnsignedInt(superType.getTypeCheckStart());
             int typeCheckRange = Short.toUnsignedInt(superType.getTypeCheckRange());
             int typeCheckSlot = Short.toUnsignedInt(superType.getTypeCheckSlot());
-            int checkedTypeID = Short.toUnsignedInt(checkedType.getTypeCheckSlots()[typeCheckSlot]);
+            int checkedTypeID = Short.toUnsignedInt(checkedType.getClosedTypeWorldTypeCheckSlots()[typeCheckSlot]);
             return UnsignedMath.belowThan(checkedTypeID - typeCheckStart, typeCheckRange);
+        }
+    }
+
+    private static final class OpenTypeWorldTypeInfo {
+
+        /**
+         * Within {@link com.oracle.svm.core.hub.DynamicHub} typecheck metadata the ids of the
+         * interfaces will be appended to the end of the {@link #classDisplay}.
+         */
+        Set<HostedType> implementedInterfaces = new HashSet<>();
+
+        /**
+         * This is the <a href="https://dl.acm.org/doi/10.1145/115372.115297">Cohen display</a> used
+         * to keep track of the instance class type hierarchy.
+         */
+        int[] classDisplay;
+
+        /*
+         * When there is no parent, then there is only a single element in the display.
+         */
+        private void computeClassDisplay(int typeID) {
+            assert classDisplay == null;
+            classDisplay = new int[]{typeID};
+        }
+
+        private void computeClassDisplay(int[] parent, int typeID) {
+            assert classDisplay == null;
+            assert Arrays.stream(parent).noneMatch(id -> id == typeID) : Assertions.errorMessage("Redundant entry in class display", Arrays.toString(parent), typeID);
+            classDisplay = new int[parent.length + 1];
+            System.arraycopy(parent, 0, classDisplay, 0, parent.length);
+            classDisplay[parent.length] = typeID;
+        }
+
+        private void copyClassDisplay(int[] display) {
+            assert classDisplay == null;
+            classDisplay = display;
+        }
+    }
+
+    public void calculateOpenTypeWorldTypeMetadata() {
+        Map<HostedType, OpenTypeWorldTypeInfo> typeInfoMap = new HashMap<>();
+
+        BiFunction<HostedType, Boolean, OpenTypeWorldTypeInfo> getTypeInfo = (type, allowMissing) -> {
+            if (allowMissing) {
+                typeInfoMap.computeIfAbsent(type, (k) -> new OpenTypeWorldTypeInfo());
+            }
+
+            OpenTypeWorldTypeInfo typeInfo = typeInfoMap.get(type);
+            assert typeInfo != null;
+            return typeInfo;
+        };
+
+        /*
+         * Mark all root types as singleton displays.
+         */
+        for (HostedType type : allIncludedRoots) {
+            getTypeInfo.apply(type, true).computeClassDisplay(type.typeID);
+        }
+
+        for (HostedType type : heightOrderedTypes) {
+            OpenTypeWorldTypeInfo info = getTypeInfo.apply(type, false);
+            if (info.classDisplay == null) {
+                assert isInterface(type);
+                /*
+                 * Interfaces are all indirectly a subtype of the object type (of the corresponding
+                 * dimension).
+                 *
+                 * Because not all array types are available, we must inherit from the object
+                 * (array) type of the closest dimension.
+                 */
+                int dimension = type.getArrayDimension();
+                HostedType displayType = objectType.getArrayClass(dimension);
+                while (displayType == null) {
+                    dimension--;
+                    displayType = objectType.getArrayClass(dimension);
+                }
+                info.copyClassDisplay(getTypeInfo.apply(displayType, false).classDisplay);
+            }
+
+            if (isInterface(type)) {
+                info.implementedInterfaces.add(type);
+            }
+
+            subtypeMap.get(type).forEach(subtype -> {
+                getTypeInfo.apply(subtype, true).implementedInterfaces.addAll(info.implementedInterfaces);
+                if (!isInterface(type)) {
+                    // assign class display information to subtypes
+                    getTypeInfo.apply(subtype, true).computeClassDisplay(info.classDisplay, subtype.getTypeID());
+                }
+            });
+        }
+
+        generateOpenTypeWorldTypeMetadata(typeInfoMap);
+        assert OpenTypeWorldTypeCheckValidator.compareTypeIDResults(heightOrderedTypes);
+    }
+
+    /**
+     * Stores type check information in the HostedTypes.
+     */
+    private static void generateOpenTypeWorldTypeMetadata(Map<HostedType, OpenTypeWorldTypeInfo> typeInfoMap) {
+        for (var entry : typeInfoMap.entrySet()) {
+            HostedType type = entry.getKey();
+            OpenTypeWorldTypeInfo info = entry.getValue();
+            int idDepth = isInterface(type) ? -1 : info.classDisplay.length - 1;
+            if (idDepth >= 0) {
+                assert info.classDisplay[idDepth] == type.typeID : String.format("Mismatch between class display and type. idDepth: %s typeID: %s info: %s ", idDepth, type.typeID, info);
+            }
+
+            int numInterfaceTypes = info.implementedInterfaces.size();
+            List<HostedType> orderedInterfaces = info.implementedInterfaces.stream().sorted(Comparator.comparingInt(HostedType::getTypeID)).toList();
+            int[] interfaceTypeIDs = orderedInterfaces.stream().mapToInt(HostedType::getTypeID).toArray();
+            int numClassTypes = info.classDisplay.length;
+            int[] typeIDSlots = new int[numClassTypes + numInterfaceTypes];
+            System.arraycopy(info.classDisplay, 0, typeIDSlots, 0, numClassTypes);
+            System.arraycopy(interfaceTypeIDs, 0, typeIDSlots, numClassTypes, numInterfaceTypes);
+            type.setOpenTypeWorldTypeCheckSlots(typeIDSlots);
+            type.setTypeIDDepth(idDepth);
+            type.setNumInterfaceTypes(numInterfaceTypes);
+            type.setNumClassTypes(numClassTypes);
+            type.typeCheckInterfaceOrder = orderedInterfaces.toArray(HostedType.EMPTY_ARRAY);
+        }
+    }
+
+    private static final class OpenTypeWorldTypeCheckValidator {
+
+        static String printTypeInfo(HostedType type) {
+            return String.format("%s%ntypeID: %s, typeDepth: %s, numClasses: %s, numInterfaces: %s%nslots: %s", type, type.getTypeID(), type.getTypeIDDepth(), type.getNumClassTypes(),
+                            type.getNumInterfaceTypes(), Arrays.toString(type.getOpenTypeWorldTypeCheckSlots()));
+        }
+
+        static boolean compareTypeIDResults(List<HostedType> types) {
+            if (!SubstrateOptions.DisableTypeIdResultVerification.getValue()) {
+                List<HostedType> nonBaseLayerTypes = types.stream().filter(t -> !(t.getWrapped().getWrapped() instanceof BaseLayerType)).toList();
+                Set<String> mismatchedTypes = ConcurrentHashMap.newKeySet();
+                nonBaseLayerTypes.parallelStream().forEach(superType -> {
+                    for (HostedType checkedType : nonBaseLayerTypes) {
+                        boolean hostedCheck = superType.isAssignableFrom(checkedType);
+                        boolean runtimeCheck = runtimeIsAssignableFrom(superType, checkedType);
+                        boolean checksMatch = hostedCheck == runtimeCheck;
+                        if (!checksMatch) {
+                            StringBuilder message = new StringBuilder();
+                            message.append(String.format("%n********Type checks do not match:********%n"));
+                            message.append(String.format("super type: %s%n", printTypeInfo(superType)));
+                            message.append(String.format("checked type: %s%n", printTypeInfo(checkedType)));
+                            message.append(String.format("hosted check: %s%n", hostedCheck));
+                            message.append(String.format("runtime check: %s%n", runtimeCheck));
+                            mismatchedTypes.add(message.toString());
+                        }
+                    }
+                });
+                if (!mismatchedTypes.isEmpty()) {
+                    mismatchedTypes.forEach(System.err::println);
+                    throw new AssertionError("Verification of type assignment failed");
+                }
+            }
+            return true;
+        }
+
+        static boolean runtimeIsAssignableFrom(HostedType superType, HostedType checkedType) {
+            int typeID = superType.getTypeID();
+            int typeIDDepth = superType.getTypeIDDepth();
+            int[] typeIDSlots = checkedType.getOpenTypeWorldTypeCheckSlots();
+            int numClassTypes = checkedType.getNumClassTypes();
+            if (typeIDDepth >= 0) {
+                // this is a class check
+                if (typeIDDepth < numClassTypes) {
+                    int classID = typeIDSlots[typeIDDepth];
+                    return classID == typeID;
+                }
+            } else {
+                // this is an interface
+                int numInterfaceTypes = checkedType.getNumInterfaceTypes();
+                for (int i = 0; i < numInterfaceTypes; i++) {
+                    int interfaceID = typeIDSlots[numClassTypes + i];
+                    if (interfaceID == typeID) {
+                        return true;
+                    }
+                }
+            }
+            return false;
         }
     }
 }
