@@ -26,14 +26,18 @@ package com.oracle.svm.truffle.tck;
 
 import static com.oracle.graal.pointsto.reports.ReportUtils.report;
 
-import java.io.FileDescriptor;
 import java.io.IOException;
+import java.lang.invoke.MethodHandle;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+import java.lang.reflect.Proxy;
 import java.math.BigInteger;
-import java.net.InetAddress;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLStreamHandler;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.Permission;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -41,54 +45,70 @@ import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.SynchronousQueue;
 import java.util.function.BooleanSupplier;
+import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.function.ToLongBiFunction;
+import java.util.spi.LocaleServiceProvider;
 import java.util.stream.Collectors;
 
-import org.graalvm.compiler.debug.DebugContext;
-import org.graalvm.compiler.graph.NodeInputList;
-import org.graalvm.compiler.nodes.Invoke;
-import org.graalvm.compiler.nodes.PiNode;
-import org.graalvm.compiler.nodes.StructuredGraph;
-import org.graalvm.compiler.nodes.ValueNode;
-import org.graalvm.compiler.nodes.java.NewInstanceNode;
-import org.graalvm.compiler.options.Option;
-import org.graalvm.compiler.options.OptionType;
-import org.graalvm.compiler.truffle.runtime.OptimizedCallTarget;
+import com.oracle.svm.hosted.code.FactoryMethod;
+import com.oracle.svm.util.LogUtils;
+import jdk.graal.compiler.nodes.ConstantNode;
+import jdk.graal.compiler.nodes.virtual.AllocatedObjectNode;
+import jdk.vm.ci.meta.JavaConstant;
+import org.graalvm.nativebridge.BinaryMarshaller;
+import org.graalvm.nativebridge.DispatchHandler;
+import org.graalvm.nativebridge.IsolateCreateException;
+import org.graalvm.nativebridge.ProcessIsolate;
+import org.graalvm.nativebridge.ProcessIsolateConfig;
+import org.graalvm.nativebridge.ProcessIsolateThread;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.polyglot.io.FileSystem;
 
 import com.oracle.graal.pointsto.BigBang;
+import com.oracle.graal.pointsto.infrastructure.OriginalClassProvider;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.AnalysisType;
 import com.oracle.graal.pointsto.meta.InvokeInfo;
-import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.UnsafeMemoryUtil;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
+import com.oracle.svm.core.option.AccumulatingLocatableMultiOptionValue;
 import com.oracle.svm.core.option.BundleMember;
 import com.oracle.svm.core.option.HostedOptionKey;
-import com.oracle.svm.core.option.LocatableMultiOptionValue;
 import com.oracle.svm.core.util.UserError;
-import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl;
-import com.oracle.svm.hosted.ImageClassLoader;
 import com.oracle.svm.hosted.SVMHost;
+import com.oracle.svm.hosted.SharedArenaSupport;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
 import com.oracle.svm.util.ClassUtil;
 import com.oracle.truffle.api.TruffleLanguage;
+import com.oracle.truffle.runtime.OptimizedCallTarget;
 
-import jdk.vm.ci.common.JVMCIError;
+import jdk.graal.compiler.debug.DebugContext;
+import jdk.graal.compiler.graph.Node;
+import jdk.graal.compiler.graph.NodeInputList;
+import jdk.graal.compiler.graph.NodeSourcePosition;
+import jdk.graal.compiler.nodes.Invoke;
+import jdk.graal.compiler.nodes.PiNode;
+import jdk.graal.compiler.nodes.StructuredGraph;
+import jdk.graal.compiler.nodes.ValueNode;
+import jdk.graal.compiler.nodes.java.NewInstanceNode;
+import jdk.graal.compiler.nodes.spi.TrackedUnsafeAccess;
+import jdk.graal.compiler.options.Option;
+import jdk.graal.compiler.options.OptionType;
 import jdk.vm.ci.meta.ModifiersProvider;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
-import sun.misc.Unsafe;
 
 /**
  * A Truffle TCK {@code Feature} detecting privileged calls done by Truffle language. The
@@ -99,12 +119,36 @@ import sun.misc.Unsafe;
  * To execute the {@code PermissionsFeature} you need to enable it using
  * {@code --features=com.oracle.svm.truffle.tck.PermissionsFeature} native-image option, specify
  * report file using {@code -H:TruffleTCKPermissionsReportFile} option and specify the language
- * packages by {@code -H:TruffleTCKPermissionsLanguagePackages} option. You also need to disable
- * folding of {@code System.getSecurityManager} using {@code -H:-FoldSecurityManagerGetter} option.
+ * packages by {@code -H:TruffleTCKPermissionsLanguagePackages} option.
  */
 public class PermissionsFeature implements Feature {
 
     private static final String CONFIG = "truffle-language-permissions-config.json";
+
+    public enum ActionKind {
+        Ignore,
+        Warn,
+        Throw
+    }
+
+    /**
+     * Specifies how privileged method violations are reported. See
+     * {@link Options#TruffleTCKCollectMode}.
+     */
+    public enum CollectMode {
+        /**
+         * Reports only one violation in total.
+         */
+        Single,
+        /**
+         * Reports one call path per privileged method used.
+         */
+        SinglePrivilegedMethodUsage,
+        /**
+         * Reports all call paths for all violations.
+         */
+        All
+    }
 
     public static class Options {
         @Option(help = "Path to file where to store report of Truffle language privilege access.")//
@@ -112,13 +156,31 @@ public class PermissionsFeature implements Feature {
 
         @BundleMember(role = BundleMember.Role.Input)//
         @Option(help = "Comma separated list of exclude files.")//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Paths> TruffleTCKPermissionsExcludeFiles = new HostedOptionKey<>(LocatableMultiOptionValue.Paths.buildWithCommaDelimiter());
+        public static final HostedOptionKey<AccumulatingLocatableMultiOptionValue.Paths> TruffleTCKPermissionsExcludeFiles = new HostedOptionKey<>(
+                        AccumulatingLocatableMultiOptionValue.Paths.buildWithCommaDelimiter());
 
         @Option(help = "Maximal depth of a stack trace.", type = OptionType.Expert)//
         public static final HostedOptionKey<Integer> TruffleTCKPermissionsMaxStackTraceDepth = new HostedOptionKey<>(-1);
 
         @Option(help = "Maximum number of erroneous privileged accesses reported.", type = OptionType.Expert)//
         public static final HostedOptionKey<Integer> TruffleTCKPermissionsMaxErrors = new HostedOptionKey<>(100);
+
+        @Option(help = """
+                        Specifies how unused methods in the language allow list should be handled.
+                        Available options are:
+                          "Ignore": Do not report unused methods in the allow list.
+                          "Warn": Log a warning message to stderr.
+                          "Throw" (default): Throw an exception and abort the native-image build process.""", type = OptionType.Expert)//
+        public static final HostedOptionKey<ActionKind> TruffleTCKUnusedAllowListEntriesAction = new HostedOptionKey<>(ActionKind.Throw);
+
+        @Option(help = """
+                        Specifies how privileged method violations are reported.
+                        Available options:
+                          - Single: Reports only one violation in total.
+                          - SinglePrivilegedMethodUsage: Reports one call path per privileged method used.
+                          - All: Reports all call paths for all violations.
+                        """, type = OptionType.Expert)//
+        public static final HostedOptionKey<CollectMode> TruffleTCKCollectMode = new HostedOptionKey<>(CollectMode.SinglePrivilegedMethodUsage);
     }
 
     /**
@@ -134,17 +196,32 @@ public class PermissionsFeature implements Feature {
     /**
      * List of safe packages.
      */
-    private static final Set<String> compilerPackages;
+    private static final Set<String> safePackages;
     static {
-        compilerPackages = new HashSet<>();
-        compilerPackages.add("org.graalvm.");
-        compilerPackages.add("com.oracle.graalvm.");
-        compilerPackages.add("com.oracle.svm.core.");
-        compilerPackages.add("com.oracle.truffle.api.");
-        compilerPackages.add("com.oracle.truffle.polyglot.");
-        compilerPackages.add("com.oracle.truffle.host.");
-        compilerPackages.add("com.oracle.truffle.nfi.");
-        compilerPackages.add("com.oracle.truffle.object.");
+        safePackages = new HashSet<>();
+        safePackages.add("org.graalvm.polyglot.");
+        safePackages.add("org.graalvm.home.");
+        safePackages.add("jdk.graal.compiler.");
+        safePackages.add("com.oracle.graalvm.");
+        safePackages.add("com.oracle.svm.core.");
+        safePackages.add("com.oracle.truffle.api.");
+        safePackages.add("com.oracle.truffle.polyglot.");
+        safePackages.add("com.oracle.truffle.host.");
+        safePackages.add("com.oracle.truffle.nfi.");
+        safePackages.add("com.oracle.truffle.object.");
+        safePackages.add("com.oracle.truffle.runtime.");
+        safePackages.add("com.oracle.truffle.runtime.debug.");
+        safePackages.add("com.oracle.truffle.runtime.jfr.");
+        safePackages.add("com.oracle.truffle.runtime.jfr.impl.");
+        safePackages.add("com.oracle.truffle.runtime.hotspot.");
+        safePackages.add("com.oracle.truffle.runtime.hotspot.libgraal.");
+        safePackages.add("com.oracle.truffle.runtime.enterprise.");
+        safePackages.add("com.oracle.truffle.sandbox.enterprise.");
+        safePackages.add("com.oracle.truffle.polyglot.enterprise.");
+        safePackages.add("com.oracle.truffle.object.enterprise.");
+        safePackages.add("com.oracle.svm.truffle.api.");
+        safePackages.add("com.oracle.svm.truffle.isolated.");
+        safePackages.add("com.oracle.svm.enterprise.truffle.");
     }
 
     private static final Set<ClassLoader> systemClassLoaders;
@@ -156,20 +233,34 @@ public class PermissionsFeature implements Feature {
     }
 
     /**
+     * Methods which should not be found.
+     */
+    private final Set<BaseMethodNode> deniedMethods = new HashSet<>();
+
+    /**
      * Path to store report into.
      */
     private Path reportFilePath;
+
     /**
-     * Methods which are allowed to do privileged calls without being reported.
+     * JDK methods which are allowed to do privileged calls without being reported.
      */
-    private Set<? extends BaseMethodNode> whiteList;
+    private Set<? extends BaseMethodNode> platformAllowList;
+
+    /**
+     * Language methods which are allowed to do privileged calls without being reported.
+     */
+    private Map<BaseMethodNode, Boolean> languageAllowList;
+
+    private Set<CallGraphFilter> contextFilters;
 
     /**
      * Classes for reflective accesses which are opaque for permission analysis.
      */
-    private AnalysisType reflectionFieldAccessorFactory;
 
     private InlinedUnsafeMethodNode inlinedUnsafeCall;
+
+    private Class<?> sunMiscUnsafe;
 
     @Override
     public String getDescription() {
@@ -177,18 +268,112 @@ public class PermissionsFeature implements Feature {
     }
 
     @Override
-    public void duringSetup(DuringSetupAccess access) {
-        if (SubstrateOptions.FoldSecurityManagerGetter.getValue()) {
-            UserError.abort("%s requires -H:-FoldSecurityManagerGetter option.", ClassUtil.getUnqualifiedName(getClass()));
-        }
+    public void beforeAnalysis(BeforeAnalysisAccess access) {
         String reportFile = Options.TruffleTCKPermissionsReportFile.getValue();
         if (reportFile == null) {
             UserError.abort("Path to report file must be given by -H:TruffleTCKPermissionsReportFile option.");
         }
         reportFilePath = Paths.get(reportFile);
 
-        FeatureImpl.DuringSetupAccessImpl accessImpl = (FeatureImpl.DuringSetupAccessImpl) access;
+        if (ModuleLayer.boot().findModule("jdk.unsupported").isPresent()) {
+            sunMiscUnsafe = access.findClassByName("sun.misc.Unsafe");
+        }
+
+        var accessImpl = (FeatureImpl.BeforeAnalysisAccessImpl) access;
+        initializeDeniedMethods(accessImpl);
+
+        BigBang bb = accessImpl.getBigBang();
+        contextFilters = new HashSet<>();
+        Collections.addAll(contextFilters, new SafeInterruptRecognizer(bb), new SafePrivilegedRecognizer(bb),
+                        new SafeReflectionRecognizer(bb), new SafeSetThreadNameRecognizer(bb),
+                        new SafeLocaleServiceProvider(bb), new SafeSystemGetProperty(bb),
+                        new SafeURLOf(bb));
+
+        /*
+         * Ensure methods which are either deniedMethods or on the allow list are never inlined into
+         * methods. These methods are important for identifying violations.
+         */
+        Set<AnalysisMethod> preventInlineBeforeAnalysis = new HashSet<>();
+        deniedMethods.stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
+        platformAllowList.stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
+        languageAllowList.keySet().stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
+        contextFilters.stream().map(CallGraphFilter::getInspectedMethods).forEach(preventInlineBeforeAnalysis::addAll);
+
+        accessImpl.getHostVM().registerNeverInlineTrivialHandler((caller, callee) -> {
+            if (!caller.isOriginalMethod()) {
+                // we only care about tracing original methods
+                return false;
+            }
+            if (preventInlineBeforeAnalysis.contains(callee)) {
+                return true;
+            }
+            // We must maintain the boundary of entering a safe class
+            return !isSafeClass(caller.getDeclaringClass()) && isSafeClass(callee.getDeclaringClass());
+        });
+
         accessImpl.getHostVM().keepAnalysisGraphs();
+
+        if (SharedArenaSupport.isAvailable()) {
+            /*
+             * Due to the enforced call boundary when entering a safe class, calls to methods of
+             * class UnsafeMemoryUtil may remain in @Scoped-annotated methods. Since this feature is
+             * only used for reporting and the resulting image never gets executed, we allow those
+             * calls to pass verification.
+             */
+            SharedArenaSupport.singleton().registerSafeArenaAccessorClass(accessImpl.getMetaAccess(), UnsafeMemoryUtil.class);
+        }
+    }
+
+    private void initializeDeniedMethods(FeatureImpl.BeforeAnalysisAccessImpl accessImpl) {
+        BigBang bb = accessImpl.getBigBang();
+        if (sunMiscUnsafe != null) {
+            inlinedUnsafeCall = new InlinedUnsafeMethodNode(bb.getMetaAccess().lookupJavaType(sunMiscUnsafe));
+        }
+        String featureName = ClassUtil.getUnqualifiedName(getClass());
+        AllowListParser allowListparser = new AllowListParser(accessImpl.getImageClassLoader(), bb);
+        ConfigurationParserUtils.parseAndRegisterConfigurations(allowListparser, accessImpl.getImageClassLoader(), featureName,
+                        CONFIG,
+                        List.of(),
+                        List.of(getClass().getPackage().getName().replace('.', '/') + "/resources/jdk_allowed_methods.json"));
+        platformAllowList = allowListparser.getMethods();
+        allowListparser = new AllowListParser(accessImpl.getImageClassLoader(), bb);
+        ConfigurationParserUtils.parseAndRegisterConfigurations(allowListparser, accessImpl.getImageClassLoader(), featureName,
+                        CONFIG,
+                        Options.TruffleTCKPermissionsExcludeFiles.getValue().values(),
+                        List.of());
+        languageAllowList = allowListparser.getMethods().stream().collect(Collectors.toMap(Function.identity(), key -> false));
+
+        PrivilegedListParser privilegedListParser = new PrivilegedListParser(accessImpl.getImageClassLoader(), bb, ModuleLayer.boot().modules());
+        ConfigurationParserUtils.parseAndRegisterConfigurations(privilegedListParser, accessImpl.getImageClassLoader(), "featureName",
+                        CONFIG,
+                        List.of(),
+                        List.of(getClass().getPackage().getName().replace('.', '/') + "/resources/jdk_privileged_methods.json"));
+        deniedMethods.addAll(privilegedListParser.getMethods());
+
+        if (sunMiscUnsafe != null) {
+            deniedMethods.addAll(findMethods(bb, sunMiscUnsafe, ModifiersProvider::isPublic));
+        }
+        // The type of the host Java NIO FileSystem.
+        // The FileSystem obtained from the FileSystem.newDefaultFileSystem() is in the Truffle
+        // package but
+        // can be directly used by a language. We need to include it into deniedMethods.
+        deniedMethods.addAll(findMethods(bb, FileSystem.newDefaultFileSystem().getClass(), ModifiersProvider::isPublic));
+        // JDK 19 introduced BigInteger.parallelMultiply that uses the ForkJoinPool.
+        // We deny this method but explicitly allow non-parallel multiply (cf.
+        // jdk_allowed_methods.json).
+        deniedMethods.addAll(findMethods(bb, BigInteger.class, (m) -> m.getName().startsWith("parallel")));
+        // We deny SynchronousQueue as it creates ForkJoinWorkerThread.
+        deniedMethods.addAll(findConstructors(bb, SynchronousQueue.class, (m) -> "<init>".equals(m.getName())));
+        // Reflective calls
+        deniedMethods.addAll(findMethods(bb, Method.class, (m) -> m.getName().equals("invoke") && m.isPublic() && m.getParameters().length == 2));
+        deniedMethods.addAll(findMethods(bb, Constructor.class, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 1));
+        deniedMethods.addAll(findMethods(bb, MethodHandle.class, (m) -> m.getName().startsWith("invoke") && m.isPublic()));
+        deniedMethods.addAll(findMethods(bb, Class.class, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 0));
+        // ProcessIsolate entry method
+        deniedMethods.addAll(findMethods(bb, ProcessIsolate.class, (m) -> m.getName().equals("spawnProcessIsolate")));
+        if (inlinedUnsafeCall != null) {
+            deniedMethods.add(inlinedUnsafeCall);
+        }
     }
 
     @Override
@@ -201,45 +386,22 @@ public class PermissionsFeature implements Feature {
         }
         FeatureImpl.AfterAnalysisAccessImpl accessImpl = (FeatureImpl.AfterAnalysisAccessImpl) access;
         DebugContext debugContext = accessImpl.getDebugContext();
+        CollectMode collectMode = Options.TruffleTCKCollectMode.getValue();
         try (DebugContext.Scope s = debugContext.scope(ClassUtil.getUnqualifiedName(getClass()))) {
             BigBang bb = accessImpl.getBigBang();
-            inlinedUnsafeCall = new InlinedUnsafeMethodNode(bb);
-            WhiteListParser parser = new WhiteListParser(accessImpl.getImageClassLoader(), bb);
-            ConfigurationParserUtils.parseAndRegisterConfigurations(parser,
-                            accessImpl.getImageClassLoader(),
-                            ClassUtil.getUnqualifiedName(getClass()),
-                            Options.TruffleTCKPermissionsExcludeFiles,
-                            new ResourceAsOptionDecorator(getClass().getPackage().getName().replace('.', '/') + "/resources/jre.json"),
-                            CONFIG);
-            reflectionFieldAccessorFactory = bb.getMetaAccess().lookupJavaType(loadClassOrFail("jdk.internal.reflect.UnsafeFieldAccessorFactory"));
-            VMError.guarantee(reflectionFieldAccessorFactory != null, "Cannot load one or several reflection types");
-            whiteList = parser.getLoadedWhiteList();
-            Set<BaseMethodNode> deniedMethods = new HashSet<>();
-            deniedMethods.addAll(findMethods(bb, SecurityManager.class, (m) -> m.getName().startsWith("check")));
-            deniedMethods.addAll(findMethods(bb, sun.misc.Unsafe.class, ModifiersProvider::isPublic));
-            // The type of the host Java NIO FileSystem.
-            // The FileSystem obtained from the FileSystem.newDefaultFileSystem() is in the Truffle
-            // package but
-            // can be directly used by a language. We need to include it into deniedMethods.
-            deniedMethods.addAll(findMethods(bb, FileSystem.newDefaultFileSystem().getClass(), ModifiersProvider::isPublic));
-            // JDK 19 introduced BigInteger.parallelMultiply that uses the ForkJoinPool.
-            // We deny this method but explicitly allow non-parallel multiply (cf. jre.json).
-            deniedMethods.addAll(findMethods(bb, BigInteger.class, (m) -> m.getName().startsWith("parallel")));
-            deniedMethods.add(inlinedUnsafeCall);
             Map<BaseMethodNode, Set<BaseMethodNode>> cg = callGraph(bb, deniedMethods, debugContext, (SVMHost) bb.getHostVM());
             List<List<BaseMethodNode>> report = new ArrayList<>();
-            Set<CallGraphFilter> contextFilters = new HashSet<>();
-            Collections.addAll(contextFilters, new SafeInterruptRecognizer(bb), new SafePrivilegedRecognizer(bb),
-                            new SafeServiceLoaderRecognizer(bb, accessImpl.getImageClassLoader()), new SafeSetThreadNameRecognizer(bb));
             int maxStackDepth = Options.TruffleTCKPermissionsMaxStackTraceDepth.getValue();
             maxStackDepth = maxStackDepth == -1 ? Integer.MAX_VALUE : maxStackDepth;
             for (BaseMethodNode deniedMethod : deniedMethods) {
                 if (cg.containsKey(deniedMethod)) {
                     collectViolations(report, deniedMethod,
-                                    maxStackDepth,
-                                    Options.TruffleTCKPermissionsMaxErrors.getValue(),
-                                    cg, contextFilters,
-                                    new LinkedHashSet<>(), 1, 0);
+                                    maxStackDepth, Options.TruffleTCKPermissionsMaxErrors.getValue(),
+                                    cg, contextFilters, collectMode,
+                                    new LinkedList<>(), new HashSet<>(), 1, 0);
+                    if (!report.isEmpty() && collectMode == CollectMode.Single) {
+                        break;
+                    }
                 }
             }
             if (!report.isEmpty()) {
@@ -249,24 +411,36 @@ public class PermissionsFeature implements Feature {
                                 (pw) -> {
                                     StringBuilder builder = new StringBuilder();
                                     for (List<BaseMethodNode> callPath : report) {
+                                        boolean privilegedMethod = true;
                                         for (BaseMethodNode call : callPath) {
-                                            builder.append(call.asStackTraceElement()).append('\n');
+                                            if (privilegedMethod) {
+                                                builder.append("Illegal call to privileged method ");
+                                                privilegedMethod = false;
+                                            } else {
+                                                builder.append("    at ");
+                                            }
+                                            builder.append(call.asStackTraceElement()).append(System.lineSeparator());
                                         }
-                                        builder.append('\n');
+                                        builder.append(System.lineSeparator());
                                     }
                                     pw.print(builder);
                                 });
             }
-        } finally {
-            inlinedUnsafeCall = null;
-        }
-    }
-
-    private static Class<?> loadClassOrFail(String className) {
-        try {
-            return Class.forName(className);
-        } catch (ClassNotFoundException e) {
-            throw JVMCIError.shouldNotReachHere(e);
+            List<BaseMethodNode> unusedLanguageAllowListEntries = languageAllowList.entrySet().stream().filter((e) -> !e.getValue()).map(Map.Entry::getKey).toList();
+            if (!unusedLanguageAllowListEntries.isEmpty()) {
+                StringBuilder errorMessageBuilder = new StringBuilder(
+                                "The following methods in the language allow list were not statically reachable during points-to analysis. " + "Please review and remove them from the allow list:\n");
+                for (BaseMethodNode unused : unusedLanguageAllowListEntries) {
+                    errorMessageBuilder.append(" - ").append(unused.getMethod().format("%H.%n(%p)")).append("\n");
+                }
+                switch (Options.TruffleTCKUnusedAllowListEntriesAction.getValue()) {
+                    case Ignore -> {
+                    }
+                    case Warn -> LogUtils.warning("[%s] %s", ClassUtil.getUnqualifiedName(getClass()), errorMessageBuilder);
+                    case Throw -> throw UserError.abort(errorMessageBuilder.toString());
+                    default -> throw new AssertionError(Options.TruffleTCKUnusedAllowListEntriesAction.getValue());
+                }
+            }
         }
     }
 
@@ -285,13 +459,59 @@ public class PermissionsFeature implements Feature {
         Map<BaseMethodNode, Set<BaseMethodNode>> visited = new HashMap<>();
         for (AnalysisMethodNode m : findMethods(bb, OptimizedCallTarget.class, (m) -> "profiledPERoot".equals(m.getName()))) {
             visited.put(m, new HashSet<>());
-            todo.offer(m);
+            todo.add(m);
         }
         Deque<BaseMethodNode> path = new LinkedList<>();
         for (AnalysisMethodNode m : todo) {
             callGraphImpl(m, targets, visited, path, debugContext, hostVM);
         }
         return visited;
+    }
+
+    private void findUnsafeAccesses(
+                    BaseMethodNode mNode,
+                    Map<BaseMethodNode, Set<BaseMethodNode>> visited,
+                    SVMHost hostVM) {
+        /*
+         * In this situation it is unnecessary to check for unsafe accesses.
+         */
+        if (inlinedUnsafeCall == null || isSystemOrSafeClass(mNode)) {
+            return;
+        }
+
+        if (Proxy.isProxyClass(mNode.getOwner().getJavaClass())) {
+            /*
+             * Starting JDK-23+26 Proxy generated code does unsafe compare and set. The generated
+             * proxy method calls the used invocation handler which is checked for possible unsafe
+             * access.
+             */
+            return;
+        }
+
+        StructuredGraph mGraph = hostVM.getAnalysisGraph(mNode.getMethod());
+        for (Node node : mGraph.getNodes().filter(n -> n instanceof TrackedUnsafeAccess)) {
+            /*
+             * Check the origin of all tracked unsafe accesses.
+             *
+             * We must determine whether the access originates from a safe class. It is possible for
+             * these accesses to be inlined into other methods during the method handle
+             * intrinsification process.
+             */
+            NodeSourcePosition current = node.getNodeSourcePosition();
+            boolean foundSystemClass = false;
+            while (current != null) {
+                var declaringClass = OriginalClassProvider.getJavaClass(current.getMethod().getDeclaringClass());
+                if (!declaringClass.equals(sunMiscUnsafe) && isSystemClass(declaringClass)) {
+                    foundSystemClass = true;
+                    break;
+                }
+                current = current.getCaller();
+            }
+            if (!foundSystemClass) {
+                visited.computeIfAbsent(inlinedUnsafeCall, (e) -> new HashSet<>()).add(mNode);
+                return;
+            }
+        }
     }
 
     private boolean callGraphImpl(
@@ -304,18 +524,14 @@ public class PermissionsFeature implements Feature {
         AnalysisMethod m = mNode.getMethod();
         String mName = getMethodName(m);
         path.addFirst(mNode);
-        StructuredGraph mGraph = hostVM.getAnalysisGraph(m);
-        if (mGraph.hasUnsafeAccess() && !(isSystemClass(mNode) || isCompilerClass(mNode))) {
-            debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Method: %s has unsafe access.", mName);
-            visited.computeIfAbsent(inlinedUnsafeCall, (e) -> new HashSet<>()).add(mNode);
-        }
+        findUnsafeAccesses(mNode, visited, hostVM);
         try {
             boolean callPathContainsTarget = false;
             debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Entered method: %s.", mName);
             for (InvokeInfo invoke : m.getInvokes()) {
                 for (AnalysisMethod callee : invoke.getOriginalCallees()) {
                     AnalysisMethodNode calleeNode = new AnalysisMethodNode(callee);
-                    if (callee.isInvoked() || !(isSystemClass(calleeNode) || isCompilerClass(calleeNode))) {
+                    if (callee.isImplementationInvoked()) {
                         Set<BaseMethodNode> parents = visited.get(calleeNode);
                         String calleeName = getMethodName(callee);
                         debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Callee: %s, new: %b.", calleeName, parents == null);
@@ -379,7 +595,7 @@ public class PermissionsFeature implements Feature {
      * @return {@code true} if the call of given method crosses some language method.
      */
     private static boolean isBackTraceOverLanguageMethod(AnalysisMethodNode method, Deque<? extends BaseMethodNode> path) {
-        if (!isCompilerClass(method) && !isSystemClass(method)) {
+        if (!isSystemOrSafeClass(method)) {
             return false;
         }
         boolean found = false;
@@ -387,7 +603,7 @@ public class PermissionsFeature implements Feature {
             BaseMethodNode pe = it.next();
             if (method.equals(pe)) {
                 found = true;
-            } else if (found && !isCompilerClass(pe) && !isSystemClass(pe)) {
+            } else if (found && !isSystemOrSafeClass(pe)) {
                 return true;
             }
         }
@@ -403,8 +619,11 @@ public class PermissionsFeature implements Feature {
      * @param maxReports maximal number of reports
      * @param callGraph call graph obtained from
      *            {@link PermissionsFeature#callGraph(BigBang, Set, DebugContext, SVMHost)}
-     * @param contextFilters filters removing known valid calls
-     * @param visited visited methods
+     * @param contextFiltersParam filters removing known valid calls
+     * @param collectMode violation collect mode, see {@link Options#TruffleTCKCollectMode}
+     * @param currentPath current path from a privileged method in a call graph
+     * @param visited set of already visited methods, these methods are already part of an existing
+     *            report or do not lead to language class
      * @param depth current depth
      */
     private int collectViolations(
@@ -413,59 +632,53 @@ public class PermissionsFeature implements Feature {
                     int maxDepth,
                     int maxReports,
                     Map<BaseMethodNode, Set<BaseMethodNode>> callGraph,
-                    Set<CallGraphFilter> contextFilters,
-                    LinkedHashSet<BaseMethodNode> visited,
+                    Set<CallGraphFilter> contextFiltersParam,
+                    CollectMode collectMode,
+                    List<BaseMethodNode> currentPath,
+                    Set<BaseMethodNode> visited,
                     int depth,
-                    int noReports) {
-        int useNoReports = noReports;
-        if (useNoReports >= maxReports) {
-            return useNoReports;
+                    int initialNumReports) {
+        int numReports = initialNumReports;
+        if (numReports >= maxReports) {
+            return numReports;
         }
-        if (depth > 1) {
-            // The denied method can be a compiler method
-            if (isCompilerClass(mNode)) {
-                return useNoReports;
-            }
-            // The denied method cannot be excluded by a white list
-            if (isExcludedClass(mNode)) {
-                return useNoReports;
-            }
+        if (isSafeClass(mNode) || isExcludedClass(mNode)) {
+            return numReports;
         }
         if (!visited.contains(mNode)) {
             visited.add(mNode);
+            currentPath.add(mNode);
             try {
                 Set<BaseMethodNode> callers = callGraph.get(mNode);
                 if (depth > maxDepth) {
                     if (!callers.isEmpty()) {
-                        useNoReports = collectViolations(report, callers.iterator().next(), maxDepth, maxReports, callGraph, contextFilters, visited, depth + 1, useNoReports);
+                        numReports = collectViolations(report, callers.iterator().next(), maxDepth, maxReports, callGraph, contextFiltersParam, collectMode, currentPath, visited, depth + 1,
+                                        numReports);
                     }
-                } else if (!isSystemClass(mNode)) {
-                    List<BaseMethodNode> callPath = new ArrayList<>(visited);
+                } else if (!isSystemOrSafeClass(mNode)) {
+                    List<BaseMethodNode> callPath = new ArrayList<>(currentPath);
                     report.add(callPath);
-                    useNoReports++;
+                    numReports++;
                 } else {
-                    nextCaller: for (BaseMethodNode caller : callers) {
-                        for (CallGraphFilter filter : contextFilters) {
-                            if (isReflectionFieldAccessorFactory(caller) || filter.test(mNode, caller, visited)) {
-                                continue nextCaller;
+                    for (BaseMethodNode caller : callers) {
+                        if (contextFiltersParam.stream().noneMatch((f) -> f.test(mNode, caller, currentPath))) {
+                            numReports = collectViolations(report, caller, maxDepth, maxReports, callGraph, contextFiltersParam, collectMode, currentPath, visited, depth + 1, numReports);
+                            if (numReports > initialNumReports && collectMode != CollectMode.All) {
+                                break;
                             }
                         }
-                        useNoReports = collectViolations(report, caller, maxDepth, maxReports, callGraph, contextFilters, visited, depth + 1, useNoReports);
                     }
                 }
             } finally {
-                visited.remove(mNode);
+                BaseMethodNode last = currentPath.removeLast();
+                assert last == mNode;
             }
         }
-        return useNoReports;
+        return numReports;
     }
 
-    /**
-     * Tests if the given {@link BaseMethodNode} is part of the factory of field accessors.
-     */
-    private boolean isReflectionFieldAccessorFactory(BaseMethodNode methodNode) {
-        AnalysisMethod method = methodNode.getMethod();
-        return method != null && reflectionFieldAccessorFactory.isAssignableFrom(method.getDeclaringClass());
+    private static boolean isSystemOrSafeClass(BaseMethodNode methodNode) {
+        return isSystemClass(methodNode) || isSafeClass(methodNode);
     }
 
     /**
@@ -475,7 +688,10 @@ public class PermissionsFeature implements Feature {
      * @param methodNode the {@link BaseMethodNode} to check
      */
     private static boolean isSystemClass(BaseMethodNode methodNode) {
-        Class<?> clz = methodNode.getOwner().getJavaClass();
+        return isSystemClass(methodNode.getOwner().getJavaClass());
+    }
+
+    private static boolean isSystemClass(Class<?> clz) {
         if (clz == null) {
             return false;
         }
@@ -488,17 +704,12 @@ public class PermissionsFeature implements Feature {
      *
      * @param method the {@link AnalysisMethod} to check
      */
-    private static boolean isCompilerClass(BaseMethodNode method) {
-        return isClassInPackage(method.getOwner().toJavaName(), compilerPackages);
+    private static boolean isSafeClass(BaseMethodNode method) {
+        return isSafeClass(method.getOwner());
     }
 
-    /**
-     * Tests if the given {@link BaseMethodNode} is excluded by white list.
-     *
-     * @param methodNode the {@link BaseMethodNode} to check
-     */
-    private boolean isExcludedClass(BaseMethodNode methodNode) {
-        return whiteList.contains(methodNode);
+    private static boolean isSafeClass(AnalysisType type) {
+        return isClassInPackage(type.toJavaName(), safePackages);
     }
 
     /**
@@ -515,6 +726,18 @@ public class PermissionsFeature implements Feature {
             }
         }
         return false;
+    }
+
+    /**
+     * Tests if the given {@link BaseMethodNode} is excluded by allow list.
+     *
+     * @param methodNode the {@link BaseMethodNode} to check
+     */
+    private boolean isExcludedClass(BaseMethodNode methodNode) {
+        if (platformAllowList.contains(methodNode)) {
+            return true;
+        }
+        return languageAllowList.computeIfPresent(methodNode, (n, v) -> true) != null;
     }
 
     /**
@@ -544,6 +767,23 @@ public class PermissionsFeature implements Feature {
      */
     static Set<AnalysisMethodNode> findMethods(BigBang bb, AnalysisType owner, Predicate<ResolvedJavaMethod> filter) {
         return findImpl(bb, owner.getWrapped().getDeclaredMethods(false), filter);
+    }
+
+    /**
+     * Finds constructors declared in {@code owner} class using {@code filter} predicate.
+     *
+     * @param bb the {@link BigBang}
+     * @param owner the class which constructor should be listed
+     * @param filter the predicate filtering constructors declared in {@code owner}
+     * @return the constructors accepted by {@code filter}
+     * @throws IllegalStateException if owner cannot be resolved
+     */
+    private static Set<AnalysisMethodNode> findConstructors(BigBang bb, Class<?> owner, Predicate<ResolvedJavaMethod> filter) {
+        AnalysisType clazz = bb.getMetaAccess().lookupJavaType(owner);
+        if (clazz == null) {
+            throw new IllegalStateException("Cannot resolve " + owner.getName() + ".");
+        }
+        return findConstructors(bb, clazz, filter);
     }
 
     /**
@@ -582,7 +822,12 @@ public class PermissionsFeature implements Feature {
      * Filter to filter out known valid calls, included by points to analysis, from the report.
      */
     private interface CallGraphFilter {
-        boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace);
+        /**
+         * @return whether this methodNode should not be considered a violation
+         */
+        boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace);
+
+        Collection<AnalysisMethod> getInspectedMethods();
     }
 
     /**
@@ -592,7 +837,7 @@ public class PermissionsFeature implements Feature {
 
         private final SVMHost hostVM;
         private final AnalysisMethodNode threadInterrupt;
-        private final ResolvedJavaMethod threadCurrentThread;
+        private final AnalysisMethod threadCurrentThread;
 
         SafeInterruptRecognizer(BigBang bb) {
             this.hostVM = (SVMHost) bb.getHostVM();
@@ -610,35 +855,42 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             Boolean res = null;
             if (threadInterrupt.equals(methodNode)) {
                 AnalysisMethod caller = callerNode.getMethod();
                 StructuredGraph graph = hostVM.getAnalysisGraph(caller);
                 for (Invoke invoke : graph.getInvokes()) {
                     if (threadInterrupt.getMethod().equals(invoke.callTarget().targetMethod())) {
+                        boolean vote = false;
                         ValueNode node = invoke.getReceiver();
-                        if (node instanceof PiNode) {
-                            node = ((PiNode) node).getOriginalNode();
-                            if (node instanceof Invoke) {
-                                boolean isCurrentThread = threadCurrentThread.equals(((Invoke) node).callTarget().targetMethod());
-                                res = res == null ? isCurrentThread : (res && isCurrentThread);
+                        if (node instanceof PiNode piNode) {
+                            node = piNode.getOriginalNode();
+                            if (node instanceof Invoke invokeNode) {
+                                boolean isCurrentThread = threadCurrentThread.equals(invokeNode.callTarget().targetMethod());
+                                vote = res == null ? isCurrentThread : (res && isCurrentThread);
                             }
                         }
+                        res = vote;
                     }
                 }
             }
             return res != null && res;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return Set.of(threadInterrupt.getMethod(), threadCurrentThread);
         }
     }
 
     /**
      * Filters out {@code AccessController#doPrivileged} done by JRE.
      */
-    private final class SafePrivilegedRecognizer implements CallGraphFilter {
+    private static final class SafePrivilegedRecognizer implements CallGraphFilter {
 
         private final SVMHost hostVM;
-        private final Set<? extends BaseMethodNode> doPrivileged;
+        private final Set<AnalysisMethodNode> doPrivileged;
 
         SafePrivilegedRecognizer(BigBang bb) {
             this.hostVM = (SVMHost) bb.getHostVM();
@@ -646,12 +898,11 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             if (!doPrivileged.contains(methodNode)) {
                 return false;
             }
-            boolean safeClass = isCompilerClass(callerNode) || isSystemClass(callerNode);
-            if (safeClass) {
+            if (isSystemOrSafeClass(callerNode)) {
                 return true;
             }
             AnalysisMethod method = methodNode.getMethod();
@@ -663,13 +914,24 @@ public class PermissionsFeature implements Feature {
                     if (args.isEmpty()) {
                         return false;
                     }
-                    ValueNode arg0 = args.get(0);
-                    if (!(arg0 instanceof NewInstanceNode)) {
+                    ValueNode arg0 = args.getFirst();
+                    ResolvedJavaType newType = null;
+                    if (arg0 instanceof NewInstanceNode newInstanceNode) {
+                        newType = newInstanceNode.instanceClass();
+                    } else if (arg0 instanceof Invoke invokeNode) {
+                        // Constructor replaced by SVM FactoryMethod
+                        AnalysisMethod targetMethod = (AnalysisMethod) invokeNode.getTargetMethod();
+                        if (targetMethod.wrapped instanceof FactoryMethod factoryMethod) {
+                            newType = method.getUniverse().lookup(factoryMethod.getTargetConstructor().getDeclaringClass());
+                        }
+                    } else if (arg0 instanceof AllocatedObjectNode allocatedObjectNode) {
+                        newType = allocatedObjectNode.getVirtualObject().type();
+                    }
+                    if (newType == null) {
                         return false;
                     }
-                    ResolvedJavaType newType = ((NewInstanceNode) arg0).instanceClass();
                     ResolvedJavaMethod methodCalledByAccessController = findPrivilegedEntryPoint(method, trace);
-                    if (newType == null || methodCalledByAccessController == null) {
+                    if (methodCalledByAccessController == null) {
                         return false;
                     }
                     if (newType.equals(methodCalledByAccessController.getDeclaringClass())) {
@@ -681,77 +943,83 @@ public class PermissionsFeature implements Feature {
         }
 
         /**
-         * Finds an entry point to {@code PrivilegedAction} called by {@code doPrivilegedMethod}.
+         * Identifies the entry point to a {@code PrivilegedAction} invoked by
+         * {@code doPrivilegedMethod}. Iterates through the inverted call stack, starting from the
+         * current frame, up to the privileged call. Returns the first method that is not part of
+         * {@code AccessController}.
          */
-        private ResolvedJavaMethod findPrivilegedEntryPoint(ResolvedJavaMethod doPrivilegedMethod, LinkedHashSet<BaseMethodNode> trace) {
-            ResolvedJavaMethod ep = null;
-            for (BaseMethodNode mNode : trace) {
-                AnalysisMethod m = mNode.getMethod();
-                if (doPrivilegedMethod.equals(m)) {
-                    return ep;
+        private static ResolvedJavaMethod findPrivilegedEntryPoint(ResolvedJavaMethod doPrivilegedMethod, List<BaseMethodNode> trace) {
+            ResolvedJavaType accessController = doPrivilegedMethod.getDeclaringClass();
+            ListIterator<BaseMethodNode> it = trace.listIterator(trace.size());
+            assert doPrivilegedMethod.equals(it.previous().getMethod()) : String.format("%s must be current stack frame.", trace);
+            while (it.hasPrevious()) {
+                BaseMethodNode mNode = it.previous();
+                ResolvedJavaMethod method = mNode.getMethod();
+                /*
+                 * Ignore AccessController internal methods.
+                 */
+                if (!method.getDeclaringClass().equals(accessController)) {
+                    return method;
                 }
-                ep = m;
             }
             return null;
         }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return doPrivileged.stream().map(AnalysisMethodNode::getMethod).toList();
+        }
     }
 
-    private static final class SafeServiceLoaderRecognizer implements CallGraphFilter {
+    /**
+     * Filters out reflection done by JRE or by code in safe packages.
+     */
+    private static final class SafeReflectionRecognizer implements CallGraphFilter {
 
-        private final AnalysisMethodNode providerImplGet;
-        private final ImageClassLoader imageClassLoader;
+        private final Set<AnalysisMethodNode> inspectedMethods;
 
-        SafeServiceLoaderRecognizer(BigBang bb, ImageClassLoader imageClassLoader) {
-            AnalysisType serviceLoaderIterator = bb.getMetaAccess().lookupJavaType(loadClassOrFail("java.util.ServiceLoader$ProviderImpl"));
-            Set<AnalysisMethodNode> methods = findMethods(bb, serviceLoaderIterator, (m) -> m.getName().equals("get"));
+        SafeReflectionRecognizer(BigBang bb) {
+            inspectedMethods = new HashSet<>();
+            AnalysisType method = bb.getMetaAccess().lookupJavaType(Method.class);
+            Set<AnalysisMethodNode> methods = findMethods(bb, method, (m) -> m.getName().equals("invoke") && m.isPublic() && m.getParameters().length == 2);
             if (methods.size() != 1) {
-                throw new IllegalStateException("Failed to lookup ServiceLoader$ProviderImpl.get().");
+                throw new IllegalStateException("Failed to lookup Method.invoke(Object,Object...).");
             }
-            this.providerImplGet = methods.iterator().next();
-            this.imageClassLoader = imageClassLoader;
+            inspectedMethods.addAll(methods);
+
+            AnalysisType constructor = bb.getMetaAccess().lookupJavaType(Constructor.class);
+            methods = findMethods(bb, constructor, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 1);
+            if (methods.size() != 1) {
+                throw new IllegalStateException("Failed to lookup Constructor.newInstance(Object...).");
+            }
+            inspectedMethods.addAll(methods);
+
+            AnalysisType clazz = bb.getMetaAccess().lookupJavaType(Class.class);
+            methods = findMethods(bb, clazz, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 0);
+            if (methods.size() != 1) {
+                throw new IllegalStateException("Failed to lookup Class.newInstance().");
+            }
+            inspectedMethods.addAll(methods);
+
+            AnalysisType methodHandle = bb.getMetaAccess().lookupJavaType(MethodHandle.class);
+            methods = findMethods(bb, methodHandle, (m) -> m.getName().startsWith("invoke") && m.isPublic());
+            if (methods.isEmpty()) {
+                throw new IllegalStateException("Failed to lookup MethodHandle.invoke methods.");
+            }
+            inspectedMethods.addAll(methods);
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
-            if (providerImplGet.equals(methodNode)) {
-                ResolvedJavaType instantiatedType = findInstantiatedType(trace);
-                return instantiatedType != null && !isRegisteredInServiceLoader(instantiatedType);
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (inspectedMethods.contains(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
             }
             return false;
         }
 
-        /**
-         * Finds last constructor invocation.
-         */
-        private static ResolvedJavaType findInstantiatedType(LinkedHashSet<BaseMethodNode> trace) {
-            ResolvedJavaType res = null;
-            for (BaseMethodNode mNode : trace) {
-                AnalysisMethod m = mNode.getMethod();
-                if (m != null && "<init>".equals(m.getName())) {
-                    res = m.getDeclaringClass();
-                }
-            }
-            return res;
-        }
-
-        /**
-         * Finds if the given type may be instantiated by ServiceLoader.
-         */
-        private boolean isRegisteredInServiceLoader(ResolvedJavaType type) {
-            String resource = String.format("META-INF/services/%s", type.toClassName());
-            if (imageClassLoader.getClassLoader().getResource(resource) != null) {
-                return true;
-            }
-            for (ResolvedJavaType ifc : type.getInterfaces()) {
-                if (isRegisteredInServiceLoader(ifc)) {
-                    return true;
-                }
-            }
-            ResolvedJavaType superClz = type.getSuperclass();
-            if (superClz != null) {
-                return isRegisteredInServiceLoader(superClz);
-            }
-            return false;
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return inspectedMethods.stream().map(AnalysisMethodNode::getMethod).toList();
         }
     }
 
@@ -759,8 +1027,8 @@ public class PermissionsFeature implements Feature {
 
         private final SVMHost hostVM;
         private final AnalysisMethodNode threadSetName;
-        private final Set<? extends ResolvedJavaMethod> envCreateThread;
-        private final Set<? extends ResolvedJavaMethod> envCreateSystemThread;
+        private final Set<AnalysisMethod> envCreateThread;
+        private final Set<AnalysisMethod> envCreateSystemThread;
 
         SafeSetThreadNameRecognizer(BigBang bb) {
             hostVM = (SVMHost) bb.getHostVM();
@@ -780,7 +1048,7 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             if (!threadSetName.equals(methodNode)) {
                 return false;
             }
@@ -791,12 +1059,12 @@ public class PermissionsFeature implements Feature {
             for (Invoke invoke : graph.getInvokes()) {
                 if (method.equals(invoke.callTarget().targetMethod())) {
                     NodeInputList<ValueNode> args = invoke.callTarget().arguments();
-                    ValueNode arg0 = args.get(0);
+                    ValueNode arg0 = args.getFirst();
                     boolean isTruffleThread = false;
-                    if (arg0 instanceof PiNode) {
-                        arg0 = ((PiNode) arg0).getOriginalNode();
-                        if (arg0 instanceof Invoke) {
-                            ResolvedJavaMethod target = ((Invoke) arg0).callTarget().targetMethod();
+                    if (arg0 instanceof PiNode piNode) {
+                        arg0 = piNode.getOriginalNode();
+                        if (arg0 instanceof Invoke invokeNode) {
+                            ResolvedJavaMethod target = invokeNode.callTarget().targetMethod();
                             isTruffleThread = envCreateThread.contains(target) || envCreateSystemThread.contains(target);
                         }
                     }
@@ -805,15 +1073,126 @@ public class PermissionsFeature implements Feature {
             }
             return res != null && res;
         }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            Set<AnalysisMethod> set = new HashSet<>(envCreateThread);
+            set.addAll(envCreateSystemThread);
+            set.add(threadSetName.getMethod());
+            return set;
+        }
     }
 
     /**
-     * Options facade for a resource containing the JRE white list.
+     * All JDK subclasses of LocaleServiceProvider are allowed.
      */
-    private static final class ResourceAsOptionDecorator extends HostedOptionKey<LocatableMultiOptionValue.Strings> {
+    private static final class SafeLocaleServiceProvider implements CallGraphFilter {
 
-        ResourceAsOptionDecorator(String defaultValue) {
-            super(LocatableMultiOptionValue.Strings.buildWithDefaults(defaultValue));
+        private final AnalysisMethodNode localeServiceProviderInit;
+
+        SafeLocaleServiceProvider(BigBang bb) {
+            Set<AnalysisMethodNode> constructors = findConstructors(bb, LocaleServiceProvider.class, (m) -> m.getParameters().length == 0);
+            if (constructors.size() != 1) {
+                throw new IllegalStateException("Failed to lookup LocaleServiceProvider.<init>().");
+            }
+            localeServiceProviderInit = constructors.iterator().next();
+        }
+
+        @Override
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (localeServiceProviderInit.equals(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
+            }
+            return false;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return Set.of(localeServiceProviderInit.getMethod());
+        }
+    }
+
+    /**
+     * JDK classes are allowed to read System properties.
+     */
+    private static final class SafeSystemGetProperty implements CallGraphFilter {
+
+        private final Set<AnalysisMethodNode> getProperty;
+
+        SafeSystemGetProperty(BigBang bb) {
+            Set<AnalysisMethodNode> methods = findMethods(bb, System.class, (m) -> "getProperty".equals(m.getName()));
+            if (methods.size() != 2) {
+                throw new IllegalStateException("Failed to lookup System.getProperty.");
+            }
+            getProperty = methods;
+        }
+
+        @Override
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (getProperty.contains(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
+            }
+            return false;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return getProperty.stream().map(AnalysisMethodNode::getMethod).collect(Collectors.toSet());
+        }
+    }
+
+    /**
+     * A call to {@code URL.of(URI, URLStreamHandler)} is only considered safe when the specified
+     * {@link URLStreamHandler} is {@code null}.
+     */
+    private static final class SafeURLOf implements CallGraphFilter {
+
+        private final SVMHost hostVM;
+        private final AnalysisMethodNode of;
+
+        SafeURLOf(BigBang bigBang) {
+            this.hostVM = (SVMHost) bigBang.getHostVM();
+            Set<AnalysisMethodNode> methods = findMethods(bigBang, URL.class, (m) -> {
+                if (!"of".equals(m.getName())) {
+                    return false;
+                }
+                ResolvedJavaMethod.Parameter[] parameters = m.getParameters();
+                if (parameters.length != 2) {
+                    return false;
+                }
+                if (!bigBang.getMetaAccess().lookupJavaType(URI.class).getWrapped().equals(parameters[0].getType())) {
+                    return false;
+                }
+                return bigBang.getMetaAccess().lookupJavaType(URLStreamHandler.class).getWrapped().equals(parameters[1].getType());
+            });
+            if (methods.size() != 1) {
+                throw new IllegalStateException("Failed to lookup URL.of(URI, URLStreamHandler).");
+            }
+            this.of = methods.iterator().next();
+        }
+
+        @Override
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (!of.equals(methodNode)) {
+                return false;
+            }
+            AnalysisMethod method = methodNode.getMethod();
+            AnalysisMethod caller = callerNode.getMethod();
+            StructuredGraph graph = hostVM.getAnalysisGraph(caller);
+            Boolean res = null;
+            for (Invoke invoke : graph.getInvokes()) {
+                if (method.equals(invoke.callTarget().targetMethod())) {
+                    NodeInputList<ValueNode> args = invoke.callTarget().arguments();
+                    ValueNode arg1 = args.get(1);
+                    res = arg1 instanceof ConstantNode constantNode && constantNode.getValue() == JavaConstant.NULL_POINTER;
+                }
+            }
+            return res != null && res;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return List.of(of.getMethod());
         }
     }
 
@@ -829,8 +1208,8 @@ public class PermissionsFeature implements Feature {
 
         private final AnalysisType unsafe;
 
-        InlinedUnsafeMethodNode(BigBang bigBang) {
-            this.unsafe = bigBang.getMetaAccess().lookupJavaType(Unsafe.class);
+        InlinedUnsafeMethodNode(AnalysisType unsafe) {
+            this.unsafe = unsafe;
         }
 
         @Override
@@ -918,149 +1297,6 @@ public class PermissionsFeature implements Feature {
     }
 }
 
-@TargetClass(value = java.lang.SecurityManager.class, onlyWith = PermissionsFeature.IsEnabled.class)
-final class Target_java_lang_SecurityManager {
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkSecurityAccess(String target) {
-    }
-
-    @Substitute
-    private void checkSetFactory() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPackageDefinition(String pkg) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPackageAccess(String pkg) {
-    }
-
-    @Substitute
-    private void checkPrintJobAccess() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPropertyAccess(String key) {
-    }
-
-    @Substitute
-    private void checkPropertiesAccess() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkMulticast(InetAddress maddr) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccept(String host, int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkListen(int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkConnect(String host, int port, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkConnect(String host, int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkDelete(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkWrite(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkWrite(FileDescriptor fd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(String file, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(FileDescriptor fd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkLink(String lib) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkExec(String cmd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkExit(int status) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccess(ThreadGroup g) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccess(Thread t) {
-    }
-
-    @Substitute
-    private void checkCreateClassLoader() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPermission(Permission perm, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPermission(Permission perm) {
-    }
-}
-
-final class SecurityManagerHolder {
-    @SuppressWarnings("deprecation") // SecurityManager deprecated since 17.
-    static final SecurityManager SECURITY_MANAGER = new SecurityManager();
-}
-
-@TargetClass(value = java.lang.System.class, onlyWith = PermissionsFeature.IsEnabled.class)
-final class Target_java_lang_System {
-    @Substitute
-    private static SecurityManager getSecurityManager() {
-        return SecurityManagerHolder.SECURITY_MANAGER;
-    }
-}
-
 final class LoggerFinderHolder {
     static final System.LoggerFinder LOGGER_FINDER = System.LoggerFinder.getLoggerFinder();
 }
@@ -1070,5 +1306,25 @@ final class Target_java_lang_System_LoggerFinder {
     @Substitute
     private static System.LoggerFinder getLoggerFinder() {
         return LoggerFinderHolder.LOGGER_FINDER;
+    }
+}
+
+/**
+ * ProcessIsolate brings Java networking classes into the closed-world analysis. The issue arises
+ * from lambda expressions or method references in these classes invoke privileged methods. Since
+ * native-image lacks context during analysis, it includes these implementations at every functional
+ * interface call site. To address this, we exclude the {@code ProcessIsolate} entry point from the
+ * points-to analysis when the permission feature is enabled.
+ */
+@TargetClass(value = ProcessIsolate.class, onlyWith = PermissionsFeature.IsEnabled.class)
+final class Target {
+
+    @SuppressWarnings("unused")
+    @Substitute
+    public static ProcessIsolate spawnProcessIsolate(ProcessIsolateConfig config,
+                    BinaryMarshaller<Throwable> throwableMarshaller,
+                    DispatchHandler[] dispatchHandlers,
+                    ToLongBiFunction<ProcessIsolateThread, Long> releaseObjectHandle) throws IsolateCreateException {
+        throw new IsolateCreateException("Process isolates are disabled by the language permissions feature.");
     }
 }
