@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -46,6 +46,7 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.Closeable;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
@@ -94,12 +95,16 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 
+import com.oracle.truffle.api.TruffleLanguage;
 import com.oracle.truffle.api.test.ReflectionUtils;
 import com.oracle.truffle.api.test.common.AbstractExecutableTestLanguage;
 import com.oracle.truffle.api.test.common.TestUtils;
 import com.oracle.truffle.tck.tests.TruffleTestAssumptions;
+import org.graalvm.home.Version;
 import org.graalvm.polyglot.Context;
+import org.graalvm.polyglot.Engine;
 import org.graalvm.polyglot.io.FileSystem;
+import org.graalvm.polyglot.io.FileSystem.Selector;
 import org.graalvm.polyglot.io.IOAccess;
 import org.junit.AfterClass;
 import org.junit.Assert;
@@ -111,6 +116,7 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import com.oracle.truffle.api.TruffleFile;
+import com.oracle.truffle.api.TruffleFile.FileStoreInfo;
 import com.oracle.truffle.api.TruffleLanguage.Env;
 import com.oracle.truffle.api.TruffleLanguage.Registration;
 import com.oracle.truffle.api.nodes.RootNode;
@@ -141,7 +147,7 @@ public class FileSystemsTest {
     private static final String FILE_TMP_DIR = "tmpfolder";
     private static final String FULL_IO_DEPRECATED = "Full IO - Deprecated";
     private static final String NO_IO_DEPRECATED = "No IO - Deprecated";
-    private static final String CUSTOM_FS_DEPRECATED = "Custom File System - Deprecated";
+    private static final String CUSTOM_FS_DEPRECATED = "Custom file system - Deprecated";
     private static final String FULL_IO = "Full IO";
     private static final String NO_IO = "No IO";
     private static final String NO_IO_UNDER_LANGUAGE_HOME_PUBLIC_FILE = "No IO under language home - public file";
@@ -150,20 +156,24 @@ public class FileSystemsTest {
     private static final String CONDITIONAL_IO_READ_WRITE_PART = "Conditional IO - read/write part";
     private static final String CONDITIONAL_IO_READ_ONLY_PART = "Conditional IO - read only part";
     private static final String CONDITIONAL_IO_PRIVATE_PART = "Conditional IO - private part";
-    private static final String MEMORY_FILE_SYSTEM = "Memory FileSystem";
-    private static final String MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES = "Memory FileSystem With Language Homes";
-    private static final String MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE = "Memory FileSystem With Language Homes - internal file";
-    private static final String CONTEXT_PRE_INITIALIZATION_FILESYSTEM_BUILD_TIME = "Context pre-initialization filesystem build time";
-    private static final String CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME = "Context pre-initialization filesystem execution time";
+    private static final String MEMORY_FILE_SYSTEM = "Memory file system";
+    private static final String MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES = "Memory file system with language homes";
+    private static final String MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE = "Memory file system with language homes - internal file";
+    private static final String CONTEXT_PRE_INITIALIZATION_FILESYSTEM_BUILD_TIME = "Context pre-initialization file system build time";
+    private static final String CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME = "Context pre-initialization file system execution time";
+    private static final String COMPOSITE_FILE_SYSTEM_DELEGATE = "Composite file system read write delegate";
+    private static final String COMPOSITE_FILE_SYSTEM_FALLBACK = "Composite file system read only fallback";
+    private static final String DENY_IO = "Deny IO file system";
 
     private static final Map<String, Configuration> cfgs = new HashMap<>();
+
+    private static final Version OSX_10_13 = Version.create(10, 13);
 
     private final Configuration cfg;
 
     @Parameterized.Parameters(name = "{0}")
     public static Collection<String> createParameters() {
-        return Arrays.asList(
-                        FULL_IO_DEPRECATED,
+        return List.of(FULL_IO_DEPRECATED,
                         NO_IO_DEPRECATED,
                         CUSTOM_FS_DEPRECATED,
                         FULL_IO,
@@ -178,7 +188,10 @@ public class FileSystemsTest {
                         MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES,
                         MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE,
                         CONTEXT_PRE_INITIALIZATION_FILESYSTEM_BUILD_TIME,
-                        CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME);
+                        CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME,
+                        COMPOSITE_FILE_SYSTEM_DELEGATE,
+                        COMPOSITE_FILE_SYSTEM_FALLBACK,
+                        DENY_IO);
     }
 
     @BeforeClass
@@ -188,10 +201,12 @@ public class FileSystemsTest {
         createDeprecatedConfigurations(fullIO);
 
         // Full IO
-        Path accessibleDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
+        Path accessibleDir;
+        Context ctx;
+        accessibleDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
                         fullIO);
-        Context ctx = Context.newBuilder().allowIO(IOAccess.ALL).build();
-        setCwd(ctx, accessibleDir, null);
+        ctx = Context.newBuilder().allowIO(IOAccess.ALL).build();
+        setCwd(ctx, accessibleDir);
         cfgs.put(FULL_IO, new Configuration(FULL_IO, ctx, accessibleDir, fullIO, true, true, true, true));
 
         // No IO
@@ -201,26 +216,32 @@ public class FileSystemsTest {
         cfgs.put(NO_IO, new Configuration(NO_IO, ctx, privateDir, Paths.get("").toAbsolutePath(), fullIO, true, false, false, false));
 
         // No IO under language home - public file
-        ctx = Context.newBuilder().allowIO(IOAccess.NONE).build();
-        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
+        Engine engine = Engine.create();
+        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()).toRealPath(),
                         fullIO);
-        setCwd(ctx, privateDir, privateDir);
-        cfgs.put(NO_IO_UNDER_LANGUAGE_HOME_PUBLIC_FILE, new Configuration(NO_IO_UNDER_LANGUAGE_HOME_PUBLIC_FILE, ctx, privateDir, fullIO, true, false, false, false));
+        markAsLanguageHome(engine, SetCurrentWorkingDirectoryLanguage.class, privateDir);
+        ctx = Context.newBuilder().engine(engine).allowIO(IOAccess.NONE).build();
+        setCwd(ctx, privateDir);
+        cfgs.put(NO_IO_UNDER_LANGUAGE_HOME_PUBLIC_FILE,
+                        new Configuration(NO_IO_UNDER_LANGUAGE_HOME_PUBLIC_FILE, ctx, privateDir, privateDir, fullIO, true, false, false, false, false, false, true, engine));
 
         // No IO under language home - internal file
-        ctx = Context.newBuilder().allowIO(IOAccess.NONE).build();
-        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
+        engine = Engine.create();
+        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()).toRealPath(),
                         fullIO);
-        setCwd(ctx, privateDir, privateDir);
+        markAsLanguageHome(engine, SetCurrentWorkingDirectoryLanguage.class, privateDir);
+        ctx = Context.newBuilder().engine(engine).allowIO(IOAccess.NONE).build();
+        setCwd(ctx, privateDir);
         cfgs.put(NO_IO_UNDER_LANGUAGE_HOME_INTERNAL_FILE,
-                        new Configuration(NO_IO_UNDER_LANGUAGE_HOME_INTERNAL_FILE, ctx, privateDir, privateDir, fullIO, true, true, false, false, true, false));
+                        new Configuration(NO_IO_UNDER_LANGUAGE_HOME_INTERNAL_FILE, ctx, privateDir, privateDir, fullIO, true, true, false, false, true, false, false, engine));
 
         // Read Only
+        IOAccess ioAccess;
         accessibleDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
                         fullIO);
-        IOAccess ioAccess = IOAccess.newBuilder().fileSystem(FileSystem.newReadOnlyFileSystem(fullIO)).build();
+        ioAccess = IOAccess.newBuilder().fileSystem(FileSystem.newReadOnlyFileSystem(fullIO)).build();
         ctx = Context.newBuilder().allowIO(ioAccess).build();
-        setCwd(ctx, accessibleDir, null);
+        setCwd(ctx, accessibleDir);
         cfgs.put(READ_ONLY, new Configuration(READ_ONLY, ctx, accessibleDir, fullIO, true, true, false, true));
 
         // Checked IO
@@ -265,7 +286,7 @@ public class FileSystemsTest {
         cfgs.put(MEMORY_FILE_SYSTEM, new Configuration(MEMORY_FILE_SYSTEM, ctx, memDir, fileSystem, false, true, true, true));
 
         // Memory with language home
-        fileSystem = FileSystem.allowLanguageHomeAccess(new MemoryFileSystem());
+        fileSystem = FileSystem.allowInternalResourceAccess(new MemoryFileSystem());
         memDir = mkdirs(fileSystem.toAbsolutePath(fileSystem.parsePath("work")), fileSystem);
         fileSystem.setCurrentWorkingDirectory(memDir);
         createContent(memDir, fileSystem);
@@ -274,15 +295,16 @@ public class FileSystemsTest {
         cfgs.put(MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES, new Configuration(MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES, ctx, memDir, fileSystem, false, true, true, true));
 
         // Memory with language home - in language home
-        fileSystem = FileSystem.allowLanguageHomeAccess(new MemoryFileSystem());
-        memDir = mkdirs(fileSystem.toAbsolutePath(fileSystem.parsePath("work")), fileSystem);
-        fileSystem.setCurrentWorkingDirectory(memDir);
-        privateDir = createContent(memDir, fileSystem);
+        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()).toRealPath(), fullIO);
+        engine = Engine.create();
+        markAsLanguageHome(engine, SetCurrentWorkingDirectoryLanguage.class, privateDir);
+        fileSystem = FileSystem.allowInternalResourceAccess(new MemoryFileSystem());
+        fileSystem.setCurrentWorkingDirectory(privateDir);
         ioAccess = IOAccess.newBuilder().fileSystem(fileSystem).build();
-        ctx = Context.newBuilder().allowIO(ioAccess).build();
-        setCwd(ctx, privateDir, privateDir);
+        ctx = Context.newBuilder().engine(engine).allowIO(ioAccess).build();
+        setCwd(ctx, privateDir);
         cfgs.put(MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE,
-                        new Configuration(MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE, ctx, privateDir, privateDir, fileSystem, false, true, true, true));
+                        new Configuration(MEMORY_FILE_SYSTEM_WITH_LANGUAGE_HOMES_INTERNAL_FILE, ctx, privateDir, privateDir, fileSystem, false, true, true, true, true, true, true, engine));
 
         // PreInitializeContextFileSystem in image build time
         fileSystem = createPreInitializeContextFileSystem();
@@ -302,6 +324,36 @@ public class FileSystemsTest {
         ioAccess = IOAccess.newBuilder().fileSystem(fileSystem).build();
         ctx = Context.newBuilder().allowIO(ioAccess).build();
         cfgs.put(CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME, new Configuration(CONTEXT_PRE_INITIALIZATION_FILESYSTEM_EXECUTION_TIME, ctx, workDir, fileSystem, true, true, true, true));
+
+        // Composite file system with read-only fallback and read write delegate.
+        FileSystem readWriteFs = FileSystem.newDefaultFileSystem();
+        Path tmp = Files.createTempDirectory(FileSystemsTest.class.getSimpleName()).toRealPath();
+        Path readOnlyFolder = Files.createDirectories(tmp.resolve("readOnly"));
+        Path readWriteFolder = Files.createDirectories(tmp.resolve("readWrite"));
+        createContent(readOnlyFolder, readWriteFs);
+        createContent(readWriteFolder, readWriteFs);
+        FileSystem readOnlyFallBack = FileSystem.newReadOnlyFileSystem(readWriteFs);
+        Selector readWriteDelegate = Selector.of(readWriteFs, (p) -> p.startsWith(readWriteFolder));
+
+        // Read write delegate
+        fileSystem = FileSystem.newCompositeFileSystem(readOnlyFallBack, readWriteDelegate);
+        fileSystem.setCurrentWorkingDirectory(readWriteFolder);
+        ioAccess = IOAccess.newBuilder().fileSystem(fileSystem).build();
+        ctx = Context.newBuilder().allowIO(ioAccess).build();
+        cfgs.put(COMPOSITE_FILE_SYSTEM_DELEGATE, new Configuration(COMPOSITE_FILE_SYSTEM_DELEGATE, ctx, readWriteFolder, readWriteFs, true, true, true, true));
+        // Read only fallback
+        fileSystem = FileSystem.newCompositeFileSystem(readOnlyFallBack, readWriteDelegate);
+        fileSystem.setCurrentWorkingDirectory(readOnlyFolder);
+        ioAccess = IOAccess.newBuilder().fileSystem(fileSystem).build();
+        ctx = Context.newBuilder().allowIO(ioAccess).build();
+        cfgs.put(COMPOSITE_FILE_SYSTEM_FALLBACK, new Configuration(COMPOSITE_FILE_SYSTEM_FALLBACK, ctx, readOnlyFolder, readWriteFs, true, true, false, true));
+
+        // Deny IO file system
+        fileSystem = FileSystem.newDenyIOFileSystem();
+        ioAccess = IOAccess.newBuilder().fileSystem(fileSystem).build();
+        ctx = Context.newBuilder().allowIO(ioAccess).build();
+        privateDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()), fullIO);
+        cfgs.put(DENY_IO, new Configuration(DENY_IO, ctx, privateDir, Paths.get("").toAbsolutePath(), fullIO, true, false, false, false));
     }
 
     @SuppressWarnings("deprecation")
@@ -310,7 +362,7 @@ public class FileSystemsTest {
         Path accessibleDir = createContent(Files.createTempDirectory(FileSystemsTest.class.getSimpleName()),
                         fullIO);
         Context ctx = Context.newBuilder().allowIO(true).build();
-        setCwd(ctx, accessibleDir, null);
+        setCwd(ctx, accessibleDir);
         cfgs.put(FULL_IO_DEPRECATED, new Configuration(FULL_IO, ctx, accessibleDir, fullIO, true, true, true, true));
 
         // No IO using deprecated Context.Builder methods
@@ -337,8 +389,8 @@ public class FileSystemsTest {
     }
 
     public FileSystemsTest(final String cfgName) {
-        assert cfgs.containsKey(cfgName);
         this.cfg = cfgs.get(cfgName);
+        Assume.assumeNotNull(this.cfg);
     }
 
     @Before
@@ -440,6 +492,41 @@ public class FileSystemsTest {
                 final String content = new String(file.readAllBytes(), StandardCharsets.UTF_8);
                 Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
                 Assert.assertEquals(formatErrorMessage("Expected file content", configurationName, path), FILE_EXISTING_CONTENT, content);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            } catch (IOException ioe) {
+                throw new AssertionError(formatErrorMessage(ioe.getMessage(), configurationName, path), ioe);
+            }
+            return null;
+        }
+    }
+
+    @Test
+    public void testReadIgnoresLinkOption() {
+        Context ctx = cfg.getContext();
+        String configuration = cfg.getName();
+        String path = cfg.getPath().toString();
+        boolean usePublicFile = cfg.usePublicFile;
+        boolean canRead = cfg.canRead();
+        AbstractExecutableTestLanguage.evalTestLanguage(ctx, TestReadIgnoresLinkOptionLanguage.class, "", configuration, path, usePublicFile, canRead);
+    }
+
+    @Registration
+    public static final class TestReadIgnoresLinkOptionLanguage extends AbstractExecutableTestLanguage {
+        @Override
+        @TruffleBoundary
+        protected Object execute(RootNode node, Env env, Object[] contextArguments, Object[] frameArguments) throws Exception {
+            String configurationName = (String) contextArguments[0];
+            String path = (String) contextArguments[1];
+            boolean usePublicFile = (boolean) contextArguments[2];
+            boolean canRead = (boolean) contextArguments[3];
+            TruffleFile file = resolve(env, usePublicFile, path, FOLDER_EXISTING, FILE_EXISTING);
+            try {
+                try (BufferedReader in = new BufferedReader(new InputStreamReader(file.newInputStream(LinkOption.NOFOLLOW_LINKS), StandardCharsets.UTF_8))) {
+                    final String content = in.readLine();
+                    Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+                    Assert.assertEquals(formatErrorMessage("Expected file content", configurationName, path), FILE_EXISTING_CONTENT, content);
+                }
             } catch (SecurityException se) {
                 Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
             } catch (IOException ioe) {
@@ -1837,7 +1924,7 @@ public class FileSystemsTest {
         Context ctx = cfg.getContext();
         boolean usePublicFile = cfg.usePublicFile;
         boolean isInternal = cfg.isInternalFileSystem();
-        boolean weakEncapsulation = TruffleTestAssumptions.isWeakEncapsulation();
+        boolean weakEncapsulation = TruffleTestAssumptions.isNoIsolateEncapsulation();
         AbstractExecutableTestLanguage.evalTestLanguage(ctx, TestExceptionsLanguage.class, "", usePublicFile, isInternal, weakEncapsulation);
     }
 
@@ -2016,8 +2103,13 @@ public class FileSystemsTest {
         }
     }
 
+    static boolean isMacOSOlderThanHighSierra() {
+        return OSUtils.getCurrent() == OSUtils.OS.Darwin && OSX_10_13.compareTo(Version.parse(System.getProperty("os.version"))) > 0;
+    }
+
     @Test
     public void testSetAttribute() throws IOException {
+        Assume.assumeFalse("JDK-8308386", isMacOSOlderThanHighSierra());
         Context ctx = cfg.getContext();
         String configuration = cfg.getName();
         String path = cfg.getPath().toString();
@@ -2025,7 +2117,7 @@ public class FileSystemsTest {
         boolean canRead = cfg.canRead();
         boolean canWrite = cfg.canWrite();
         AbstractExecutableTestLanguage.evalTestLanguage(ctx, TestSetAttributeLanguage.class, "", configuration, path, usePublicFile, canRead, canWrite, supportsUnixAttributes(),
-                        supportsSetLastAccessTime());
+                        supportsSetLastAccessTime(), supportsSetCreationTime());
     }
 
     @Registration
@@ -2040,6 +2132,7 @@ public class FileSystemsTest {
             boolean canWrite = (boolean) contextArguments[4];
             boolean supportsUnixAttributes = (boolean) contextArguments[5];
             boolean supportsSetLastAccessTime = (boolean) contextArguments[6];
+            boolean supportsSetCreationTime = (boolean) contextArguments[7];
             TruffleFile root = resolve(env, usePublicFile, path);
             try {
                 TruffleFile file = root.resolve(FILE_CHANGE_ATTRS);
@@ -2048,14 +2141,18 @@ public class FileSystemsTest {
                 Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canWrite);
                 Assert.assertEquals(time, file.getAttribute(TruffleFile.LAST_MODIFIED_TIME));
                 Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+                file.setAttribute(TruffleFile.LAST_ACCESS_TIME, time);
+                FileTime lastAccessTime = file.getAttribute(TruffleFile.LAST_ACCESS_TIME);
                 // Workaround for issue JDK-8298187: The file last access time does not work on
                 // JDK-20 on macOS with the hfs file system.
                 if (supportsSetLastAccessTime) {
-                    file.setAttribute(TruffleFile.LAST_ACCESS_TIME, time);
-                    Assert.assertEquals(time, file.getAttribute(TruffleFile.LAST_ACCESS_TIME));
+                    Assert.assertEquals(time, lastAccessTime);
                 }
                 file.setAttribute(TruffleFile.CREATION_TIME, time);
-                Assert.assertEquals(time, file.getAttribute(TruffleFile.CREATION_TIME));
+                FileTime creationTime = file.getAttribute(TruffleFile.CREATION_TIME);
+                if (supportsSetCreationTime) {
+                    Assert.assertEquals(time, creationTime);
+                }
                 file.setAttribute(TruffleFile.UNIX_PERMISSIONS, EnumSet.of(PosixFilePermission.OWNER_READ));
                 Assert.assertEquals(EnumSet.of(PosixFilePermission.OWNER_READ), file.getAttribute(TruffleFile.UNIX_PERMISSIONS));
                 file.setAttribute(TruffleFile.UNIX_PERMISSIONS, EnumSet.of(PosixFilePermission.OWNER_READ));
@@ -2085,6 +2182,17 @@ public class FileSystemsTest {
             return !Files.exists(unwrappedPath) || !"hfs".equals(Files.getFileStore(unwrappedPath).type());
         }
         return true;
+    }
+
+    /**
+     * Returns {@code true} if the operating system supports file creation time modification. Note:
+     * Posix does not support setting a file's creation time directly. MacOS and BSD Unix, however,
+     * provide an additional system call {@code fsetattrlist} utilized by Java NIO to set the
+     * creation time. On Linux, the Posix functions {@code utimes}, {@code futimens}, or
+     * {@code utimensat} are employed, allowing modification only of access and modification times.
+     */
+    private static boolean supportsSetCreationTime() {
+        return OSUtils.isWindows() || OSUtils.getCurrent() == OSUtils.OS.Darwin;
     }
 
     @Test
@@ -2604,6 +2712,62 @@ public class FileSystemsTest {
         }
     }
 
+    @Test
+    public void testGetFileStoreInfo() {
+        Context ctx = cfg.getContext();
+        String configuration = cfg.getName();
+        String path = cfg.getPath().toString();
+        boolean usePublicFile = cfg.usePublicFile;
+        boolean canRead = cfg.canReadFileStoreInfo();
+        AbstractExecutableTestLanguage.evalTestLanguage(ctx, TestGetFileStoreInfoLanguage.class, "", configuration, path, usePublicFile, canRead);
+    }
+
+    @Registration
+    public static final class TestGetFileStoreInfoLanguage extends AbstractExecutableTestLanguage {
+
+        @Override
+        @TruffleBoundary
+        protected Object execute(RootNode node, Env env, Object[] contextArguments, Object[] frameArguments) throws Exception {
+            String configurationName = (String) contextArguments[0];
+            String path = (String) contextArguments[1];
+            boolean usePublicFile = (boolean) contextArguments[2];
+            boolean canRead = (boolean) contextArguments[3];
+            TruffleFile file = resolve(env, usePublicFile, path, FOLDER_EXISTING, FILE_EXISTING);
+            FileStoreInfo fsInfo = file.getFileStoreInfo();
+            try {
+                fsInfo.getTotalSpace();
+                Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            }
+            try {
+                fsInfo.getUnallocatedSpace();
+                Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            }
+            try {
+                fsInfo.getUsableSpace();
+                Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            }
+            try {
+                fsInfo.getBlockSize();
+                Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            }
+            try {
+                fsInfo.isReadOnly();
+                Assert.assertTrue(formatErrorMessage("Expected SecurityException", configurationName, path), canRead);
+            } catch (SecurityException se) {
+                Assert.assertFalse(formatErrorMessage("Unexpected SecurityException", configurationName, path), canRead);
+            }
+            return null;
+        }
+    }
+
     static TruffleFile resolve(Env env, boolean usePublicFile, String path, String... paths) {
         TruffleFile file;
         if (usePublicFile) {
@@ -2704,7 +2868,9 @@ public class FileSystemsTest {
         private final boolean writableFileSystem;
         private final boolean allowsUserDir;
         private final boolean allowsAbsolutePath;
+        private final boolean allowsFileStoreInfo;
         private final boolean usePublicFile;
+        private final Engine engine;
 
         Configuration(
                         final String name,
@@ -2728,11 +2894,11 @@ public class FileSystemsTest {
                         final boolean readableFileSystem,
                         final boolean writableFileSystem,
                         final boolean allowsUserDir) {
-            this(name, context, path, userDir, fileSystem, internalFileSystem, readableFileSystem, writableFileSystem, allowsUserDir, allowsUserDir, true);
+            this(name, context, path, userDir, fileSystem, internalFileSystem, readableFileSystem, writableFileSystem, allowsUserDir, allowsUserDir, readableFileSystem, true, null);
         }
 
         Configuration(String name, Context context, Path path, Path userDir, FileSystem fileSystem, boolean internalFileSystem, boolean readableFileSystem,
-                        boolean writableFileSystem, boolean allowsUserDir, boolean allowsAbsolutePath, boolean usePublicFile) {
+                        boolean writableFileSystem, boolean allowsUserDir, boolean allowsAbsolutePath, boolean allowsFileStoreInfo, boolean usePublicFile, Engine engine) {
             Objects.requireNonNull(name, "Name must be non null.");
             Objects.requireNonNull(context, "Context must be non null.");
             Objects.requireNonNull(path, "Path must be non null.");
@@ -2748,7 +2914,9 @@ public class FileSystemsTest {
             this.writableFileSystem = writableFileSystem;
             this.allowsUserDir = allowsUserDir;
             this.allowsAbsolutePath = allowsAbsolutePath;
+            this.allowsFileStoreInfo = allowsFileStoreInfo;
             this.usePublicFile = usePublicFile;
+            this.engine = engine;
         }
 
         String getName() {
@@ -2784,6 +2952,14 @@ public class FileSystemsTest {
          */
         boolean canRead() {
             return readableFileSystem;
+        }
+
+        /**
+         * Returns true if the test configuration allows reading of file store info, such as free
+         * disk space.
+         */
+        boolean canReadFileStoreInfo() {
+            return allowsFileStoreInfo;
         }
 
         /**
@@ -2827,6 +3003,9 @@ public class FileSystemsTest {
         public void close() throws IOException {
             try {
                 ctx.close();
+                if (engine != null) {
+                    engine.close();
+                }
             } finally {
                 deleteRecursively(path, fileSystem);
             }
@@ -2940,10 +3119,9 @@ public class FileSystemsTest {
      *
      * @param ctx the context to set the cwd for
      * @param cwd the new current working directory
-     * @param langHome language home to set
      */
-    private static void setCwd(Context ctx, Path cwd, Path langHome) {
-        AbstractExecutableTestLanguage.evalTestLanguage(ctx, SetCurrentWorkingDirectoryLanguage.class, "", cwd.toString(), langHome != null ? langHome.toString() : "");
+    private static void setCwd(Context ctx, Path cwd) {
+        AbstractExecutableTestLanguage.evalTestLanguage(ctx, SetCurrentWorkingDirectoryLanguage.class, "", cwd.toString());
     }
 
     @Registration
@@ -2952,33 +3130,52 @@ public class FileSystemsTest {
         @TruffleBoundary
         protected Object execute(RootNode node, Env env, Object[] contextArguments, Object[] frameArguments) throws Exception {
             String currentWorkingDirectory = (String) contextArguments[0];
-            String langHome = (String) contextArguments[1];
-            if (!langHome.isEmpty()) {
-                String languageId = TestUtils.getDefaultLanguageId(getClass());
-                System.setProperty("org.graalvm.language." + languageId + ".home", langHome);
-                resetLanguageHomes();
-            }
             env.setCurrentWorkingDirectory(env.getInternalTruffleFile(currentWorkingDirectory));
             return null;
         }
     }
 
+    static void markAsLanguageHome(Engine engine, Class<? extends TruffleLanguage<?>> language, Path languageHome) {
+        try (Context ctx = Context.newBuilder().engine(engine).build()) {
+            String id = TestUtils.getDefaultLanguageId(language);
+            String home = languageHome.toString();
+            // Set language home in isolate
+            AbstractExecutableTestLanguage.evalTestLanguage(ctx, MarkAsLanguageHomeLanguage.class, "", id, home);
+            // Set language home in host
+            MarkAsLanguageHomeLanguage.markAsLanguageHome(id, home);
+        }
+    }
+
+    @Registration
+    public static final class MarkAsLanguageHomeLanguage extends AbstractExecutableTestLanguage {
+        @Override
+        @TruffleBoundary
+        protected Object execute(RootNode node, Env env, Object[] contextArguments, Object[] frameArguments) throws Exception {
+            String languageId = (String) contextArguments[0];
+            String languageHome = (String) contextArguments[1];
+            markAsLanguageHome(languageId, languageHome);
+            return null;
+        }
+
+        static void markAsLanguageHome(String languageId, String languageHome) {
+            System.setProperty("org.graalvm.language." + languageId + ".home", languageHome);
+            resetLanguageHomes();
+        }
+    }
+
     private static FileSystem createPreInitializeContextFileSystem() throws ReflectiveOperationException {
         Class<? extends FileSystem> clazz = Class.forName("com.oracle.truffle.polyglot.FileSystems$PreInitializeContextFileSystem").asSubclass(FileSystem.class);
-        Constructor<? extends FileSystem> init = clazz.getDeclaredConstructor();
+        Constructor<? extends FileSystem> init = clazz.getDeclaredConstructor(String.class);
         ReflectionUtils.setAccessible(init, true);
-        return init.newInstance();
+        return init.newInstance(System.getProperty("java.io.tmpdir"));
     }
 
     private static void switchToImageExecutionTime(FileSystem fileSystem, Path cwd) throws ReflectiveOperationException {
         String workDir = cwd.toString();
-        Class<? extends FileSystem> clazz = Class.forName("com.oracle.truffle.polyglot.FileSystems$PreInitializeContextFileSystem").asSubclass(FileSystem.class);
-        Method preInitClose = clazz.getDeclaredMethod("onPreInitializeContextEnd");
-        ReflectionUtils.setAccessible(preInitClose, true);
-        preInitClose.invoke(fileSystem);
-        Method patchStart = clazz.getDeclaredMethod("onLoadPreinitializedContext", FileSystem.class);
-        ReflectionUtils.setAccessible(patchStart, true);
-        patchStart.invoke(fileSystem, newFullIOFileSystem(Paths.get(workDir)));
+        Class<?> internalResourceRootsClass = Class.forName("com.oracle.truffle.polyglot.InternalResourceRoots");
+        Object roots = ReflectionUtils.invokeStatic(internalResourceRootsClass, "getInstance");
+        ReflectionUtils.invoke(fileSystem, "onPreInitializeContextEnd", new Class<?>[]{internalResourceRootsClass, Map.class}, roots, Map.of());
+        ReflectionUtils.invoke(fileSystem, "onLoadPreinitializedContext", new Class<?>[]{FileSystem.class}, newFullIOFileSystem(Paths.get(workDir)));
     }
 
     static FileSystem newFullIOFileSystem(final Path currentWorkingDirectory) {
@@ -3105,6 +3302,31 @@ public class FileSystemsTest {
         public boolean isSameFile(Path path1, Path path2, LinkOption... options) throws IOException {
             return delegate.isSameFile(path1, path2, options);
         }
+
+        @Override
+        public long getFileStoreTotalSpace(Path path) throws IOException {
+            return delegate.getFileStoreTotalSpace(path);
+        }
+
+        @Override
+        public long getFileStoreUnallocatedSpace(Path path) throws IOException {
+            return delegate.getFileStoreUnallocatedSpace(path);
+        }
+
+        @Override
+        public long getFileStoreUsableSpace(Path path) throws IOException {
+            return delegate.getFileStoreUsableSpace(path);
+        }
+
+        @Override
+        public long getFileStoreBlockSize(Path path) throws IOException {
+            return delegate.getFileStoreBlockSize(path);
+        }
+
+        @Override
+        public boolean isFileStoreReadOnly(Path path) throws IOException {
+            return delegate.isFileStoreReadOnly(path);
+        }
     }
 
     private static final class RestrictedFileSystem extends ForwardingFileSystem {
@@ -3205,6 +3427,36 @@ public class FileSystemsTest {
         public void setAttribute(Path path, String attribute, Object value, LinkOption... options) throws IOException {
             checkWrite(path);
             super.setAttribute(path, attribute, value, options);
+        }
+
+        @Override
+        public long getFileStoreTotalSpace(Path path) throws IOException {
+            checkRead(path);
+            return super.getFileStoreTotalSpace(path);
+        }
+
+        @Override
+        public long getFileStoreUnallocatedSpace(Path path) throws IOException {
+            checkRead(path);
+            return super.getFileStoreUnallocatedSpace(path);
+        }
+
+        @Override
+        public long getFileStoreUsableSpace(Path path) throws IOException {
+            checkRead(path);
+            return super.getFileStoreUsableSpace(path);
+        }
+
+        @Override
+        public long getFileStoreBlockSize(Path path) throws IOException {
+            checkRead(path);
+            return super.getFileStoreBlockSize(path);
+        }
+
+        @Override
+        public boolean isFileStoreReadOnly(Path path) throws IOException {
+            checkRead(path);
+            return super.isFileStoreReadOnly(path);
         }
 
         private void checkRead(Path path) {
